First commited as before_110796_rev1