@@ -1,6 +1,6 @@
 /*
- * Copyright (C) 2005, 2015 db4objects Inc.  http://www.db4o.com
- *
+ * Copyright (C) 2005, 2007 db4objects Inc.  http://www.db4o.com
+ * 
  * All rights reserved. This program and the accompanying materials
  * are made available under the terms of the Eclipse Public License v1.0
  * which accompanies this distribution, and is available at
@@ -22,14 +22,18 @@ public class StringToCharacterConverter implements IConverter {
 	private final boolean primitiveTarget;
 
 	/**
-	 *
+	 * 
 	 * @param primitiveTarget
 	 */
 	public StringToCharacterConverter(boolean primitiveTarget) {
 		this.primitiveTarget = primitiveTarget;
 	}
 
-	@Override
+	/*
+	 * (non-Javadoc)
+	 * 
+	 * @see org.eclipse.jface.binding.converter.IConverter#convert(java.lang.Object)
+	 */
 	public Object convert(Object source) {
 		if (source != null && !(source instanceof String))
 			throw new IllegalArgumentException(
@@ -49,7 +53,7 @@ public class StringToCharacterConverter implements IConverter {
 					"String2Character: string too long: " + s); //$NON-NLS-1$
 
 		try {
-			result = Character.valueOf(s.charAt(0));
+			result = new Character(s.charAt(0));
 		} catch (Exception e) {
 			throw new IllegalArgumentException(
 					"String2Character: " + e.getMessage() + ": " + s); //$NON-NLS-1$ //$NON-NLS-2$
@@ -58,12 +62,10 @@ public class StringToCharacterConverter implements IConverter {
 		return result;
 	}
 
-	@Override
 	public Object getFromType() {
 		return String.class;
 	}
 
-	@Override
 	public Object getToType() {
 		return primitiveTarget ? Character.TYPE : Character.class;
 	}
