@@ -1,5 +1,5 @@
 /*******************************************************************************
- * Copyright (c) 2003, 2015 IBM Corporation and others.
+ * Copyright (c) 2003, 2009 IBM Corporation and others.
  * All rights reserved. This program and the accompanying materials
  * are made available under the terms of the Eclipse Public License v1.0
  * which accompanies this distribution, and is available at
@@ -32,7 +32,7 @@ import org.eclipse.swt.widgets.Menu;
  * <p>
  * This class may be instantiated; it may also be subclassed.
  * </p>
- *
+ * 
  * @since 3.0
  */
 public class CoolBarManager extends ContributionManager implements
@@ -46,7 +46,7 @@ public class CoolBarManager extends ContributionManager implements
     /**
      * The original creation order of the contribution items.
      */
-    private ArrayList<IContributionItem> cbItemsCreationOrder = new ArrayList<>();
+    private ArrayList cbItemsCreationOrder = new ArrayList();
 
     /**
      * MenuManager for cool bar pop-up menu, or null if none.
@@ -76,7 +76,7 @@ public class CoolBarManager extends ContributionManager implements
      * Creates a cool bar manager for an existing cool bar control. This
      * manager becomes responsible for the control, and will dispose of it when
      * the manager is disposed.
-     *
+     * 
      * @param coolBar
      *            the cool bar control
      */
@@ -90,7 +90,7 @@ public class CoolBarManager extends ContributionManager implements
     /**
      * Creates a cool bar manager with the given SWT style. Calling <code>createControl</code>
      * will create the cool bar control.
-     *
+     * 
      * @param style
      *            the cool bar item style; see
      *            {@link org.eclipse.swt.widgets.CoolBar CoolBar}for for valid
@@ -100,8 +100,12 @@ public class CoolBarManager extends ContributionManager implements
         itemStyle = style;
     }
 
-    @Override
-	public void add(IToolBarManager toolBarManager) {
+    /*
+     * (non-Javadoc)
+     * 
+     * @see org.eclipse.jface.action.ICoolBarManager#add(org.eclipse.jface.action.IToolBarManager)
+     */
+    public void add(IToolBarManager toolBarManager) {
         Assert.isNotNull(toolBarManager);
         super.add(new ToolBarContributionItem(toolBarManager));
     }
@@ -109,29 +113,29 @@ public class CoolBarManager extends ContributionManager implements
     /**
      * Collapses consecutive separators and removes a separator from the
      * beginning and end of the list.
-     *
+     * 
      * @param contributionList
      *            the list of contributions; must not be <code>null</code>.
      * @return The contribution list provided with extraneous separators
      *         removed; this value is never <code>null</code>, but may be
      *         empty.
      */
-    private ArrayList<IContributionItem> adjustContributionList(ArrayList<IContributionItem> contributionList) {
+    private ArrayList adjustContributionList(ArrayList contributionList) {
         IContributionItem item;
         // Fist remove a separator if it is the first element of the list
         if (contributionList.size() != 0) {
-            item = contributionList.get(0);
+            item = (IContributionItem) contributionList.get(0);
             if (item.isSeparator()) {
                 contributionList.remove(0);
             }
 
-            ListIterator<IContributionItem> iterator = contributionList.listIterator();
+            ListIterator iterator = contributionList.listIterator();
             // collapse consecutive separators
             while (iterator.hasNext()) {
-                item = iterator.next();
+                item = (IContributionItem) iterator.next();
                 if (item.isSeparator()) {
                     while (iterator.hasNext()) {
-                        item = iterator.next();
+                        item = (IContributionItem) iterator.next();
                         if (item.isSeparator()) {
                             iterator.remove();
                         } else {
@@ -143,7 +147,7 @@ public class CoolBarManager extends ContributionManager implements
             }
             if (contributionList.size() != 0) {
 	            // Now check last element to see if there is a separator
-	            item = contributionList.get(contributionList
+	            item = (IContributionItem) contributionList.get(contributionList
 	                    .size() - 1);
 	            if (item.isSeparator()) {
 	                contributionList.remove(contributionList.size() - 1);
@@ -154,8 +158,10 @@ public class CoolBarManager extends ContributionManager implements
 
     }
 
-    @Override
-	protected boolean allowItem(IContributionItem itemToAdd) {
+    /* (non-Javadoc)
+     * @see org.eclipse.jface.action.ContributionManager#checkDuplication(org.eclipse.jface.action.IContributionItem)
+     */
+    protected boolean allowItem(IContributionItem itemToAdd) {
         /* We will allow as many null entries as they like, though there should
          * be none.
          */
@@ -172,7 +178,9 @@ public class CoolBarManager extends ContributionManager implements
 
         // Cycle through the current list looking for duplicates.
         IContributionItem[] currentItems = getItems();
-        for (IContributionItem currentItem : currentItems) {
+        for (int i = 0; i < currentItems.length; i++) {
+            IContributionItem currentItem = currentItems[i];
+
             // We ignore null entries.
             if (currentItem == null) {
                 continue;
@@ -180,7 +188,7 @@ public class CoolBarManager extends ContributionManager implements
 
             String secondId = currentItem.getId();
             if (firstId.equals(secondId)) {
-                if (Policy.TRACE_TOOLBAR) {
+                if (Policy.TRACE_TOOLBAR) { 
                     System.out.println("Trying to add a duplicate item."); //$NON-NLS-1$
                     new Exception().printStackTrace(System.out);
                     System.out.println("DONE --------------------------"); //$NON-NLS-1$
@@ -196,14 +204,14 @@ public class CoolBarManager extends ContributionManager implements
      * Positions the list iterator to the end of all the separators. Calling
      * <code>next()</code> the iterator should return the immediate object
      * following the last separator.
-     *
+     * 
      * @param iterator
      *            the list iterator.
      */
-    private void collapseSeparators(ListIterator<IContributionItem> iterator) {
+    private void collapseSeparators(ListIterator iterator) {
 
         while (iterator.hasNext()) {
-            IContributionItem item = iterator.next();
+            IContributionItem item = (IContributionItem) iterator.next();
             if (!item.isSeparator()) {
                 iterator.previous();
                 return;
@@ -214,7 +222,7 @@ public class CoolBarManager extends ContributionManager implements
     /**
      * Returns whether the cool bar control has been created and not yet
      * disposed.
-     *
+     * 
      * @return <code>true</code> if the control has been created and not yet
      *         disposed, <code>false</code> otherwise
      */
@@ -225,7 +233,7 @@ public class CoolBarManager extends ContributionManager implements
     /**
      * Creates and returns this manager's cool bar control. Does not create a
      * new control if one already exists.
-     *
+     * 
      * @param parent
      *            the parent control
      * @return the cool bar control
@@ -254,12 +262,12 @@ public class CoolBarManager extends ContributionManager implements
             coolBar = null;
         }
         IContributionItem[] items = getItems();
-        for (IContributionItem item : items) {
+        for (int i = 0; i < items.length; i++) {
             // Disposes of the contribution item.
             // If Contribution Item is a toolbar then it will dispose of
             // all the nested
             // contribution items.
-            item.dispose();
+            items[i].dispose();
         }
         // If a context menu existed then dispose of it.
         if (contextMenuManager != null) {
@@ -271,7 +279,7 @@ public class CoolBarManager extends ContributionManager implements
 
     /**
      * Disposes the given cool item.
-     *
+     * 
      * @param item
      *            the cool item to dispose
      */
@@ -294,22 +302,23 @@ public class CoolBarManager extends ContributionManager implements
 
     /**
      * Finds the cool item associated with the given contribution item.
-     *
+     * 
      * @param item
      *            the contribution item
      * @return the associated cool item, or <code>null</code> if not found
      */
     private CoolItem findCoolItem(IContributionItem item) {
-        CoolItem[] coolItems = (coolBar == null) ? null : coolBar.getItems();
+        CoolItem[] coolItems = (coolBar == null) ? null : coolBar.getItems(); 
         return findCoolItem(coolItems, item);
     }
-
+    
     private CoolItem findCoolItem(CoolItem[] items, IContributionItem item) {
         if (items == null) {
 			return null;
 		}
 
-        for (CoolItem coolItem : items) {
+        for (int i = 0; i < items.length; i++) {
+            CoolItem coolItem = items[i];
             IContributionItem data = (IContributionItem) coolItem.getData();
             if (data != null && data.equals(item)) {
 				return coolItem;
@@ -323,7 +332,7 @@ public class CoolBarManager extends ContributionManager implements
      * include at least one entry and the first entry will always be zero.
      * CoolBar.getWrapIndices() is inconsistent in whether or not it returns an
      * index for the first row.
-     *
+     * 
      * @param wraps
      *            the wrap indicies from the cool bar widget
      * @return the adjusted wrap indicies.
@@ -349,7 +358,7 @@ public class CoolBarManager extends ContributionManager implements
     /**
      * Returns the control of the Menu Manager. If the menu manager does not
      * have a control then one is created.
-     *
+     * 
      * @return menu control associated with manager, or null if none
      */
     private Menu getContextMenuControl() {
@@ -363,14 +372,18 @@ public class CoolBarManager extends ContributionManager implements
         return null;
     }
 
-    @Override
-	public IMenuManager getContextMenuManager() {
+    /*
+     * (non-Javadoc)
+     * 
+     * @see org.eclipse.jface.action.ICoolBarManager#isLayoutLocked()
+     */
+    public IMenuManager getContextMenuManager() {
         return contextMenuManager;
     }
 
     /**
      * Returns the cool bar control for this manager.
-     *
+     * 
      * @return the cool bar control, or <code>null</code> if none
      */
     public CoolBar getControl() {
@@ -379,20 +392,24 @@ public class CoolBarManager extends ContributionManager implements
 
     /**
      * Returns an array list of all the contribution items in the manager.
-     *
+     * 
      * @return an array list of contribution items.
      */
-    private ArrayList<IContributionItem> getItemList() {
+    private ArrayList getItemList() {
         IContributionItem[] cbItems = getItems();
-        ArrayList<IContributionItem> list = new ArrayList<>(cbItems.length);
-        for (IContributionItem cbItem : cbItems) {
-            list.add(cbItem);
+        ArrayList list = new ArrayList(cbItems.length);
+        for (int i = 0; i < cbItems.length; i++) {
+            list.add(cbItems[i]);
         }
         return list;
     }
 
-    @Override
-	public boolean getLockLayout() {
+    /*
+     * (non-Javadoc)
+     * 
+     * @see org.eclipse.jface.action.ICoolBarManager#isLayoutLocked()
+     */
+    public boolean getLockLayout() {
         if (!coolBarExist()) {
             return false;
         }
@@ -401,7 +418,7 @@ public class CoolBarManager extends ContributionManager implements
 
     /**
      * Returns the number of rows that should be displayed visually.
-     *
+     * 
      * @param items
      *            the array of contributin items
      * @return the number of rows
@@ -422,26 +439,29 @@ public class CoolBarManager extends ContributionManager implements
         return numRows;
     }
 
-    @Override
-	public int getStyle() {
+    /*
+     * (non-Javadoc)
+     * 
+     * @see org.eclipse.jface.action.ICoolBarManager#getStyle()
+     */
+    public int getStyle() {
         return itemStyle;
     }
 
     /**
      * Subclasses may extend this <code>ContributionManager</code> method,
      * but must call <code>super.itemAdded</code>.
-     *
+     * 
      * @see org.eclipse.jface.action.ContributionManager#itemAdded(org.eclipse.jface.action.IContributionItem)
      */
-    @Override
-	protected void itemAdded(IContributionItem item) {
+    protected void itemAdded(IContributionItem item) {
         Assert.isNotNull(item);
         super.itemAdded(item);
         int insertedAt = indexOf(item);
         boolean replaced = false;
         final int size = cbItemsCreationOrder.size();
         for (int i = 0; i < size; i++) {
-            IContributionItem created = cbItemsCreationOrder
+            IContributionItem created = (IContributionItem) cbItemsCreationOrder
                     .get(i);
             if (created.getId() != null && created.getId().equals(item.getId())) {
                 cbItemsCreationOrder.set(i, item);
@@ -459,11 +479,10 @@ public class CoolBarManager extends ContributionManager implements
     /**
      * Subclasses may extend this <code>ContributionManager</code> method,
      * but must call <code>super.itemRemoved</code>.
-     *
+     * 
      * @see org.eclipse.jface.action.ContributionManager#itemRemoved(org.eclipse.jface.action.IContributionItem)
      */
-    @Override
-	protected void itemRemoved(IContributionItem item) {
+    protected void itemRemoved(IContributionItem item) {
         Assert.isNotNull(item);
         super.itemRemoved(item);
         CoolItem coolItem = findCoolItem(item);
@@ -476,29 +495,29 @@ public class CoolBarManager extends ContributionManager implements
      * Positions the list iterator to the starting of the next row. By calling
      * next on the returned iterator, it will return the first element of the
      * next row.
-     *
+     * 
      * @param iterator
      *            the list iterator of contribution items
      * @param ignoreCurrentItem
      *            Whether the current item in the iterator should be considered
      *            (as well as subsequent items).
      */
-    private void nextRow(ListIterator<IContributionItem> iterator, boolean ignoreCurrentItem) {
+    private void nextRow(ListIterator iterator, boolean ignoreCurrentItem) {
 
         IContributionItem currentElement = null;
         if (!ignoreCurrentItem && iterator.hasPrevious()) {
-            currentElement = iterator.previous();
+            currentElement = (IContributionItem) iterator.previous();
             iterator.next();
         }
 
         if ((currentElement != null) && (currentElement.isSeparator())) {
             collapseSeparators(iterator);
             return;
-        }
+        } 
 
         //Find next separator
         while (iterator.hasNext()) {
-            IContributionItem item = iterator.next();
+            IContributionItem item = (IContributionItem) iterator.next();
             if (item.isSeparator()) {
                 // we we find a separator, collapse any consecutive
                 // separators
@@ -544,7 +563,7 @@ public class CoolBarManager extends ContributionManager implements
         }
 
         // Retreives the list of contribution items as an array list
-        ArrayList<IContributionItem> contributionList = getItemList();
+        ArrayList contributionList = getItemList();
 
         // Check the size of the list
         if (contributionList.size() == 0) {
@@ -562,7 +581,7 @@ public class CoolBarManager extends ContributionManager implements
         // Traverse through all cool items in the coolbar add them to a new
         // data structure
         // in the correct order
-        ArrayList<IContributionItem> displayedItems = new ArrayList<>(coolBar.getItemCount());
+        ArrayList displayedItems = new ArrayList(coolBar.getItemCount());
         for (int i = 0; i < coolItems.length; i++) {
             CoolItem coolItem = coolItems[i];
             if (coolItem.getData() instanceof IContributionItem) {
@@ -581,17 +600,17 @@ public class CoolBarManager extends ContributionManager implements
         }
 
         // Determine which rows are invisible
-        ArrayList<Integer> existingVisibleRows = new ArrayList<>(4);
-        ListIterator<IContributionItem> rowIterator = contributionList.listIterator();
+        ArrayList existingVisibleRows = new ArrayList(4);
+        ListIterator rowIterator = contributionList.listIterator();
         collapseSeparators(rowIterator);
         int numRow = 0;
         while (rowIterator.hasNext()) {
             // Scan row
             while (rowIterator.hasNext()) {
-                IContributionItem cbItem = rowIterator
+                IContributionItem cbItem = (IContributionItem) rowIterator
                         .next();
                 if (displayedItems.contains(cbItem)) {
-					existingVisibleRows.add(Integer.valueOf(numRow));
+                    existingVisibleRows.add(new Integer(numRow));
                     break;
                 }
                 if (cbItem.isSeparator()) {
@@ -602,34 +621,34 @@ public class CoolBarManager extends ContributionManager implements
             numRow++;
         }
 
-        Iterator<Integer> existingRows = existingVisibleRows.iterator();
+        Iterator existingRows = existingVisibleRows.iterator();
         // Adjust row number to the first visible
         if (existingRows.hasNext()) {
-            row = existingRows.next().intValue();
+            row = ((Integer) existingRows.next()).intValue();
         }
 
-        HashMap<IContributionItem, Integer> itemLocation = new HashMap<>();
-        for (ListIterator<IContributionItem> locationIterator = displayedItems.listIterator(); locationIterator
+        HashMap itemLocation = new HashMap();
+        for (ListIterator locationIterator = displayedItems.listIterator(); locationIterator
                 .hasNext();) {
-            IContributionItem item = locationIterator
+            IContributionItem item = (IContributionItem) locationIterator
                     .next();
             if (item.isSeparator()) {
                 if (existingRows.hasNext()) {
-                    Integer value = existingRows.next();
+                    Integer value = (Integer) existingRows.next();
                     row = value.intValue();
                 } else {
                     row++;
                 }
             } else {
-				itemLocation.put(item, Integer.valueOf(row));
+                itemLocation.put(item, new Integer(row));
             }
 
         }
 
         // Insert the contribution items in their correct location
-        for (ListIterator<IContributionItem> iterator = displayedItems.listIterator(); iterator
+        for (ListIterator iterator = displayedItems.listIterator(); iterator
                 .hasNext();) {
-            IContributionItem cbItem = iterator.next();
+            IContributionItem cbItem = (IContributionItem) iterator.next();
             if (cbItem.isSeparator()) {
                 coolItemIndex = 0;
             } else {
@@ -643,7 +662,7 @@ public class CoolBarManager extends ContributionManager implements
         if (contributionList.size() != 0) {
             IContributionItem[] array = new IContributionItem[contributionList
                     .size() - 1];
-            array = contributionList.toArray(array);
+            array = (IContributionItem[]) contributionList.toArray(array);
             internalSetItems(array);
         }
 
@@ -651,7 +670,7 @@ public class CoolBarManager extends ContributionManager implements
 
     /**
      * Relocates the given contribution item to the specified index.
-     *
+     * 
      * @param cbItem
      *            the conribution item to relocate
      * @param index
@@ -661,19 +680,19 @@ public class CoolBarManager extends ContributionManager implements
      * @param itemLocation
      */
     private void relocate(IContributionItem cbItem, int index,
-            ArrayList<IContributionItem> contributionList, HashMap<IContributionItem, Integer> itemLocation) {
+            ArrayList contributionList, HashMap itemLocation) {
 
-        if ((itemLocation.get(cbItem) == null)) {
+        if (!(itemLocation.get(cbItem) instanceof Integer)) {
 			return;
 		}
-        int targetRow = itemLocation.get(cbItem).intValue();
+        int targetRow = ((Integer) itemLocation.get(cbItem)).intValue();
 
         int cbInternalIndex = contributionList.indexOf(cbItem);
 
         //	by default add to end of list
         int insertAt = contributionList.size();
         // Find the row to place this item in.
-        ListIterator<IContributionItem> iterator = contributionList.listIterator();
+        ListIterator iterator = contributionList.listIterator();
         // bypass any separators at the begining
         collapseSeparators(iterator);
         int currentRow = -1;
@@ -687,9 +706,9 @@ public class CoolBarManager extends ContributionManager implements
                 // first check the position of the current element (item)
                 // then get the next element
                 while (iterator.hasNext()) {
-                    IContributionItem item = iterator
+                    IContributionItem item = (IContributionItem) iterator
                             .next();
-                    Integer itemRow = itemLocation.get(item);
+                    Integer itemRow = (Integer) itemLocation.get(item);
                     if (item.isSeparator()) {
 						break;
 					}
@@ -735,9 +754,9 @@ public class CoolBarManager extends ContributionManager implements
      * order is the order in which the contribution items where added.
      */
     public void resetItemOrder() {
-        for (ListIterator<IContributionItem> iterator = cbItemsCreationOrder.listIterator(); iterator
+        for (ListIterator iterator = cbItemsCreationOrder.listIterator(); iterator
                 .hasNext();) {
-            IContributionItem item = iterator.next();
+            IContributionItem item = (IContributionItem) iterator.next();
             // if its a user separator then do not include in original order.
             if ((item.getId() != null) && (item.getId().equals(USER_SEPARATOR))) {
                 iterator.remove();
@@ -749,8 +768,12 @@ public class CoolBarManager extends ContributionManager implements
         setItems(itemsToSet);
     }
 
-    @Override
-	public void setContextMenuManager(IMenuManager contextMenuManager) {
+    /*
+     * (non-Javadoc)
+     * 
+     * @see org.eclipse.jface.action.ICoolBarManager#setContextMenuManager(org.eclipse.jface.action.IMenuManager)
+     */
+    public void setContextMenuManager(IMenuManager contextMenuManager) {
         this.contextMenuManager = (MenuManager) contextMenuManager;
         if (coolBar != null) {
             coolBar.setMenu(getContextMenuControl());
@@ -760,15 +783,15 @@ public class CoolBarManager extends ContributionManager implements
     /**
      * Replaces the current items with the given items.
      * Forces an update.
-     *
+     * 
      * @param newItems the items with which to replace the current items
      */
     public void setItems(IContributionItem[] newItems) {
         // dispose of all the cool items on the cool bar manager
         if (coolBar != null) {
             CoolItem[] coolItems = coolBar.getItems();
-            for (CoolItem coolItem : coolItems) {
-                dispose(coolItem);
+            for (int i = 0; i < coolItems.length; i++) {
+                dispose(coolItems[i]);
             }
         }
         // Set the internal structure to this order
@@ -777,8 +800,12 @@ public class CoolBarManager extends ContributionManager implements
         update(true);
     }
 
-    @Override
-	public void setLockLayout(boolean value) {
+    /*
+     * (non-Javadoc)
+     * 
+     * @see org.eclipse.jface.action.ICoolBarManager#lockLayout(boolean)
+     */
+    public void setLockLayout(boolean value) {
         if (!coolBarExist()) {
             return;
         }
@@ -788,11 +815,10 @@ public class CoolBarManager extends ContributionManager implements
     /**
      * Subclasses may extend this <code>IContributionManager</code> method,
      * but must call <code>super.update</code>.
-     *
+     * 
      * @see org.eclipse.jface.action.IContributionManager#update(boolean)
      */
-    @Override
-	public void update(boolean force) {
+    public void update(boolean force) {
         if ((!isDirty() && !force) || (!coolBarExist())) {
             return;
         }
@@ -817,8 +843,9 @@ public class CoolBarManager extends ContributionManager implements
              * a cool bar.
              */
             final IContributionItem[] items = getItems();
-            final List<IContributionItem> visibleItems = new ArrayList<>(items.length);
-            for (final IContributionItem item : items) {
+            final List visibleItems = new ArrayList(items.length);
+            for (int i = 0; i < items.length; i++) {
+                final IContributionItem item = items[i];
                 if (isChildVisible(item)) {
                     visibleItems.add(item);
                 }
@@ -830,20 +857,20 @@ public class CoolBarManager extends ContributionManager implements
              * to be disposed. Dynamic items are also removed.
              */
             CoolItem[] coolItems = coolBar.getItems();
-            final ArrayList<CoolItem> coolItemsToRemove = new ArrayList<>(coolItems.length);
-            for (CoolItem coolItem : coolItems) {
-                final Object data = coolItem.getData();
+            final ArrayList coolItemsToRemove = new ArrayList(coolItems.length);
+            for (int i = 0; i < coolItems.length; i++) {
+                final Object data = coolItems[i].getData();
                 if ((data == null)
                         || (!visibleItems.contains(data))
                         || ((data instanceof IContributionItem) && ((IContributionItem) data)
                                 .isDynamic())) {
-                    coolItemsToRemove.add(coolItem);
+                    coolItemsToRemove.add(coolItems[i]);
                 }
             }
 
             // Dispose of any items in the list to be removed.
             for (int i = coolItemsToRemove.size() - 1; i >= 0; i--) {
-                CoolItem coolItem = coolItemsToRemove.get(i);
+                CoolItem coolItem = (CoolItem) coolItemsToRemove.get(i);
                 if (!coolItem.isDisposed()) {
                     Control control = coolItem.getControl();
                     if (control != null) {
@@ -860,9 +887,9 @@ public class CoolBarManager extends ContributionManager implements
             IContributionItem destinationItem;
             int sourceIndex = 0;
             int destinationIndex = 0;
-            final Iterator<IContributionItem> visibleItemItr = visibleItems.iterator();
+            final Iterator visibleItemItr = visibleItems.iterator();
             while (visibleItemItr.hasNext()) {
-                sourceItem = visibleItemItr.next();
+                sourceItem = (IContributionItem) visibleItemItr.next();
 
                 // Retrieve the corresponding contribution item from SWT's
                 // data.
@@ -926,7 +953,8 @@ public class CoolBarManager extends ContributionManager implements
             updateWrapIndices();
 
             // Update the sizes.
-            for (IContributionItem item : items) {
+            for (int i = 0; i < items.length; i++) {
+                IContributionItem item = items[i];
                 item.update(SIZE);
             }
 
@@ -953,7 +981,7 @@ public class CoolBarManager extends ContributionManager implements
         if (coolBar != null) {
             CoolItem[] items = coolBar.getItems();
             if (items != null) {
-                ArrayList<Control> children = new ArrayList<>(items.length);
+                ArrayList children = new ArrayList(items.length);
                 for (int i = 0; i < items.length; i++) {
                     if ((items[i].getControl() != null)
                             && (!items[i].getControl().isDisposed())) {
@@ -962,7 +990,7 @@ public class CoolBarManager extends ContributionManager implements
                 }
                 // Convert array
                 Control[] childrenArray = new Control[0];
-                childrenArray = children.toArray(childrenArray);
+                childrenArray = (Control[]) children.toArray(childrenArray);
 
                 if (childrenArray != null) {
                     coolBar.setTabList(childrenArray);
@@ -985,7 +1013,8 @@ public class CoolBarManager extends ContributionManager implements
         int j = 0;
         CoolItem[] coolItems = (coolBar == null) ? null : coolBar.getItems();
 
-		for (IContributionItem item : items) {
+        for (int i = 0; i < items.length; i++) {
+            IContributionItem item = items[i];
             CoolItem coolItem = findCoolItem(coolItems, item);
             if (item.isSeparator()) {
                 foundSeparator = true;
@@ -1020,17 +1049,17 @@ public class CoolBarManager extends ContributionManager implements
             coolBar.setWrapIndices(wrapIndices);
         }
     }
-
+    
 	private boolean isChildVisible(IContributionItem item) {
 		Boolean v;
-
+		
 		IContributionManagerOverrides overrides = getOverrides();
 		if(overrides == null) {
 			v = null;
 		} else {
-			v = getOverrides().getVisible(item);
+			v = getOverrides().getVisible(item); 
 		}
-
+		
 		if (v != null) {
 			return v.booleanValue();
 		}
