@@ -1,5 +1,5 @@
 /*******************************************************************************
- * Copyright (c) 2008, 2017 Freescale Semiconductor and others.
+ * Copyright (c) 2008, 2010 Freescale Semiconductor and others.
  * All rights reserved. This program and the accompanying materials
  * are made available under the terms of the Eclipse Public License v1.0
  * which accompanies this distribution, and is available at
@@ -8,9 +8,6 @@
  * Contributors:
  *     Serge Beauchamp (Freescale Semiconductor) - [252996] initial API and implementation
  *     IBM Corporation - ongoing implementation
- *     Lars Vogel <Lars.Vogel@gmail.com> - Bug 430694
- *     Mickael Istria (Red Hat Inc.) - Bug 486901
- *                                   - [Cleanup] Avoid useless string instances
  *******************************************************************************/
 package org.eclipse.ui.internal.ide.dialogs;
 
@@ -26,6 +23,7 @@ import java.text.DateFormat;
 import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.Calendar;
+import java.util.Comparator;
 import java.util.Date;
 import java.util.Iterator;
 import java.util.LinkedList;
@@ -63,8 +61,10 @@ import org.eclipse.jface.viewers.ColumnWeightData;
 import org.eclipse.jface.viewers.ComboBoxCellEditor;
 import org.eclipse.jface.viewers.ICellModifier;
 import org.eclipse.jface.viewers.ISelection;
+import org.eclipse.jface.viewers.ISelectionChangedListener;
 import org.eclipse.jface.viewers.IStructuredSelection;
 import org.eclipse.jface.viewers.ITreeContentProvider;
+import org.eclipse.jface.viewers.SelectionChangedEvent;
 import org.eclipse.jface.viewers.StructuredSelection;
 import org.eclipse.jface.viewers.StyledCellLabelProvider;
 import org.eclipse.jface.viewers.StyledString;
@@ -83,6 +83,10 @@ import org.eclipse.swt.dnd.DragSourceEvent;
 import org.eclipse.swt.dnd.DragSourceListener;
 import org.eclipse.swt.dnd.Transfer;
 import org.eclipse.swt.dnd.TransferData;
+import org.eclipse.swt.events.MenuDetectEvent;
+import org.eclipse.swt.events.MenuDetectListener;
+import org.eclipse.swt.events.ModifyEvent;
+import org.eclipse.swt.events.ModifyListener;
 import org.eclipse.swt.events.MouseEvent;
 import org.eclipse.swt.events.MouseListener;
 import org.eclipse.swt.events.SelectionAdapter;
@@ -154,42 +158,42 @@ public class ResourceFilterGroup {
 	private IContainer resource = nonExistantResource;
 
 	/**
-	 *
+	 * 
 	 */
 	public ResourceFilterGroup() {
 		ImageDescriptor fileIconDescriptor = AbstractUIPlugin
 		.imageDescriptorFromPlugin(IDEWorkbenchPlugin.IDE_WORKBENCH,
-				"$nl$/icons/full/obj16/fileType_filter.png"); //$NON-NLS-1$
+				"$nl$/icons/full/obj16/fileType_filter.gif"); //$NON-NLS-1$
 		if (fileIconDescriptor != null)
 			fileIcon = fileIconDescriptor.createImage();
-
+		
 		ImageDescriptor folderIconDescriptor = AbstractUIPlugin.imageDescriptorFromPlugin(
 				IDEWorkbenchPlugin.IDE_WORKBENCH,
-				"$nl$/icons/full/obj16/folderType_filter.png"); //$NON-NLS-1$
+				"$nl$/icons/full/obj16/folderType_filter.gif"); //$NON-NLS-1$
 		if (folderIconDescriptor != null)
 			folderIcon = folderIconDescriptor.createImage();
-
+		
 		ImageDescriptor fileFolderIconDescriptor = AbstractUIPlugin.imageDescriptorFromPlugin(
 				IDEWorkbenchPlugin.IDE_WORKBENCH,
-				"$nl$/icons/full/obj16/fileFolderType_filter.png"); //$NON-NLS-1$
+				"$nl$/icons/full/obj16/fileFolderType_filter.gif"); //$NON-NLS-1$
 		if (fileFolderIconDescriptor != null)
 			fileFolderIcon = fileFolderIconDescriptor.createImage();
-
+		
 		ImageDescriptor descriptor = AbstractUIPlugin.imageDescriptorFromPlugin(
 				IDEWorkbenchPlugin.IDE_WORKBENCH,
-				"$nl$/icons/full/obj16/includeMode_filter.png"); //$NON-NLS-1$
+				"$nl$/icons/full/obj16/includeMode_filter.gif"); //$NON-NLS-1$
 		if (descriptor != null)
 			includeIcon = descriptor.createImage();
-
+		
 		descriptor = AbstractUIPlugin.imageDescriptorFromPlugin(
 				IDEWorkbenchPlugin.IDE_WORKBENCH,
-				"$nl$/icons/full/obj16/excludeMode_filter.png"); //$NON-NLS-1$
+				"$nl$/icons/full/obj16/excludeMode_filter.gif"); //$NON-NLS-1$
 		if (descriptor != null)
 			excludeIcon = descriptor.createImage();
-
+		
 		ImageDescriptor inheritableIconDescriptor = AbstractUIPlugin.imageDescriptorFromPlugin(
 				IDEWorkbenchPlugin.IDE_WORKBENCH,
-				"$nl$/icons/full/obj16/inheritable_filter.png"); //$NON-NLS-1$
+				"$nl$/icons/full/obj16/inheritable_filter.gif"); //$NON-NLS-1$
 		if (inheritableIconDescriptor != null)
 			inheritableIcon = inheritableIconDescriptor.createImage();
 	}
@@ -204,7 +208,7 @@ public class ResourceFilterGroup {
 
 	/**
 	 * Set the IContainer resource to edit
-	 *
+	 * 
 	 * @param res
 	 *            the container resource
 	 */
@@ -229,9 +233,10 @@ public class ResourceFilterGroup {
 	class Filters extends FilterCopy {
 		public Filters(IContainer resource) {
 			try {
-				children = new LinkedList<>();
-				for (IResourceFilterDescription filter : resource.getFilters()) {
-					FilterCopy copy = new FilterCopy(UIResourceFilterDescription.wrap(filter));
+				IResourceFilterDescription[] tmp = resource.getFilters();
+				children = new LinkedList();
+				for (int i = 0; i < tmp.length; i++) {
+					FilterCopy copy = new FilterCopy(UIResourceFilterDescription.wrap(tmp[i]));
 					copy = convertLegacyMatchers(copy);
 					addChild(copy);
 				}
@@ -243,23 +248,26 @@ public class ResourceFilterGroup {
 		}
 
 		public Filters(IResourceFilterDescription filters[]) {
-			children = new LinkedList<>();
+			children = new LinkedList();
 			if (filters != null) {
-				for (IResourceFilterDescription filter : filters)
-					addChild(new FilterCopy(UIResourceFilterDescription.wrap(filter)));
+				for (int i = 0; i < filters.length; i++)
+					addChild(new FilterCopy(UIResourceFilterDescription.wrap(filters[i])));
 			}
 		}
 
 		public Filters(UIResourceFilterDescription filters[]) {
-			children = new LinkedList<>();
+			children = new LinkedList();
 			if (filters != null) {
-				for (UIResourceFilterDescription filter : filters)
-					addChild(new FilterCopy(filter));
+				for (int i = 0; i < filters.length; i++)
+					addChild(new FilterCopy(filters[i]));
 			}
 		}
 
 		boolean changed = false;
-		public LinkedList<FilterCopy> trash = new LinkedList<>();
+		public LinkedList/* <IResourceFilterDescription> */trash = new LinkedList/*
+																	 * <IResourceFilterDescription
+																	 * >
+																	 */();
 
 		public void add(FilterCopy newFilter) {
 			super.addChild(newFilter);
@@ -282,7 +290,7 @@ public class ResourceFilterGroup {
 					content[i] = tmp;
 				}
 			}
-			children = new LinkedList<>(Arrays.asList(content));
+			children = new LinkedList(Arrays.asList(content));
 			changed = true;
 		}
 
@@ -295,27 +303,24 @@ public class ResourceFilterGroup {
 					content[i] = tmp;
 				}
 			}
-			children = new LinkedList<>(Arrays.asList(content));
+			children = new LinkedList(Arrays.asList(content));
 			changed = true;
 		}
 
-		@Override
 		public int getChildrenLimit() {
 			return Integer.MAX_VALUE;
 		}
 
-		@Override
 		protected void argumentsChanged() {
 			changed = true;
 		}
 
-		@Override
 		public boolean hasChanged() {
 			if (changed)
 				return true;
-			Iterator<FilterCopy> it = children.iterator();
+			Iterator it = children.iterator();
 			while (it.hasNext()) {
-				FilterCopy filter = it.next();
+				FilterCopy filter = (FilterCopy) it.next();
 				if (filter.hasChanged())
 					return true;
 			}
@@ -334,7 +339,6 @@ public class ResourceFilterGroup {
 			return false;
 		}
 
-		@Override
 		public void removeAll() {
 			if (children.size() > 0) {
 				super.removeAll();
@@ -348,8 +352,7 @@ public class ResourceFilterGroup {
 	static String excludeAllGroup = "EXCLUDE_ALL_GROUP";  //$NON-NLS-1$
 
 	class TreeContentProvider implements ITreeContentProvider {
-
-		@Override
+		
 		public Object[] getChildren(Object parentElement) {
 			if (parentElement == filters) {
 				if (filters.getChildren().length > 0)
@@ -357,12 +360,13 @@ public class ResourceFilterGroup {
 				return new Object[0];
 			}
 			if (parentElement instanceof String) {
-				ArrayList<FilterCopy> list = new ArrayList<>();
+				ArrayList list = new ArrayList();
 				int mask = parentElement.equals(includeOnlyGroup) ? IResourceFilterDescription.INCLUDE_ONLY:
 								IResourceFilterDescription.EXCLUDE_ALL;
-				for (FilterCopy filterCopy : filters.getChildren()) {
-					if ((filterCopy.getType() & mask) != 0)
-						list.add(filterCopy);
+				FilterCopy[] children = filters.getChildren();
+				for (int i = 0; i < children.length; i++) {
+					if ((children[i].getType() & mask) != 0)
+						list.add(children[i]);
 				}
 				return list.toArray();
 			}
@@ -371,7 +375,6 @@ public class ResourceFilterGroup {
 			return null;
 		}
 
-		@Override
 		public Object getParent(Object element) {
 			if (element instanceof String)
 				return filters;
@@ -384,7 +387,6 @@ public class ResourceFilterGroup {
 			return null;
 		}
 
-		@Override
 		public boolean hasChildren(Object element) {
 			if (element instanceof FilterCopy || element instanceof String) {
 				Object[] children = getChildren(element);
@@ -393,16 +395,13 @@ public class ResourceFilterGroup {
 			return false;
 		}
 
-		@Override
 		public Object[] getElements(Object inputElement) {
 			return getChildren(inputElement);
 		}
 
-		@Override
 		public void dispose() {
 		}
 
-		@Override
 		public void inputChanged(Viewer viewer, Object oldInput, Object newInput) {
 		}
 	}
@@ -411,18 +410,16 @@ public class ResourceFilterGroup {
 		private final Styler fBoldStyler;
 		private final Styler fPlainStyler;
 		FilterTypeUtil util;
-		TreeMap<Object, ICustomFilterArgumentUI> customfilterArgumentMap = new TreeMap<>();
+		TreeMap/*<String, ICustomFilterArgumentUI */ customfilterArgumentMap = new TreeMap();
 
 		public LabelProvider() {
 			util = new FilterTypeUtil();
 			fBoldStyler= new Styler() {
-				@Override
 				public void applyStyles(TextStyle textStyle) {
 					textStyle.font= boldFont;
 				}
 			};
 			fPlainStyler= new Styler() {
-				@Override
 				public void applyStyles(TextStyle textStyle) {
 					textStyle.font= plainFont;
 				}
@@ -434,9 +431,9 @@ public class ResourceFilterGroup {
 		}
 
 		ICustomFilterArgumentUI getUI(String descriptorID) {
-			ICustomFilterArgumentUI result = customfilterArgumentMap.get(descriptorID);
+			ICustomFilterArgumentUI result = (ICustomFilterArgumentUI) customfilterArgumentMap.get(descriptorID);
 			if (result == null)
-				return result = customfilterArgumentMap.get(""); //default ui //$NON-NLS-1$
+				return result = (ICustomFilterArgumentUI) customfilterArgumentMap.get(new String()); // default ui
 			return result;
 		}
 
@@ -449,7 +446,6 @@ public class ResourceFilterGroup {
 			return copy.isUnderAGroupFilter();
 		}
 
-		@Override
 		public void update(ViewerCell cell) {
 			int columnIndex = cell.getColumnIndex();
 			String column = getColumnID(columnIndex);
@@ -475,14 +471,14 @@ public class ResourceFilterGroup {
 			}
 			else {
 				filter = (FilterCopy) element;
-
+	
 				if (column.equals(FilterTypeUtil.MODE)) {
 					StyledString styledString = getStyleColumnText(filter);
 					if (!isPartialFilter(filter)) {
 						Object isInheritable = FilterTypeUtil.getValue(filter, FilterTypeUtil.INHERITABLE);
 						if (((Boolean)isInheritable).booleanValue())
 							styledString.append("   " + IDEWorkbenchMessages.ResourceFilterPage_recursive); //$NON-NLS-1$
-
+						
 					}
 					cell.setText(styledString.toString());
 					cell.setStyleRanges(styledString.getStyleRanges());
@@ -498,7 +494,7 @@ public class ResourceFilterGroup {
 
 			super.update(cell);
 		}
-
+		
 		private StyledString getStyleColumnText(FilterCopy filter) {
 			if ((filter.getChildrenLimit() > 0)) {
 				String whiteSpace = " "; //$NON-NLS-1$;
@@ -531,7 +527,6 @@ public class ResourceFilterGroup {
 			return ui.formatStyledText(filter, fPlainStyler, fBoldStyler);
 		}
 
-		@Override
 		protected void measure(Event event, Object element) {
 			super.measure(event, element);
 		}
@@ -544,9 +539,8 @@ public class ResourceFilterGroup {
 			return ""; //$NON-NLS-1$
 		}
 	}
-
+	
 	class CellModifier implements ICellModifier {
-		@Override
 		public boolean canModify(Object element, String property) {
 			FilterCopy filter = (FilterCopy) element;
 			if (property.equals(FilterTypeUtil.ARGUMENTS)
@@ -555,13 +549,11 @@ public class ResourceFilterGroup {
 			return true;
 		}
 
-		@Override
 		public Object getValue(Object element, String property) {
 			FilterCopy filter = (FilterCopy) element;
 			return FilterTypeUtil.getValue(filter, property);
 		}
 
-		@Override
 		public void modify(Object element, String property, Object value) {
 			FilterCopy filter = (FilterCopy) ((TableItem) element).getData();
 			FilterTypeUtil.setValue(filter, property, value);
@@ -572,7 +564,7 @@ public class ResourceFilterGroup {
 	/**
 	 * Creates the widget group. Callers must call <code>dispose</code> when the
 	 * group is no longer needed.
-	 *
+	 * 
 	 * @param parent
 	 *            the widget parent
 	 * @return container of the widgets
@@ -614,7 +606,7 @@ public class ResourceFilterGroup {
 		data.horizontalSpan = 2;
 		label.setLayoutData(data);
 		label.setFont(font);
-
+		
 		createViewerGroup(composite);
 		createButtonGroup(composite);
 
@@ -647,7 +639,11 @@ public class ResourceFilterGroup {
 		filterView.setInput(filters);
 		filterView.getTree().setFont(parent.getFont());
 
-		filterView.addSelectionChangedListener(event -> refreshEnablement());
+		filterView.addSelectionChangedListener(new ISelectionChangedListener() {
+			public void selectionChanged(SelectionChangedEvent event) {
+				refreshEnablement();
+			}
+		});
 
 		TreeColumn modeColumn = new TreeColumn(filterView.getTree(), 0);
 		modeColumn
@@ -680,7 +676,6 @@ public class ResourceFilterGroup {
 		}
 
 		filterView.getTree().addMouseListener(new MouseListener() {
-			@Override
 			public void mouseDoubleClick(MouseEvent e) {
 				if (!handleEdit()) {
 					ISelection selection = filterView.getSelection();
@@ -693,11 +688,9 @@ public class ResourceFilterGroup {
 				}
 			}
 
-			@Override
 			public void mouseDown(MouseEvent e) {
 			}
 
-			@Override
 			public void mouseUp(MouseEvent e) {
 			}
 		});
@@ -708,15 +701,17 @@ public class ResourceFilterGroup {
 		filterView.addDropSupport(ops, transfers,
 				new FilterCopyDrop(filterView));
 
-		filterView.getTree().addMenuDetectListener(e -> {
-			MenuManager mgr = new MenuManager();
-			mgr.add(addSubFilterAction);
-			mgr.add(addSubGroupFilterAction);
-			mgr.add(new Separator());
-			mgr.add(new EditFilterAction());
-			mgr.add(new RemoveFilterAction());
-			filterView.getControl().setMenu(
-					mgr.createContextMenu(filterView.getControl()));
+		filterView.getTree().addMenuDetectListener(new MenuDetectListener() {
+			public void menuDetected(MenuDetectEvent e) {
+				MenuManager mgr = new MenuManager();
+				mgr.add(addSubFilterAction);
+				mgr.add(addSubGroupFilterAction);
+				mgr.add(new Separator());
+				mgr.add(new EditFilterAction());
+				mgr.add(new RemoveFilterAction());
+				filterView.getControl().setMenu(
+						mgr.createContextMenu(filterView.getControl()));
+			}
 		});
 		TreeColumnLayout layout = new TreeColumnLayout();
 		tableComposite.setLayout( layout );
@@ -742,11 +737,9 @@ public class ResourceFilterGroup {
 							null));
 		}
 
-		@Override
 		public void run() {
 			handleEdit();
 		}
-		@Override
 		public boolean isEnabled() {
 			ISelection selection = filterView.getSelection();
 			if (selection instanceof IStructuredSelection) {
@@ -768,11 +761,9 @@ public class ResourceFilterGroup {
 							null));
 		}
 
-		@Override
 		public void run() {
 			handleRemove();
 		}
-		@Override
 		public boolean isEnabled() {
 			ISelection selection = filterView.getSelection();
 			if (selection instanceof IStructuredSelection) {
@@ -786,7 +777,7 @@ public class ResourceFilterGroup {
 	class AddSubFilterAction extends Action {
 
 		boolean createGroupOnly;
-
+		
 		public AddSubFilterAction(boolean createGroupOnly) {
 			this.createGroupOnly = createGroupOnly;
 			setText(NLS
@@ -796,7 +787,11 @@ public class ResourceFilterGroup {
 							null));
 		}
 
-		@Override
+		/*
+		 * (non-Javadoc)
+		 * 
+		 * @see org.eclipse.jface.action.Action#run()
+		 */
 		public void run() {
 			ISelection selection = filterView.getSelection();
 			if (selection instanceof IStructuredSelection) {
@@ -806,7 +801,11 @@ public class ResourceFilterGroup {
 			}
 		}
 
-		@Override
+		/*
+		 * (non-Javadoc)
+		 * 
+		 * @see org.eclipse.jface.action.Action#isEnabled()
+		 */
 		public boolean isEnabled() {
 			ISelection selection = filterView.getSelection();
 			if (selection instanceof IStructuredSelection) {
@@ -827,7 +826,7 @@ public class ResourceFilterGroup {
 		}
 		handleAdd(selectedObject, createGroupOnly);
 	}
-
+	
 	private void handleAdd(Object selection, boolean createGroupOnly) {
 		if (selection == null) {
 			FilterCopy newFilter = new FilterCopy();
@@ -863,7 +862,8 @@ public class ResourceFilterGroup {
 		}
 		else if (selection instanceof String) {
 			FilterCopy newFilter = new FilterCopy();
-			FilterTypeUtil.setValue(newFilter, FilterTypeUtil.MODE, selection.equals(includeOnlyGroup) ? 0 : 1);
+			FilterTypeUtil.setValue(newFilter, FilterTypeUtil.MODE,
+					new Integer(selection.equals(includeOnlyGroup) ? 0:1));
 			FilterEditDialog dialog = new FilterEditDialog(resource, ResourceFilterGroup.this, shell,
 					newFilter, createGroupOnly, true);
 			if (dialog.open() == Window.OK) {
@@ -906,7 +906,13 @@ public class ResourceFilterGroup {
 			super(viewer);
 		}
 
-		@Override
+		/*
+		 * (non-Javadoc)
+		 * 
+		 * @see
+		 * org.eclipse.jface.viewers.ViewerDropAdapter#performDrop(java.lang
+		 * .Object)
+		 */
 		public boolean performDrop(Object data) {
 			Object target = getCurrentTarget();
 			if (target == null)
@@ -914,28 +920,35 @@ public class ResourceFilterGroup {
 			FilterCopy[] toDrop = (FilterCopy[]) data;
 
 			if (target instanceof FilterCopy) {
-				for (FilterCopy filterToDrop : toDrop)
-					if (filterToDrop.equals(target)
-							|| ((FilterCopy) target).hasParent(filterToDrop))
+				for (int i = 0; i < toDrop.length; i++)
+					if (toDrop[i].equals(target)
+							|| ((FilterCopy) target).hasParent(toDrop[i]))
 						return false;
 			}
 
-			for (FilterCopy filterToDrop : toDrop) {
+			for (int i = 0; i < toDrop.length; i++) {
 				if (target instanceof Filters)
-					filters.add(filterToDrop);
+					filters.add(toDrop[i]);
 				if (target instanceof String) {
-					FilterTypeUtil.setValue(filterToDrop, FilterTypeUtil.MODE, target.equals(includeOnlyGroup) ? 0 : 1);
-					addToTopLevelFilters(filterToDrop);
+					FilterTypeUtil.setValue(toDrop[i], FilterTypeUtil.MODE,
+							new Integer(target.equals(includeOnlyGroup) ? 0:1));
+					addToTopLevelFilters(toDrop[i]);
 				}
 				if (target instanceof FilterCopy)
-					((FilterCopy) target).addChild(filterToDrop);
+					((FilterCopy) target).addChild(toDrop[i]);
 				filterView.refresh();
-				filterView.reveal(filterToDrop);
+				filterView.reveal(toDrop[i]);
 			}
 			return true;
 		}
 
-		@Override
+		/*
+		 * (non-Javadoc)
+		 * 
+		 * @see
+		 * org.eclipse.jface.viewers.ViewerDropAdapter#validateDrop(java.lang
+		 * .Object, int, org.eclipse.swt.dnd.TransferData)
+		 */
 		public boolean validateDrop(Object target, int operation,
 				TransferData transferType) {
 			if (filterCopyTransfer.isSupportedType(transferType)) {
@@ -949,21 +962,39 @@ public class ResourceFilterGroup {
 
 	class FilterCopyDrag implements DragSourceListener {
 
-		@Override
+		/*
+		 * (non-Javadoc)
+		 * 
+		 * @see
+		 * org.eclipse.swt.dnd.DragSourceListener#dragFinished(org.eclipse.swt
+		 * .dnd.DragSourceEvent)
+		 */
 		public void dragFinished(DragSourceEvent event) {
 			if (event.detail == DND.DROP_MOVE) {
 				// nothing
 			}
 		}
 
-		@Override
+		/*
+		 * (non-Javadoc)
+		 * 
+		 * @see
+		 * org.eclipse.swt.dnd.DragSourceListener#dragSetData(org.eclipse.swt
+		 * .dnd.DragSourceEvent)
+		 */
 		public void dragSetData(DragSourceEvent event) {
 			if (filterCopyTransfer.isSupportedType(event.dataType)) {
 				event.data = getFilterCopySelection();
 			}
 		}
 
-		@Override
+		/*
+		 * (non-Javadoc)
+		 * 
+		 * @see
+		 * org.eclipse.swt.dnd.DragSourceListener#dragStart(org.eclipse.swt.
+		 * dnd.DragSourceEvent)
+		 */
 		public void dragStart(DragSourceEvent event) {
 			if (getFilterCopySelection().length == 0)
 				event.doit = false;
@@ -988,12 +1019,11 @@ public class ResourceFilterGroup {
 		addButton.setLayoutData(data);
 		setButtonDimensionHint(addButton);
 		addButton.addSelectionListener(new SelectionAdapter() {
-			@Override
 			public void widgetSelected(SelectionEvent e) {
 				handleAdd(false);
 			}
 		});
-
+		
 		addGroupButton = new Button(composite, SWT.PUSH);
 		addGroupButton.setText(NLS.bind(
 				IDEWorkbenchMessages.ResourceFilterPage_addGroupButtonLabel, null));
@@ -1001,12 +1031,11 @@ public class ResourceFilterGroup {
 		addGroupButton.setLayoutData(data);
 		setButtonDimensionHint(addGroupButton);
 		addGroupButton.addSelectionListener(new SelectionAdapter() {
-			@Override
 			public void widgetSelected(SelectionEvent e) {
 				handleAdd(true);
 			}
 		});
-
+		
 
 		editButton = new Button(composite, SWT.PUSH);
 		editButton.setText(NLS.bind(
@@ -1015,7 +1044,6 @@ public class ResourceFilterGroup {
 		editButton.setLayoutData(data);
 		setButtonDimensionHint(editButton);
 		editButton.addSelectionListener(new SelectionAdapter() {
-			@Override
 			public void widgetSelected(SelectionEvent e) {
 				handleEdit();
 			}
@@ -1031,7 +1059,6 @@ public class ResourceFilterGroup {
 		removeButton.setLayoutData(data);
 		setButtonDimensionHint(removeButton);
 		removeButton.addSelectionListener(new SelectionAdapter() {
-			@Override
 			public void widgetSelected(SelectionEvent e) {
 				handleRemove();
 			}
@@ -1123,9 +1150,10 @@ public class ResourceFilterGroup {
 				else {
 					int mask = element.equals(includeOnlyGroup) ? IResourceFilterDescription.INCLUDE_ONLY:
 						IResourceFilterDescription.EXCLUDE_ALL;
-					for (FilterCopy filterCopy : filters.getChildren()) {
-						if ((filterCopy.getType() & mask) != 0)
-							filters.removeChild(filterCopy);
+					FilterCopy[] children = filters.getChildren();
+					for (int i = 0; i < children.length; i++) {
+						if ((children[i].getType() & mask) != 0)
+							filters.removeChild(children[i]);
 					}
 				}
 			}
@@ -1200,7 +1228,7 @@ public class ResourceFilterGroup {
 
 	/**
 	 * Apply the read only state and the encoding to the resource.
-	 *
+	 * 
 	 * @return true if the filters changed
 	 */
 	public boolean performOk() {
@@ -1212,14 +1240,14 @@ public class ResourceFilterGroup {
 			try {
 				if (resource != nonExistantResource) {
 					IResourceFilterDescription[] oldFilters = resource.getFilters();
-					for (IResourceFilterDescription oldFilter : oldFilters) {
-						oldFilter.delete(IResource.BACKGROUND_REFRESH,
+					for (int i = 0; i < oldFilters.length; i++) {
+						oldFilters[i].delete(IResource.BACKGROUND_REFRESH,
 								new NullProgressMonitor());
 					}
 					FilterCopy[] newFilters = filters.getChildren();
-					for (FilterCopy newFilter : newFilters) {
-						resource.createFilter(newFilter.getType(),
-								newFilter.getFileInfoMatcherDescription(),
+					for (int i = 0; i < newFilters.length; i++) {
+						resource.createFilter(newFilters[i].getType(),
+								newFilters[i].getFileInfoMatcherDescription(),
 								IResource.BACKGROUND_REFRESH,
 								new NullProgressMonitor());
 					}
@@ -1242,18 +1270,20 @@ public class ResourceFilterGroup {
 
 	private void disposeIcons() {
 		Field[] fields = getClass().getDeclaredFields();
-		for (Field field : fields) {
-			Class<?> cls = field.getType();
+		for (int i = 0; i < fields.length; i++) {
+			Class cls = fields[i].getType();
 			if (cls.equals(Image.class)) {
 				Image img;
 				try {
-					img = (Image) field.get(this);
+					img = (Image) fields[i].get(this);
 					if (img != null) {
 						img.dispose();
-						field.set(this, null);
+						fields[i].set(this, null);
 					}
-				} catch (IllegalArgumentException | IllegalAccessException e) {
-					IDEWorkbenchPlugin.log(e.getMessage(), e);
+				} catch (IllegalArgumentException e) {
+					e.printStackTrace();
+				} catch (IllegalAccessException e) {
+					e.printStackTrace();
 				}
 			}
 		}
@@ -1266,7 +1296,6 @@ public class ResourceFilterGroup {
 		private FilterCopyTransfer() {
 		}
 
-		@Override
 		public void javaToNative(Object object, TransferData transferData) {
 			if (object == null || !(object instanceof FilterCopy[]))
 				return;
@@ -1276,8 +1305,8 @@ public class ResourceFilterGroup {
 					ByteArrayOutputStream out = new ByteArrayOutputStream();
 					DataOutputStream writeOut = new DataOutputStream(out);
 					writeOut.writeInt(myTypes.length);
-					for (FilterCopy myType : myTypes)
-						writeOut.writeInt(myType.getSerialNumber());
+					for (int i = 0; i < myTypes.length; i++)
+						writeOut.writeInt(myTypes[i].getSerialNumber());
 					byte[] buffer = out.toByteArray();
 					writeOut.close();
 					super.javaToNative(buffer, transferData);
@@ -1286,7 +1315,6 @@ public class ResourceFilterGroup {
 			}
 		}
 
-		@Override
 		public Object nativeToJava(TransferData transferData) {
 			if (isSupportedType(transferData)) {
 				byte[] buffer = (byte[]) super.nativeToJava(transferData);
@@ -1298,7 +1326,7 @@ public class ResourceFilterGroup {
 					DataInputStream readIn = new DataInputStream(in);
 					int size = readIn.readInt();
 
-					LinkedList<FilterCopy> droppedFilters = new LinkedList<>();
+					LinkedList droppedFilters = new LinkedList();
 					for (int i = 0; i < size; i++) {
 						int serialNumber = readIn.readInt();
 						FilterCopy tmp = filters
@@ -1306,7 +1334,7 @@ public class ResourceFilterGroup {
 						if (tmp != null)
 							droppedFilters.add(tmp);
 					}
-					myData = droppedFilters
+					myData = (FilterCopy[]) droppedFilters
 							.toArray(new FilterCopy[0]);
 					readIn.close();
 				} catch (IOException ex) {
@@ -1321,12 +1349,10 @@ public class ResourceFilterGroup {
 		private final String MYTYPENAME = "org.eclipse.ui.ide.internal.filterCopy"; //$NON-NLS-1$
 		private final int MYTYPEID = registerType(MYTYPENAME);
 
-		@Override
 		protected String[] getTypeNames() {
 			return new String[] { MYTYPENAME };
 		}
 
-		@Override
 		protected int[] getTypeIds() {
 			return new int[] { MYTYPEID };
 		}
@@ -1397,9 +1423,9 @@ class FilterTypeUtil {
 	static IFilterMatcherDescriptor getDescriptor(String id) {
 		IFilterMatcherDescriptor[] descriptors = ResourcesPlugin.getWorkspace()
 				.getFilterMatcherDescriptors();
-		for (IFilterMatcherDescriptor descriptor : descriptors) {
-			if (descriptor.getId().equals(id))
-				return descriptor;
+		for (int i = 0; i < descriptors.length; i++) {
+			if (descriptors[i].getId().equals(id))
+				return descriptors[i];
 		}
 		return null;
 	}
@@ -1418,25 +1444,25 @@ class FilterTypeUtil {
 		if (property.equals(ID)) {
 			String id = filter.getFileInfoMatcherDescription().getId();
 			int index = getDescriptorIndex(id);
-			return index;
+			return new Integer(index);
 		}
 		if (property.equals(MODE)) {
 			if ((filter.getType() & IResourceFilterDescription.INCLUDE_ONLY) != 0)
-				return 0;
-			return 1;
+				return new Integer(0);
+			return new Integer(1);
 		}
 		if (property.equals(TARGET)) {
 			boolean includeFiles = (filter.getType() & IResourceFilterDescription.FILES) != 0;
 			boolean includeFolders = (filter.getType() & IResourceFilterDescription.FOLDERS) != 0;
 			if (includeFiles && includeFolders)
-				return 2;
+				return new Integer(2);
 			if (includeFiles)
-				return 0;
+				return new Integer(0);
 			if (includeFolders)
-				return 1;
+				return new Integer(1);
 		}
 		if (property.equals(INHERITABLE))
-			return Boolean.valueOf(
+			return new Boolean(
 					(filter.getType() & IResourceFilterDescription.INHERITABLE) != 0);
 
 		if (property.equals(ARGUMENTS))
@@ -1458,33 +1484,35 @@ class FilterTypeUtil {
 		IFilterMatcherDescriptor[] descriptors = ResourcesPlugin.getWorkspace()
 				.getFilterMatcherDescriptors();
 		sortDescriptors(descriptors);
-		LinkedList<String> names = new LinkedList<>();
-		for (IFilterMatcherDescriptor descriptor : descriptors) {
+		LinkedList names = new LinkedList();
+		for (int i = 0; i < descriptors.length; i++) {
 			// remove legacy filters
-			if (descriptor.getId().equals(DefaultCustomFilterArgumentUI.REGEX_FILTER_ID))
+			if (descriptors[i].getId().equals(DefaultCustomFilterArgumentUI.REGEX_FILTER_ID))
 				continue;
-			if (descriptor.getId().equals(StringFileInfoMatcher.ID))
+			if (descriptors[i].getId().equals(StringFileInfoMatcher.ID))
 				continue;
-			boolean isGroup = descriptor.getArgumentType().equals(
+			boolean isGroup = descriptors[i].getArgumentType().equals(
 					IFilterMatcherDescriptor.ARGUMENT_TYPE_FILTER_MATCHER)
-					|| descriptor.getArgumentType().equals(
+					|| descriptors[i].getArgumentType().equals(
 							IFilterMatcherDescriptor.ARGUMENT_TYPE_FILTER_MATCHERS);
 			if (isGroup == groupOnly)
-				names.add(descriptor.getName());
+				names.add(descriptors[i].getName());
 		}
-		return names.toArray(new String[0]);
+		return (String[]) names.toArray(new String[0]);
 	}
 
 	/**
 	 * @param descriptors
 	 */
 	private static void sortDescriptors(IFilterMatcherDescriptor[] descriptors) {
-		Arrays.sort(descriptors, (arg0, arg1) -> {
-			if (arg0.getId().equals(FileInfoAttributesMatcher.ID))
-				return -1;
-			if (arg1.getId().equals(FileInfoAttributesMatcher.ID))
-				return 1;
-			return arg0.getId().compareTo(arg1.getId());
+		Arrays.sort(descriptors, new Comparator() {
+			public int compare(Object arg0, Object arg1) {
+				if (((IFilterMatcherDescriptor) arg0).getId().equals(FileInfoAttributesMatcher.ID))
+					return -1;
+				if (((IFilterMatcherDescriptor) arg1).getId().equals(FileInfoAttributesMatcher.ID))
+					return 1;
+				return ((IFilterMatcherDescriptor) arg0).getId().compareTo(((IFilterMatcherDescriptor) arg1).getId());
+			}
 		});
 	}
 
@@ -1492,10 +1520,10 @@ class FilterTypeUtil {
 		IFilterMatcherDescriptor descriptors[] = ResourcesPlugin.getWorkspace()
 				.getFilterMatcherDescriptors();
 		sortDescriptors(descriptors);
-		for (IFilterMatcherDescriptor descriptor : descriptors) {
-			if (descriptor.getArgumentType().equals(
+		for (int i = 0; i < descriptors.length; i++) {
+			if (descriptors[i].getArgumentType().equals(
 					IFilterMatcherDescriptor.ARGUMENT_TYPE_STRING))
-				return descriptor.getId();
+				return descriptors[i].getId();
 		}
 		return descriptors[0].getId();
 	}
@@ -1509,9 +1537,9 @@ class FilterTypeUtil {
 	static IFilterMatcherDescriptor getDescriptorByName(String name) {
 		IFilterMatcherDescriptor[] descriptors = ResourcesPlugin.getWorkspace()
 				.getFilterMatcherDescriptors();
-		for (IFilterMatcherDescriptor descriptor : descriptors) {
-			if (descriptor.getName().equals(name))
-				return descriptor;
+		for (int i = 0; i < descriptors.length; i++) {
+			if (descriptors[i].getName().equals(name))
+				return descriptors[i];
 		}
 		return null;
 	}
@@ -1525,7 +1553,7 @@ class FilterCopy extends UIResourceFilterDescription {
 	IProject project = null;
 	int type = 0;
 	FilterCopy parent = null;
-	LinkedList<FilterCopy> children = null;
+	LinkedList children = null;
 	UIResourceFilterDescription original = null;
 	int serialNumber = ++lastSerialNumber;
 	static private int lastSerialNumber = 0;
@@ -1553,9 +1581,9 @@ class FilterCopy extends UIResourceFilterDescription {
 
 	public void removeAll() {
 		initializeChildren();
-		Iterator<FilterCopy> it = children.iterator();
+		Iterator it = children.iterator();
 		while (it.hasNext()) {
-			FilterCopy child = it.next();
+			FilterCopy child = (FilterCopy) it.next();
 			if (child.parent == this)
 				child.parent = null;
 		}
@@ -1656,17 +1684,14 @@ class FilterCopy extends UIResourceFilterDescription {
 		return id;
 	}
 
-	@Override
 	public IPath getPath() {
 		return path;
 	}
 
-	@Override
 	public IProject getProject() {
 		return project;
 	}
 
-	@Override
 	public int getType() {
 		return type;
 	}
@@ -1713,7 +1738,6 @@ class FilterCopy extends UIResourceFilterDescription {
 		return 0;
 	}
 
-	@Override
 	public boolean equals(Object o) {
 		if (!(o instanceof FilterCopy))
 			return false;
@@ -1726,10 +1750,10 @@ class FilterCopy extends UIResourceFilterDescription {
 	}
 
 	public FilterCopy findBySerialNumber(int number) {
-		LinkedList<FilterCopy> pending = new LinkedList<>();
+		LinkedList pending = new LinkedList();
 		pending.add(this);
 		while (!pending.isEmpty()) {
-			FilterCopy filter = pending.getFirst();
+			FilterCopy filter = (FilterCopy) pending.getFirst();
 			pending.removeFirst();
 			if (filter.serialNumber == number)
 				return filter;
@@ -1743,7 +1767,7 @@ class FilterCopy extends UIResourceFilterDescription {
 	public FilterCopy[] getChildren() {
 		if (getChildrenLimit() > 0) {
 			initializeChildren();
-			return children.toArray(new FilterCopy[0]);
+			return (FilterCopy[]) children.toArray(new FilterCopy[0]);
 		}
 		return null;
 	}
@@ -1751,21 +1775,22 @@ class FilterCopy extends UIResourceFilterDescription {
 	protected void initializeChildren() {
 		if (children == null) {
 			if (getChildrenLimit() > 0) {
-				children = new LinkedList<>();
+				children = new LinkedList();
 				Object arguments = getArguments();
 				if (arguments instanceof IResourceFilterDescription[]) {
 					IResourceFilterDescription[] filters = (IResourceFilterDescription[]) arguments;
-					for (IResourceFilterDescription filter : filters) {
-						FilterCopy child = new FilterCopy(UIResourceFilterDescription.wrap(filter));
-						child.parent = this;
-						children.add(child);
-					}
+					if (filters != null)
+						for (int i = 0; i < filters.length; i++) {
+							FilterCopy child = new FilterCopy(UIResourceFilterDescription.wrap(filters[i]));
+							child.parent = this;
+							children.add(child);
+						}
 				}
 				if (arguments instanceof FilterCopy[]) {
 					FilterCopy[] filters = (FilterCopy[]) arguments;
 					if (filters != null)
-						for (FilterCopy filter : filters) {
-							FilterCopy child = filter;
+						for (int i = 0; i < filters.length; i++) {
+							FilterCopy child = filters[i];
 							child.parent = this;
 							children.add(child);
 						}
@@ -1817,10 +1842,12 @@ class FilterCopy extends UIResourceFilterDescription {
 		return false;
 	}
 
-	@Override
+	/* (non-Javadoc)
+	 * @see org.eclipse.core.resources.IResourceFilterDescription#getFileInfoMatcherDescription()
+	 */
 	public FileInfoMatcherDescription getFileInfoMatcherDescription() {
-
-
+		
+		
 		Object arg = FilterCopy.this.getArguments();
 		if (arg instanceof FilterCopy []) {
 			FilterCopy [] filterCopies = (FilterCopy []) arg;
@@ -1829,7 +1856,7 @@ class FilterCopy extends UIResourceFilterDescription {
 				descriptions[i] = filterCopies[i].getFileInfoMatcherDescription();
 			arg = descriptions;
 		}
-
+		
 		FileInfoMatcherDescription desc = new FileInfoMatcherDescription(getId(), arg);
 		return desc;
 	}
@@ -1854,19 +1881,13 @@ class FilterEditDialog extends TrayDialog {
 	protected ResourceFilterGroup filterGroup;
 	protected IResource resource;
 
-	TreeMap<Object, ICustomFilterArgumentUI> customfilterArgumentMap = new TreeMap<>();
+	TreeMap/*<String, ICustomFilterArgumentUI */ customfilterArgumentMap = new TreeMap();
 	ICustomFilterArgumentUI currentCustomFilterArgumentUI = new ICustomFilterArgumentUI() {
-		@Override
 		public Object getID() {return "dummy";} //$NON-NLS-1$
-		@Override
 		public void create(Composite argumentComposite, Font font) {}
-		@Override
 		public void dispose() {}
-		@Override
 		public void selectionChanged() {}
-		@Override
 		public String validate() {return null;}
-		@Override
 		public StyledString formatStyledText(FilterCopy filter,
 				Styler fPlainStyler, Styler fBoldStyler) {return null;}
 	};
@@ -1894,7 +1915,13 @@ class FilterEditDialog extends TrayDialog {
 		customfilterArgumentMap.put(ui.getID(), ui);
 	}
 
-	@Override
+	/*
+	 * (non-Javadoc)
+	 * 
+	 * @see
+	 * org.eclipse.jface.dialogs.Dialog#createDialogArea(org.eclipse.swt.widgets
+	 * .Composite)
+	 */
 	protected Control createDialogArea(Composite parent) {
 		GridData data = new GridData(SWT.FILL, SWT.FILL, true, true);
 		parent.setLayoutData(data);
@@ -1933,7 +1960,7 @@ class FilterEditDialog extends TrayDialog {
 			createModeArea(font, topComposite);
 
 			createTargetArea(font, topComposite);
-
+			
 			createIdArea(font, topComposite);
 		}
 		else {
@@ -1943,7 +1970,9 @@ class FilterEditDialog extends TrayDialog {
 		return composite;
 	}
 
-	@Override
+	/* (non-Javadoc)
+	 * @see org.eclipse.jface.dialogs.TrayDialog#createButtonBar(org.eclipse.swt.widgets.Composite)
+	 */
 	protected Control createButtonBar(Composite parent) {
 		Label label = new Label(parent, SWT.SEPARATOR | SWT.HORIZONTAL);
 		label.setLayoutData(new GridData(SWT.FILL, SWT.TOP, true, false));
@@ -1962,7 +1991,7 @@ class FilterEditDialog extends TrayDialog {
         	Control helpControl = createHelpControl(composite);
         	((GridData) helpControl.getLayoutData()).horizontalIndent = convertHorizontalDLUsToPixels(IDialogConstants.HORIZONTAL_MARGIN);
 		}
-
+       
         Control buttonSection = dialogCreateButtonBar(composite);
         ((GridData) buttonSection.getLayoutData()).grabExcessHorizontalSpace = true;
         return composite;
@@ -1984,7 +2013,7 @@ class FilterEditDialog extends TrayDialog {
 				| GridData.VERTICAL_ALIGN_CENTER);
 		composite.setLayoutData(data);
 		composite.setFont(parent.getFont());
-
+		
 		// Add the buttons to the button bar.
 		createButtonsForButtonBar(composite);
 		return composite;
@@ -2011,7 +2040,7 @@ class FilterEditDialog extends TrayDialog {
 		inherited = new Button(inheritableComposite, SWT.CHECK);
 		String label;
 		label = IDEWorkbenchMessages.ResourceFilterPage_applyRecursivelyToFolderStructure;
-
+		
 		inherited
 				.setText(NLS
 						.bind(
@@ -2022,10 +2051,9 @@ class FilterEditDialog extends TrayDialog {
 		inherited.setLayoutData(data);
 		inherited.setFont(font);
 		inherited.addSelectionListener(new SelectionAdapter() {
-			@Override
 			public void widgetSelected(SelectionEvent e) {
 				FilterTypeUtil.setValue(filter, FilterTypeUtil.INHERITABLE,
-						Boolean.valueOf(inherited.getSelection()));
+						new Boolean(inherited.getSelection()));
 			}
 		});
 		inherited.setSelection((((Boolean) FilterTypeUtil.getValue(filter,
@@ -2044,9 +2072,9 @@ class FilterEditDialog extends TrayDialog {
 		includeButton.setLayoutData(data);
 		includeButton.setFont(font);
 		includeButton.addSelectionListener(new SelectionAdapter() {
-			@Override
 			public void widgetSelected(SelectionEvent e) {
-				FilterTypeUtil.setValue(filter, FilterTypeUtil.MODE, 0);
+				FilterTypeUtil.setValue(filter, FilterTypeUtil.MODE,
+						new Integer(0));
 			}
 		});
 		includeButton.setSelection(((Integer) FilterTypeUtil.getValue(
@@ -2057,9 +2085,9 @@ class FilterEditDialog extends TrayDialog {
 		excludeButton.setLayoutData(data);
 		excludeButton.setFont(font);
 		excludeButton.addSelectionListener(new SelectionAdapter() {
-			@Override
 			public void widgetSelected(SelectionEvent e) {
-				FilterTypeUtil.setValue(filter, FilterTypeUtil.MODE, 1);
+				FilterTypeUtil.setValue(filter, FilterTypeUtil.MODE,
+						new Integer(1));
 			}
 		});
 		excludeButton.setSelection(((Integer) FilterTypeUtil.getValue(
@@ -2068,7 +2096,7 @@ class FilterEditDialog extends TrayDialog {
 
 	private void createIdArea(Font font, Composite composite) {
 		if (createGroupOnly) {
-			idComposite = createGroup(font, composite, "", //$NON-NLS-1$
+			idComposite = createGroup(font, composite, new String(),
 					true, true, 1);
 			createMatcherCombo(idComposite, font);
 			GridData data = new GridData(SWT.FILL, SWT.CENTER, true, false);
@@ -2108,12 +2136,11 @@ class FilterEditDialog extends TrayDialog {
 		idCombo.setLayoutData(data);
 		idCombo.setFont(font);
 		idCombo.addSelectionListener(new SelectionAdapter() {
-			@Override
 			public void widgetSelected(SelectionEvent e) {
 				FilterTypeUtil.setValue(filter, FilterTypeUtil.ID, idCombo
 						.getItem(idCombo.getSelectionIndex()));
 				if (filter.hasStringArguments())
-					filter.setArguments(""); //$NON-NLS-1$
+					filter.setArguments(new String());
 				setupPatternLine();
 				currentCustomFilterArgumentUI.selectionChanged();
 				getShell().layout(true);
@@ -2130,15 +2157,15 @@ class FilterEditDialog extends TrayDialog {
 		FilterTypeUtil.setValue(filter, FilterTypeUtil.ID, idCombo
 				.getItem(idCombo.getSelectionIndex()));
 	}
-
+	
 
 	ICustomFilterArgumentUI getUI(String descriptorID) {
-		ICustomFilterArgumentUI result = customfilterArgumentMap.get(descriptorID);
+		ICustomFilterArgumentUI result = (ICustomFilterArgumentUI) customfilterArgumentMap.get(descriptorID);
 		if (result == null)
-			return result = customfilterArgumentMap.get(""); //default ui //$NON-NLS-1$
+			return result = (ICustomFilterArgumentUI) customfilterArgumentMap.get(new String()); // default ui
 		return result;
 	}
-
+	
 	private void setupPatternLine() {
 		IFilterMatcherDescriptor descriptor;
 		if (createGroupOnly) {
@@ -2157,7 +2184,7 @@ class FilterEditDialog extends TrayDialog {
 	}
 
 	/**
-	 *
+	 * 
 	 */
 	private void selectComboItem(String filterID) {
 		IFilterMatcherDescriptor descriptor = ResourcesPlugin.getWorkspace()
@@ -2210,7 +2237,7 @@ class FilterEditDialog extends TrayDialog {
 		GridData data;
 		Composite targetComposite = createGroup(font, composite,
 				NLS.bind(IDEWorkbenchMessages.ResourceFilterPage_columnFilterTarget, null), false, true, 1);
-
+		
 		String[] targets = FilterTypeUtil.getTargets();
 		filesButton = new Button(targetComposite, SWT.RADIO);
 		filesButton.setText(targets[0]);
@@ -2231,21 +2258,21 @@ class FilterEditDialog extends TrayDialog {
 		filesAndFoldersButton.setFont(font);
 
 		filesButton.addSelectionListener(new SelectionAdapter() {
-			@Override
 			public void widgetSelected(SelectionEvent e) {
-				FilterTypeUtil.setValue(filter, FilterTypeUtil.TARGET, 0);
+				FilterTypeUtil.setValue(filter, FilterTypeUtil.TARGET,
+						new Integer(0));
 			}
 		});
 		foldersButton.addSelectionListener(new SelectionAdapter() {
-			@Override
 			public void widgetSelected(SelectionEvent e) {
-				FilterTypeUtil.setValue(filter, FilterTypeUtil.TARGET, 1);
+				FilterTypeUtil.setValue(filter, FilterTypeUtil.TARGET,
+						new Integer(1));
 			}
 		});
 		filesAndFoldersButton.addSelectionListener(new SelectionAdapter() {
-			@Override
 			public void widgetSelected(SelectionEvent e) {
-				FilterTypeUtil.setValue(filter, FilterTypeUtil.TARGET, 2);
+				FilterTypeUtil.setValue(filter, FilterTypeUtil.TARGET,
+						new Integer(2));
 			}
 		});
 		filesButton.setSelection(((Integer) FilterTypeUtil.getValue(filter,
@@ -2257,7 +2284,6 @@ class FilterEditDialog extends TrayDialog {
 		createInheritableArea(font, targetComposite);
 	}
 
-	@Override
 	protected Control createContents(Composite parent) {
 		Control control = super.createContents(parent);
 		initialize();
@@ -2273,12 +2299,15 @@ class FilterEditDialog extends TrayDialog {
 				getButton(OK).setEnabled(true);
 		}
 	}
-	@Override
+	/*
+	 * (non-Javadoc)
+	 * 
+	 * @see org.eclipse.jface.dialogs.Dialog#isResizable()
+	 */
 	protected boolean isResizable() {
 		return true;
 	}
 
-	@Override
 	protected void configureShell(Shell newShell) {
 		String title = null;
 		if (creatingNewFilter) {
@@ -2299,7 +2328,6 @@ class FilterEditDialog extends TrayDialog {
 	protected void update() {
 	}
 
-	@Override
 	protected void okPressed() {
 		// see if the initialize causes an exception
 		if (filter.hasStringArguments()) {
@@ -2355,12 +2383,12 @@ interface ICustomFilterArgumentUI {
 
 	/**
 	 * @return null if there's no issue
-	 *
+	 * 
 	 */
 	String validate();
 
 	/**
-	 *
+	 * 
 	 */
 	void selectionChanged();
 
@@ -2371,10 +2399,10 @@ interface ICustomFilterArgumentUI {
 	void create(Composite argumentComposite, Font font);
 
 	/**
-	 *
+	 * 
 	 */
 	void dispose();
-
+	
 }
 
 class MultiMatcherCustomFilterArgumentUI implements ICustomFilterArgumentUI {
@@ -2397,13 +2425,13 @@ class MultiMatcherCustomFilterArgumentUI implements ICustomFilterArgumentUI {
 	protected Composite stringArgumentComposite;
 	protected Composite stringTextArgumentComposite;
 	protected Composite attributeStringArgumentComposite;
-	protected Class<?> intiantiatedKeyOperatorType = null;
-	protected TreeMap<String, String> valueCache = new TreeMap<>();
+	protected Class intiantiatedKeyOperatorType = null;
+	protected TreeMap/* <String, String>*/ valueCache = new TreeMap();
 	protected boolean initializationComplete = false;
 	protected FilterEditDialog dialog;
 	protected Label dummyLabel1;
 	protected Label dummyLabel2;
-
+	
 	/**
 	 * @param dialog
 	 * @param parentShell
@@ -2416,17 +2444,21 @@ class MultiMatcherCustomFilterArgumentUI implements ICustomFilterArgumentUI {
 		this.filter = filter;
 	}
 
-	@Override
+	/* (non-Javadoc)
+	 * @see org.eclipse.ui.internal.ide.dialogs.ICustomFilterArgumentUI#getID()
+	 */
 	public Object getID() {
 		return FileInfoAttributesMatcher.ID;
 	}
 
-	@Override
+	/* (non-Javadoc)
+	 * @see org.eclipse.ui.internal.ide.dialogs.ICustomFilterArgumentUI#dispose()
+	 */
 	public void dispose() {
 		Widget list[] = new Widget[] {multiKey, multiOperator, multiArgumentComposite, stringArgumentComposite, stringTextArgumentComposite, arguments, argumentsLabel, argumentsCaseSensitive, argumentsRegularExpresion, attributeStringArgumentComposite, description, conditionComposite, descriptionComposite, dummyLabel1, dummyLabel2};
-		for (Widget widget : list) {
-			if (widget != null) {
-				widget.dispose();
+		for (int i = 0; i < list.length; i++) {
+			if (list[i] != null) {
+				list[i].dispose();
 			}
 		}
 		multiKey = null;
@@ -2449,7 +2481,9 @@ class MultiMatcherCustomFilterArgumentUI implements ICustomFilterArgumentUI {
 		initializationComplete = false;
 	}
 
-	@Override
+	/* (non-Javadoc)
+	 * @see org.eclipse.ui.internal.ide.dialogs.ICustomFilterArgumentUI#create(org.eclipse.swt.widgets.Composite, org.eclipse.swt.graphics.Font)
+	 */
 	public void create(Composite argumentComposite, Font font) {
 		shell = argumentComposite.getShell();
 		GridLayout layout = new GridLayout();
@@ -2462,7 +2496,7 @@ class MultiMatcherCustomFilterArgumentUI implements ICustomFilterArgumentUI {
 		GridData data = new GridData(SWT.FILL, SWT.FILL, true, true);
 		argumentComposite.setLayoutData(data);
 		argumentComposite.setFont(font);
-
+		
 		conditionComposite = new Composite(argumentComposite, SWT.NONE);
 		layout = new GridLayout();
 		layout.numColumns = 2;
@@ -2475,7 +2509,7 @@ class MultiMatcherCustomFilterArgumentUI implements ICustomFilterArgumentUI {
 		conditionComposite.setLayoutData(data);
 
 		createCustomArgumentsArea(font, conditionComposite);
-
+		
 		descriptionComposite = new Composite(argumentComposite, SWT.NONE);
 		layout = new GridLayout();
 		layout.numColumns = 1;
@@ -2486,11 +2520,11 @@ class MultiMatcherCustomFilterArgumentUI implements ICustomFilterArgumentUI {
 		descriptionComposite.setFont(font);
 		data = new GridData(SWT.FILL, SWT.FILL, true, true);
 		descriptionComposite.setLayoutData(data);
-
+		
 		createDescriptionArea(font, descriptionComposite);
 		initializationComplete = true;
 	}
-
+	
 	/**
 	 * @param font
 	 * @param composite
@@ -2523,9 +2557,8 @@ class MultiMatcherCustomFilterArgumentUI implements ICustomFilterArgumentUI {
 				description.setForeground(shell.getDisplay().getSystemColor(SWT.COLOR_BLACK));
 				String selectedKey = MultiMatcherLocalization.getMultiMatcherKey(multiKey.getText());
 				String selectedOperator = MultiMatcherLocalization.getMultiMatcherKey(multiOperator.getText());
-				Class<?> selectedKeyOperatorType = FileInfoAttributesMatcher.getTypeForKey(selectedKey,
-						selectedOperator);
-				description.setText(""); //$NON-NLS-1$
+				Class selectedKeyOperatorType = FileInfoAttributesMatcher.getTypeForKey(selectedKey, selectedOperator);
+				description.setText(new String());
 				if (selectedKeyOperatorType.equals(String.class)) {
 					if (!argumentsRegularExpresion.getSelection())
 						description.setText(NLS.bind(
@@ -2543,7 +2576,7 @@ class MultiMatcherCustomFilterArgumentUI implements ICustomFilterArgumentUI {
 			shell.layout(true, true);
 		}
 	}
-
+	
 	private void createCustomArgumentsArea(Font font, Composite composite) {
 		GridData data;
 
@@ -2558,28 +2591,27 @@ class MultiMatcherCustomFilterArgumentUI implements ICustomFilterArgumentUI {
 		multiArgumentComposite.setFont(font);
 		data = new GridData(SWT.FILL, SWT.FILL, true, true);
 		multiArgumentComposite.setLayoutData(data);
-
+		
 		multiKey = new Combo(multiArgumentComposite, SWT.READ_ONLY);
 		multiKey.setItems(getMultiMatcherKeys());
 		data = new GridData(SWT.LEFT, SWT.TOP, false, false);
 		multiKey.setLayoutData(data);
 		multiKey.setFont(font);
 		multiKey.addSelectionListener(new SelectionAdapter() {
-			@Override
 			public void widgetSelected(SelectionEvent e) {
 				setupMultiOperatorAndField(true);
 				storeMultiSelection();
 			}
 		});
-
+		
 		// calculate max combo width
-		ArrayList<String> allOperators = new ArrayList<>();
+		ArrayList allOperators = new ArrayList();
 		String[] keys = getMultiMatcherKeys();
-		for (String key : keys) {
-			allOperators.addAll(Arrays.asList(getLocalOperatorsForKey(MultiMatcherLocalization.getMultiMatcherKey(key))));
+		for (int i = 0; i < keys.length; i++) {
+			allOperators.addAll(Arrays.asList(getLocalOperatorsForKey(MultiMatcherLocalization.getMultiMatcherKey(keys[i]))));
 		}
 		Combo tmp = new Combo(multiArgumentComposite, SWT.READ_ONLY);
-		tmp.setItems(allOperators.toArray(new String[0]));
+		tmp.setItems((String []) allOperators.toArray(new String[0]));
 		int maxWidth = tmp.computeSize(SWT.DEFAULT, SWT.DEFAULT).x;
 		tmp.dispose();
 
@@ -2589,13 +2621,12 @@ class MultiMatcherCustomFilterArgumentUI implements ICustomFilterArgumentUI {
 		multiOperator.setLayoutData(data);
 		multiOperator.setFont(font);
 		multiOperator.addSelectionListener(new SelectionAdapter() {
-			@Override
 			public void widgetSelected(SelectionEvent e) {
 				setupMultiOperatorAndField(false);
 				storeMultiSelection();
 			}
 		});
-
+		
 		FileInfoAttributesMatcher.Argument argument = FileInfoAttributesMatcher.decodeArguments((String) filter.getArguments());
 		String local = MultiMatcherLocalization.getLocalMultiMatcherKey(argument.key);
 		int index = multiKey.indexOf(local);
@@ -2603,7 +2634,7 @@ class MultiMatcherCustomFilterArgumentUI implements ICustomFilterArgumentUI {
 			multiKey.select(index);
 		else
 			multiKey.select(0);
-
+		
 		setupMultiOperatorAndField(true);
 	}
 
@@ -2622,9 +2653,9 @@ class MultiMatcherCustomFilterArgumentUI implements ICustomFilterArgumentUI {
 				multiOperator.select(0);
 		}
 		String selectedOperator = MultiMatcherLocalization.getMultiMatcherKey(multiOperator.getText());
-
-		Class<?> selectedKeyOperatorType = FileInfoAttributesMatcher.getTypeForKey(selectedKey, selectedOperator);
-
+		
+		Class selectedKeyOperatorType = FileInfoAttributesMatcher.getTypeForKey(selectedKey, selectedOperator);
+		
 		if (intiantiatedKeyOperatorType != null) {
 			if (arguments != null) {
 				arguments.dispose();
@@ -2665,35 +2696,39 @@ class MultiMatcherCustomFilterArgumentUI implements ICustomFilterArgumentUI {
 			fContentAssistField = null;
 			FileInfoAttributesMatcher.Argument argument = FileInfoAttributesMatcher.decodeArguments((String) filter.getArguments());
 			valueCache.put(intiantiatedKeyOperatorType.getName(), argument.pattern);
-			argument.pattern = valueCache.get(selectedKeyOperatorType.getName());
+			argument.pattern = (String) valueCache.get(selectedKeyOperatorType.getName());
 			if (argument.pattern == null)
-				argument.pattern = ""; //$NON-NLS-1$
+				argument.pattern = new String();
 			filter.setArguments(FileInfoAttributesMatcher.encodeArguments(argument));
 		}
 
 		if (selectedKeyOperatorType.equals(String.class)) {
-
+	
 			arguments = new Text(multiArgumentComposite, SWT.SINGLE | SWT.BORDER);
 			GridData data= new GridData(SWT.FILL, SWT.FILL, true, false);
 			data.widthHint = 150;
 			arguments.setLayoutData(data);
 			arguments.setFont(multiArgumentComposite.getFont());
-			arguments.addModifyListener(e -> validateInputText());
+			arguments.addModifyListener(new ModifyListener() {
+				public void modifyText(ModifyEvent e) {
+					validateInputText();
+				}
+			});
 
 			dummyLabel1 = new Label(multiArgumentComposite, SWT.NONE);
 			data = new GridData(SWT.LEFT, SWT.CENTER, true, true);
-			dummyLabel1.setText(""); //$NON-NLS-1$
+			dummyLabel1.setText(new String());
 			data.horizontalSpan = 1;
 			dummyLabel1.setLayoutData(data);
 
 			dummyLabel2 = new Label(multiArgumentComposite, SWT.NONE);
 			data = new GridData(SWT.LEFT, SWT.CENTER, true, true);
-			dummyLabel2.setText(""); //$NON-NLS-1$
+			dummyLabel2.setText(new String());
 			data.horizontalSpan = 1;
 			dummyLabel2.setLayoutData(data);
 
 			stringArgumentComposite = new Composite(multiArgumentComposite, SWT.NONE);
-
+			
 			GridLayout layout = new GridLayout();
 			layout.numColumns = 2;
 			layout.marginWidth = 0;
@@ -2729,9 +2764,12 @@ class MultiMatcherCustomFilterArgumentUI implements ICustomFilterArgumentUI {
 				argumentsRegularExpresion.setSelection(argument.regularExpression);
 			}
 
-			arguments.addModifyListener(e -> storeMultiSelection());
+			arguments.addModifyListener(new ModifyListener() {
+				public void modifyText(ModifyEvent e) {
+					storeMultiSelection();
+				}
+			});
 			argumentsRegularExpresion.addSelectionListener(new SelectionAdapter() {
-				@Override
 				public void widgetSelected(SelectionEvent e) {
 					setupDescriptionText(null);
 					storeMultiSelection();
@@ -2740,7 +2778,6 @@ class MultiMatcherCustomFilterArgumentUI implements ICustomFilterArgumentUI {
 				}
 			});
 			argumentsCaseSensitive.addSelectionListener(new SelectionAdapter() {
-				@Override
 				public void widgetSelected(SelectionEvent e) {
 					storeMultiSelection();
 				}
@@ -2763,7 +2800,11 @@ class MultiMatcherCustomFilterArgumentUI implements ICustomFilterArgumentUI {
 			data.widthHint = 150;
 			arguments.setLayoutData(data);
 			arguments.setFont(multiArgumentComposite.getFont());
-			arguments.addModifyListener(e -> validateInputText());
+			arguments.addModifyListener(new ModifyListener() {
+				public void modifyText(ModifyEvent e) {
+					validateInputText();
+				}
+			});
 
 			if (filter.hasStringArguments()) {
 				FileInfoAttributesMatcher.Argument argument = FileInfoAttributesMatcher.decodeArguments((String) filter.getArguments());
@@ -2772,8 +2813,12 @@ class MultiMatcherCustomFilterArgumentUI implements ICustomFilterArgumentUI {
 				else
 					arguments.setText(convertToEditableLength(argument.pattern));
 			}
-
-			arguments.addModifyListener(e -> storeMultiSelection());
+			
+			arguments.addModifyListener(new ModifyListener() {
+				public void modifyText(ModifyEvent e) {
+					storeMultiSelection();
+				}
+			});
 		}
 		if (selectedKeyOperatorType.equals(Date.class)) {
 			GridData data;
@@ -2782,7 +2827,6 @@ class MultiMatcherCustomFilterArgumentUI implements ICustomFilterArgumentUI {
 			argumentsDate.setLayoutData(data);
 			argumentsDate.setFont(multiArgumentComposite.getFont());
 			argumentsDate.addSelectionListener(new SelectionAdapter() {
-				@Override
 				public void widgetSelected(SelectionEvent e) {
 					storeMultiSelection();
 				}
@@ -2812,7 +2856,6 @@ class MultiMatcherCustomFilterArgumentUI implements ICustomFilterArgumentUI {
 			argumentsBoolean.setFont(multiArgumentComposite.getFont());
 			argumentsBoolean.setItems(new String[] {MultiMatcherLocalization.getLocalMultiMatcherKey(Boolean.TRUE.toString()), MultiMatcherLocalization.getLocalMultiMatcherKey(Boolean.FALSE.toString())});
 			argumentsBoolean.addSelectionListener(new SelectionAdapter() {
-				@Override
 				public void widgetSelected(SelectionEvent e) {
 					storeMultiSelection();
 				}
@@ -2826,7 +2869,7 @@ class MultiMatcherCustomFilterArgumentUI implements ICustomFilterArgumentUI {
 			}
 		}
 		intiantiatedKeyOperatorType = selectedKeyOperatorType;
-
+		
 		if (fContentAssistField != null)
 			fContentAssistField.setEnabled(isUsingRegularExpression);
 
@@ -2881,7 +2924,7 @@ class MultiMatcherCustomFilterArgumentUI implements ICustomFilterArgumentUI {
 	}
 
 
-	private String[] lengthPrefixes = { "", "k", "m", "g" }; //$NON-NLS-1$//$NON-NLS-2$//$NON-NLS-3$//$NON-NLS-4$
+	private String[] lengthPrefixes = {new String(), "k", "m", "g"};    //$NON-NLS-1$//$NON-NLS-2$//$NON-NLS-3$
 
 	// converts "32768" to "32k"
 	private String convertToEditableLength(String string) {
@@ -2903,7 +2946,7 @@ class MultiMatcherCustomFilterArgumentUI implements ICustomFilterArgumentUI {
 		}
 		return Long.toString(value) + lengthPrefixes[lengthPrefixes.length - 1];
 	}
-
+	
 	// converts "32k" to "32768"
 	private String convertFromEditableLength(String string) throws NumberFormatException {
 		if (string.length() == 0)
@@ -2918,16 +2961,16 @@ class MultiMatcherCustomFilterArgumentUI implements ICustomFilterArgumentUI {
 		// seems equivalent to "return string", but it throws an exception if the string doesn't contain a valid number
 		return Long.toString(Long.parseLong(string));
 	}
-
+	
 	private void storeMultiSelection() {
 		if (intiantiatedKeyOperatorType != null) {
 			String selectedKey = MultiMatcherLocalization.getMultiMatcherKey(multiKey.getText());
 			String selectedOperator = MultiMatcherLocalization.getMultiMatcherKey(multiOperator.getText());
-
+	
 			FileInfoAttributesMatcher.Argument argument = new FileInfoAttributesMatcher.Argument();
 			argument.key = selectedKey;
 			argument.operator = selectedOperator;
-
+			
 			if (intiantiatedKeyOperatorType.equals(Date.class) && argumentsDate != null) {
 				Calendar calendar = Calendar.getInstance();
 				calendar.set(argumentsDate.getYear(), argumentsDate.getMonth(), argumentsDate.getDay());
@@ -2966,7 +3009,7 @@ class MultiMatcherCustomFilterArgumentUI implements ICustomFilterArgumentUI {
 	}
 
 	private String[] getMultiMatcherKeys() {
-		ArrayList<String> list = new ArrayList<>();
+		ArrayList list = new ArrayList();
 		list.add(MultiMatcherLocalization.getLocalMultiMatcherKey(FileInfoAttributesMatcher.KEY_NAME));
 		list.add(MultiMatcherLocalization.getLocalMultiMatcherKey(FileInfoAttributesMatcher.KEY_PROPJECT_RELATIVE_PATH));
 		list.add(MultiMatcherLocalization.getLocalMultiMatcherKey(FileInfoAttributesMatcher.KEY_LOCATION));
@@ -2977,10 +3020,12 @@ class MultiMatcherCustomFilterArgumentUI implements ICustomFilterArgumentUI {
 		list.add(MultiMatcherLocalization.getLocalMultiMatcherKey(FileInfoAttributesMatcher.KEY_IS_READONLY));
 		if (!Platform.getOS().equals(Platform.OS_WIN32))
 			list.add(MultiMatcherLocalization.getLocalMultiMatcherKey(FileInfoAttributesMatcher.KEY_IS_SYMLINK));
-		return list.toArray(new String[0]);
+		return (String []) list.toArray(new String[0]);
 	}
 
-	@Override
+	/* (non-Javadoc)
+	 * @see org.eclipse.ui.internal.ide.dialogs.ICustomFilterArgumentUI#selectionChanged()
+	 */
 	public void selectionChanged() {
 	}
 
@@ -2989,17 +3034,16 @@ class MultiMatcherCustomFilterArgumentUI implements ICustomFilterArgumentUI {
 		dialog.updateFinishControls();
 	}
 
-	@Override
 	public String validate() {
 		String message = null;
 		if (intiantiatedKeyOperatorType != null) {
 			String selectedKey = MultiMatcherLocalization.getMultiMatcherKey(multiKey.getText());
 			String selectedOperator = MultiMatcherLocalization.getMultiMatcherKey(multiOperator.getText());
-
+	
 			FileInfoAttributesMatcher.Argument argument = new FileInfoAttributesMatcher.Argument();
 			argument.key = selectedKey;
 			argument.operator = selectedOperator;
-
+			
 			if (intiantiatedKeyOperatorType.equals(Date.class) && argumentsDate != null) {
 			}
 			if (intiantiatedKeyOperatorType.equals(String.class) && arguments != null) {
@@ -3041,13 +3085,15 @@ class MultiMatcherCustomFilterArgumentUI implements ICustomFilterArgumentUI {
 				}
 			}
 			if (intiantiatedKeyOperatorType.equals(Boolean.class) && argumentsBoolean != null) {
-
+				
 			}
 		}
 		return message;
 	}
 
-	@Override
+	/* (non-Javadoc)
+	 * @see org.eclipse.ui.internal.ide.dialogs.ICustomFilterArgumentUI#formatStyledText(org.eclipse.ui.internal.ide.dialogs.FilterCopy, org.eclipse.jface.viewers.StyledString.Styler, org.eclipse.jface.viewers.StyledString.Styler)
+	 */
 	public StyledString formatStyledText(FilterCopy filter,
 			Styler fPlainStyler, Styler fBoldStyler) {
 		return new StyledString(formatMultiMatcherArgument(filter), fPlainStyler);
@@ -3056,13 +3102,13 @@ class MultiMatcherCustomFilterArgumentUI implements ICustomFilterArgumentUI {
 	private String formatMultiMatcherArgument(FilterCopy filter) {
 		String argumentString = (String) filter.getArguments();
 		FileInfoAttributesMatcher.Argument argument = FileInfoAttributesMatcher.decodeArguments(argumentString);
-
-		StringBuilder builder = new StringBuilder();
+		
+		StringBuffer builder = new StringBuffer();
 		builder.append(MultiMatcherLocalization.getLocalMultiMatcherKey(argument.key));
 		builder.append(' ');
 		builder.append(MultiMatcherLocalization.getLocalMultiMatcherKey(argument.operator));
 		builder.append(' ');
-		Class<?> type = FileInfoAttributesMatcher.getTypeForKey(argument.key, argument.operator);
+		Class type = FileInfoAttributesMatcher.getTypeForKey(argument.key, argument.operator);
 		if (type.equals(String.class))
 			builder.append(argument.pattern);
 		if (type.equals(Boolean.class))
@@ -3075,7 +3121,7 @@ class MultiMatcherCustomFilterArgumentUI implements ICustomFilterArgumentUI {
 		}
 		if (type.equals(Date.class))
 			builder.append(DateFormat.getDateInstance().format(new Date(Long.parseLong(argument.pattern))));
-
+		
 		return builder.toString();
 	}
 }
@@ -3103,17 +3149,21 @@ class DefaultCustomFilterArgumentUI implements ICustomFilterArgumentUI {
 		this.filter = filter;
 	}
 
-	@Override
+	/* (non-Javadoc)
+	 * @see org.eclipse.ui.internal.ide.dialogs.ICustomFilterArgumentUI#getID()
+	 */
 	public Object getID() {
-		return ""; //$NON-NLS-1$
+		return new String();
 	}
 
-	@Override
+	/* (non-Javadoc)
+	 * @see org.eclipse.ui.internal.ide.dialogs.ICustomFilterArgumentUI#dispose()
+	 */
 	public void dispose() {
 		Widget list[] = new Widget[] {arguments, argumentsLabel, description};
-		for (Widget widget : list) {
-			if (widget != null) {
-				widget.dispose();
+		for (int i = 0; i < list.length; i++) {
+			if (list[i] != null) {
+				list[i].dispose();
 			}
 		}
 		arguments = null;
@@ -3122,7 +3172,9 @@ class DefaultCustomFilterArgumentUI implements ICustomFilterArgumentUI {
 		description = null;
 	}
 
-	@Override
+	/* (non-Javadoc)
+	 * @see org.eclipse.ui.internal.ide.dialogs.ICustomFilterArgumentUI#create(org.eclipse.swt.widgets.Composite, org.eclipse.swt.graphics.Font)
+	 */
 	public void create(Composite argumentComposite, Font font) {
 		shell = argumentComposite.getShell();
 		GridLayout layout = new GridLayout();
@@ -3141,7 +3193,7 @@ class DefaultCustomFilterArgumentUI implements ICustomFilterArgumentUI {
 			fContentAssistField.setEnabled(filter.getId().equals(REGEX_FILTER_ID));
 		argumentComposite.layout(true);
 	}
-
+	
 	private void createArgumentsArea(Font font, Composite composite) {
 		GridData data;
 		argumentsLabel = addLabel(composite, NLS.bind(
@@ -3151,8 +3203,12 @@ class DefaultCustomFilterArgumentUI implements ICustomFilterArgumentUI {
 		data = new GridData(SWT.FILL, SWT.CENTER, true, false);
 		arguments.setLayoutData(data);
 		arguments.setFont(font);
-		arguments.addModifyListener(e -> FilterTypeUtil.setValue(filter, FilterTypeUtil.ARGUMENTS,
-				arguments.getText()));
+		arguments.addModifyListener(new ModifyListener() {
+			public void modifyText(ModifyEvent e) {
+				FilterTypeUtil.setValue(filter, FilterTypeUtil.ARGUMENTS,
+						arguments.getText());
+			}
+		});
 		if (filter.hasStringArguments())
 			arguments.setText((String) FilterTypeUtil.getValue(filter,
 					FilterTypeUtil.ARGUMENTS));
@@ -3190,7 +3246,9 @@ class DefaultCustomFilterArgumentUI implements ICustomFilterArgumentUI {
 		return label;
 	}
 
-	@Override
+	/* (non-Javadoc)
+	 * @see org.eclipse.ui.internal.ide.dialogs.ICustomFilterArgumentUI#selectionChanged()
+	 */
 	public void selectionChanged() {
 		if (arguments != null)
 			arguments.setEnabled(filter.hasStringArguments());
@@ -3218,21 +3276,22 @@ class DefaultCustomFilterArgumentUI implements ICustomFilterArgumentUI {
 		description.setFont(font);
 	}
 
-	@Override
 	public String validate(){
 		return null;
 	}
 
-	@Override
+	/* (non-Javadoc)
+	 * @see org.eclipse.ui.internal.ide.dialogs.ICustomFilterArgumentUI#formatStyledText(org.eclipse.ui.internal.ide.dialogs.FilterCopy, org.eclipse.jface.viewers.StyledString.Styler, org.eclipse.jface.viewers.StyledString.Styler)
+	 */
 	public StyledString formatStyledText(FilterCopy filter,
 			Styler fPlainStyler, Styler fBoldStyler) {
-		return new StyledString(filter.getArguments() != null ? filter.getArguments().toString() :
-			"", fPlainStyler); //$NON-NLS-1$
+		return new StyledString(filter.getArguments() != null ? filter
+					.getArguments().toString() : new String(), fPlainStyler);
 	}
 }
 
 class MultiMatcherLocalization {
-
+	
 	static String[][] multiMatcherKey = {
 			{FileInfoAttributesMatcher.KEY_NAME, IDEWorkbenchMessages.ResourceFilterPage_multiKeyName},
 			{FileInfoAttributesMatcher.KEY_PROPJECT_RELATIVE_PATH, IDEWorkbenchMessages.ResourceFilterPage_multiKeyProjectRelativePath},
@@ -3252,19 +3311,19 @@ class MultiMatcherLocalization {
 			{Boolean.TRUE.toString(), IDEWorkbenchMessages.ResourceFilterPage_true},
 			{Boolean.FALSE.toString(), IDEWorkbenchMessages.ResourceFilterPage_false}
 	};
-
+	
 	static public String getLocalMultiMatcherKey(String key) {
-		for (String[] matcherKey : multiMatcherKey) {
-			if (matcherKey[0].equals(key))
-				return matcherKey[1];
+		for (int i = 0; i < multiMatcherKey.length; i++) {
+			if (multiMatcherKey[i][0].equals(key))
+				return multiMatcherKey[i][1];
 		}
 		return null;
 	}
-
+	
 	static public String getMultiMatcherKey(String local) {
-		for (String[] matcherKey : multiMatcherKey) {
-			if (matcherKey[1].equals(local))
-				return matcherKey[0];
+		for (int i = 0; i < multiMatcherKey.length; i++) {
+			if (multiMatcherKey[i][1].equals(local))
+				return multiMatcherKey[i][0];
 		}
 		return null;
 	}
