@@ -1,5 +1,5 @@
 /*******************************************************************************
- * Copyright (c) 2004, 2015 IBM Corporation and others.
+ * Copyright (c) 2004, 2006 IBM Corporation and others.
  * All rights reserved. This program and the accompanying materials
  * are made available under the terms of the Eclipse Public License v1.0
  * which accompanies this distribution, and is available at
@@ -17,32 +17,32 @@ package org.eclipse.ui.internal;
  */
 public class IntModel extends Model {
     public IntModel(int initialValue) {
-		super(Integer.valueOf(initialValue));
+        super(new Integer(initialValue));
     }
 
     /**
      * Sets the value of the integer and notifies all
      * change listeners except for the one that caused the change.
-     *
+     * 
      * @param newValue the new value of the integer
      */
     public void set(int newValue, IChangeListener source) {
-		setState(Integer.valueOf(newValue), source);
+        setState(new Integer(newValue), source);
     }
 
     /**
      * Sets the value of the integer and notifies all change listeners
      * of the change.
-     *
+     * 
      * @param newValue the new value of the integer
      */
     public void set(int newValue) {
-		setState(Integer.valueOf(newValue), null);
+        setState(new Integer(newValue), null);
     }
 
     /**
      * Returns the value of the integer.
-     *
+     * 
      * @return the value of the integer
      */
     public int get() {
