@@ -1,5 +1,5 @@
 /*******************************************************************************
- * Copyright (c) 2000, 2015 IBM Corporation and others.
+ * Copyright (c) 2000, 2011 IBM Corporation and others.
  * All rights reserved. This program and the accompanying materials
  * are made available under the terms of the Eclipse Public License v1.0
  * which accompanies this distribution, and is available at
@@ -9,8 +9,6 @@
  *     IBM Corporation - initial API and implementation
  *******************************************************************************/
 package org.eclipse.ui.internal.dialogs;
-
-import static org.eclipse.swt.events.SelectionListener.widgetSelectedAdapter;
 
 import com.ibm.icu.text.Collator;
 import java.util.ArrayList;
@@ -25,6 +23,8 @@ import org.eclipse.jface.dialogs.ProgressMonitorDialog;
 import org.eclipse.jface.resource.ImageDescriptor;
 import org.eclipse.osgi.util.TextProcessor;
 import org.eclipse.swt.SWT;
+import org.eclipse.swt.events.DisposeEvent;
+import org.eclipse.swt.events.DisposeListener;
 import org.eclipse.swt.events.SelectionAdapter;
 import org.eclipse.swt.events.SelectionEvent;
 import org.eclipse.swt.events.SelectionListener;
@@ -111,28 +111,30 @@ public class WorkbenchEditorsDialog extends SelectionDialog {
 
     private static final String COLUMNS = "columns"; //$NON-NLS-1$
 
-    private SelectionListener headerListener = widgetSelectedAdapter(e -> {
-		TableColumn column = (TableColumn) e.widget;
-		int index = editorsTable.indexOf(column);
-	    if (index == sortColumn) {
-			reverse = !reverse;
-		} else {
-			sortColumn = index;
-		}
-		editorsTable.setSortDirection(reverse ? SWT.DOWN : SWT.UP);
-		editorsTable.setSortColumn(column);
-	    updateItems();
-	});
+    private SelectionListener headerListener = new SelectionAdapter() {
+        public void widgetSelected(SelectionEvent e) {
+			TableColumn column = (TableColumn) e.widget;
+			int index = editorsTable.indexOf(column);
+            if (index == sortColumn) {
+				reverse = !reverse;
+			} else {
+				sortColumn = index;
+			}
+			editorsTable.setSortDirection(reverse ? SWT.DOWN : SWT.UP);
+			editorsTable.setSortColumn(column);
+            updateItems();
+        }
+    };
 
     /**
      * Constructor for WorkbenchEditorsDialog.
-     *
+     * 
      * @param window the window
      */
     public WorkbenchEditorsDialog(IWorkbenchWindow window) {
         super(window.getShell());
         this.window = window;
-        setTitle(WorkbenchMessages.WorkbenchEditorsDialog_title);
+        setTitle(WorkbenchMessages.WorkbenchEditorsDialog_title); 
 
         IDialogSettings s = getDialogSettings();
         if (s.get(ALLPERSP) == null) {
@@ -143,31 +145,36 @@ public class WorkbenchEditorsDialog extends SelectionDialog {
             String[] array = s.getArray(BOUNDS);
             if (array != null) {
                 bounds = new Rectangle(0, 0, 0, 0);
-                bounds.x = Integer.valueOf(array[0]).intValue();
-                bounds.y = Integer.valueOf(array[1]).intValue();
-                bounds.width = Integer.valueOf(array[2]).intValue();
-                bounds.height = Integer.valueOf(array[3]).intValue();
+                bounds.x = new Integer(array[0]).intValue();
+                bounds.y = new Integer(array[1]).intValue();
+                bounds.width = new Integer(array[2]).intValue();
+                bounds.height = new Integer(array[3]).intValue();
             }
             array = s.getArray(COLUMNS);
             if (array != null) {
                 columnsWidth = new int[array.length];
                 for (int i = 0; i < columnsWidth.length; i++) {
-					columnsWidth[i] = Integer.valueOf(array[i]).intValue();
+					columnsWidth[i] = new Integer(array[i]).intValue();
 				}
             }
         }
 		setShellStyle(getShellStyle() | SWT.SHEET);
     }
 
-    @Override
-	protected void configureShell(Shell newShell) {
+    /* (non-Javadoc)
+     * Method declared on Window.
+     */
+    protected void configureShell(Shell newShell) {
         super.configureShell(newShell);
         PlatformUI.getWorkbench().getHelpSystem().setHelp(newShell,
 				IWorkbenchHelpContextIds.WORKBENCH_EDITORS_DIALOG);
     }
 
-    @Override
-	protected void createButtonsForButtonBar(Composite parent) {
+    /*
+     *  (non-Javadoc)
+     * @see org.eclipse.jface.dialogs.Dialog#createButtonsForButtonBar(org.eclipse.swt.widgets.Composite)
+     */
+    protected void createButtonsForButtonBar(Composite parent) {
         // Typically we would use the parent's createButtonsForButtonBar.
         // However, we only want a Cancel button and not an OK button.  The
         // OK button will be used later (in createDialogArea) to activate
@@ -185,8 +192,7 @@ public class WorkbenchEditorsDialog extends SelectionDialog {
      * Initialize the dialog bounds with the bounds saved
      * from the settings.
      */
-    @Override
-	protected void initializeBounds() {
+    protected void initializeBounds() {
         if (bounds != null) {
             getShell().setBounds(bounds);
         } else {
@@ -198,8 +204,7 @@ public class WorkbenchEditorsDialog extends SelectionDialog {
      * Creates the contents of this dialog, initializes the
      * listener and the update thread.
      */
-    @Override
-	protected Control createDialogArea(Composite parent) {
+    protected Control createDialogArea(Composite parent) {
 
         initializeDialogUnits(parent);
 
@@ -219,7 +224,7 @@ public class WorkbenchEditorsDialog extends SelectionDialog {
 
         //Label over the table
         Label l = new Label(dialogArea, SWT.NONE);
-        l.setText(WorkbenchMessages.WorkbenchEditorsDialog_label);
+        l.setText(WorkbenchMessages.WorkbenchEditorsDialog_label); 
         l.setFont(font);
         l.setLayoutData(new CellData().align(SWT.FILL, SWT.CENTER));
         //Table showing the editors name, full path and perspective
@@ -237,14 +242,12 @@ public class WorkbenchEditorsDialog extends SelectionDialog {
 
         editorsTable.setLayoutData(tableData);
         editorsTable.setLayout(new Layout() {
-            @Override
-			protected Point computeSize(Composite composite, int wHint,
+            protected Point computeSize(Composite composite, int wHint,
                     int hHint, boolean flushCache) {
                 return new Point(width, height);
             }
 
-            @Override
-			protected void layout(Composite composite, boolean flushCache) {
+            protected void layout(Composite composite, boolean flushCache) {
                 TableColumn c[] = editorsTable.getColumns();
                 if (columnsWidth == null) {
                     int w = editorsTable.getClientArea().width;
@@ -265,7 +268,7 @@ public class WorkbenchEditorsDialog extends SelectionDialog {
         //Full path column
         tc = new TableColumn(editorsTable, SWT.NONE);
         tc.setResizable(true);
-        tc.setText(WorkbenchMessages.WorkbenchEditorsDialog_path);
+        tc.setText(WorkbenchMessages.WorkbenchEditorsDialog_path); 
         tc.addSelectionListener(headerListener);
 
         // A composite for selection option buttons
@@ -278,31 +281,38 @@ public class WorkbenchEditorsDialog extends SelectionDialog {
 
         //Select clean editors button
         selectClean = new Button(selectionButtons, SWT.PUSH);
-        selectClean.setText(WorkbenchMessages.WorkbenchEditorsDialog_selectClean);
-        selectClean.addSelectionListener(widgetSelectedAdapter(e -> {
-		    editorsTable.setSelection(selectClean(editorsTable.getItems()));
-		    updateButtons();
-		}));
+        selectClean.setText(WorkbenchMessages.WorkbenchEditorsDialog_selectClean); 
+        selectClean.addSelectionListener(new SelectionAdapter() {
+            public void widgetSelected(SelectionEvent e) {
+                editorsTable.setSelection(selectClean(editorsTable.getItems()));
+                updateButtons();
+            }
+        });
         selectClean.setFont(font);
         setButtonLayoutData(selectClean);
 
         //Invert selection button
         invertSelection = new Button(selectionButtons, SWT.PUSH);
-        invertSelection.setText(WorkbenchMessages.WorkbenchEditorsDialog_invertSelection);
-        invertSelection.addSelectionListener(widgetSelectedAdapter(e -> {
-			editorsTable.setSelection(invertedSelection(editorsTable.getItems(), editorsTable.getSelection()));
-		    updateButtons();
-		}));
+        invertSelection.setText(WorkbenchMessages.WorkbenchEditorsDialog_invertSelection); 
+        invertSelection.addSelectionListener(new SelectionAdapter() {
+            public void widgetSelected(SelectionEvent e) {
+                editorsTable.setSelection(invertedSelection(editorsTable
+                        .getItems(), editorsTable.getSelection()));
+                updateButtons();
+            }
+        });
         invertSelection.setFont(font);
         setButtonLayoutData(invertSelection);
 
         //Select all button
         allSelection = new Button(selectionButtons, SWT.PUSH);
-        allSelection.setText(WorkbenchMessages.WorkbenchEditorsDialog_allSelection);
-        allSelection.addSelectionListener(widgetSelectedAdapter(e -> {
-		    editorsTable.setSelection(editorsTable.getItems());
-		    updateButtons();
-		}));
+        allSelection.setText(WorkbenchMessages.WorkbenchEditorsDialog_allSelection); 
+        allSelection.addSelectionListener(new SelectionAdapter() {
+            public void widgetSelected(SelectionEvent e) {
+                editorsTable.setSelection(editorsTable.getItems());
+                updateButtons();
+            }
+        });
         allSelection.setFont(font);
         setButtonLayoutData(allSelection);
 
@@ -315,20 +325,28 @@ public class WorkbenchEditorsDialog extends SelectionDialog {
         actionButtons.setLayout(actLayout);
 
         // Activate selected editor button
-        createButton(actionButtons, IDialogConstants.OK_ID, WorkbenchMessages.WorkbenchEditorsDialog_activate,
+        createButton(actionButtons, IDialogConstants.OK_ID, WorkbenchMessages.WorkbenchEditorsDialog_activate, 
                 true);
 
         //Close selected editors button
         closeSelected = new Button(actionButtons, SWT.PUSH);
         closeSelected.setText(WorkbenchMessages.WorkbenchEditorsDialog_closeSelected);
-        closeSelected.addSelectionListener(widgetSelectedAdapter(e -> closeItems(editorsTable.getSelection())));
+        closeSelected.addSelectionListener(new SelectionAdapter() {
+            public void widgetSelected(SelectionEvent e) {
+                closeItems(editorsTable.getSelection());
+            }
+        });
         closeSelected.setFont(font);
         setButtonLayoutData(closeSelected);
 
         //Save selected editors button
         saveSelected = new Button(actionButtons, SWT.PUSH);
-        saveSelected.setText(WorkbenchMessages.WorkbenchEditorsDialog_saveSelected);
-        saveSelected.addSelectionListener(widgetSelectedAdapter(e -> saveItems(editorsTable.getSelection())));
+        saveSelected.setText(WorkbenchMessages.WorkbenchEditorsDialog_saveSelected); 
+        saveSelected.addSelectionListener(new SelectionAdapter() {
+            public void widgetSelected(SelectionEvent e) {
+                saveItems(editorsTable.getSelection());
+            }
+        });
         saveSelected.setFont(font);
         setButtonLayoutData(saveSelected);
 
@@ -338,37 +356,39 @@ public class WorkbenchEditorsDialog extends SelectionDialog {
         showAllPerspButton.setSelection(showAllPersp);
         showAllPerspButton.setFont(font);
         setButtonLayoutData(showAllPerspButton);
-        showAllPerspButton.addSelectionListener(widgetSelectedAdapter(e -> {
-		    showAllPersp = showAllPerspButton.getSelection();
-		    updateItems();
-		}));
+        showAllPerspButton.addSelectionListener(new SelectionAdapter() {
+            public void widgetSelected(SelectionEvent e) {
+                showAllPersp = showAllPerspButton.getSelection();
+                updateItems();
+            }
+        });
         //Create the items and update buttons state
         updateItems();
         updateButtons();
 
         editorsTable.addSelectionListener(new SelectionAdapter() {
-            @Override
-			public void widgetSelected(SelectionEvent e) {
+            public void widgetSelected(SelectionEvent e) {
                 updateButtons();
             }
 
-            @Override
-			public void widgetDefaultSelected(SelectionEvent e) {
+            public void widgetDefaultSelected(SelectionEvent e) {
                 okPressed();
             }
         });
-        editorsTable.addDisposeListener(e -> {
-		    for (Iterator images1 = imageCache.values().iterator(); images1
-		            .hasNext();) {
-		        Image i1 = (Image) images1.next();
-		        i1.dispose();
-		    }
-		    for (Iterator images2 = disabledImageCache.values().iterator(); images2
-		            .hasNext();) {
-		        Image i2 = (Image) images2.next();
-		        i2.dispose();
-		    }
-		});
+        editorsTable.addDisposeListener(new DisposeListener() {
+            public void widgetDisposed(DisposeEvent e) {
+                for (Iterator images = imageCache.values().iterator(); images
+                        .hasNext();) {
+                    Image i = (Image) images.next();
+                    i.dispose();
+                }
+                for (Iterator images = disabledImageCache.values().iterator(); images
+                        .hasNext();) {
+                    Image i = (Image) images.next();
+                    i.dispose();
+                }
+            }
+        });
         editorsTable.setFocus();
         applyDialogFont(dialogArea);
         return dialogArea;
@@ -380,8 +400,8 @@ public class WorkbenchEditorsDialog extends SelectionDialog {
     private void updateButtons() {
         TableItem selectedItems[] = editorsTable.getSelection();
         boolean hasDirty = false;
-        for (TableItem selectedItem : selectedItems) {
-            Adapter editor = (Adapter) selectedItem.getData();
+        for (int i = 0; i < selectedItems.length; i++) {
+            Adapter editor = (Adapter) selectedItems[i].getData();
             if (editor.isDirty()) {
                 hasDirty = true;
                 break;
@@ -391,8 +411,8 @@ public class WorkbenchEditorsDialog extends SelectionDialog {
 
         TableItem allItems[] = editorsTable.getItems();
         boolean hasClean = false;
-        for (TableItem tableItem : allItems) {
-            Adapter editor = (Adapter) tableItem.getData();
+        for (int i = 0; i < allItems.length; i++) {
+            Adapter editor = (Adapter) allItems[i].getData();
             if (!editor.isDirty()) {
                 hasClean = true;
                 break;
@@ -415,11 +435,11 @@ public class WorkbenchEditorsDialog extends SelectionDialog {
         if (items.length == 0) {
 			return;
 		}
-
+        
         // collect all instantiated editors that have been selected
 		List selectedEditors = new ArrayList();
-        for (TableItem item : items) {
-            Adapter e = (Adapter) item.getData();
+        for (int i = 0; i < items.length; i++) {
+            Adapter e = (Adapter) items[i].getData();
 			if (e.editorRef != null) {
 				IWorkbenchPart part = e.editorRef.getPart(false);
 				if (part != null) {
@@ -433,8 +453,8 @@ public class WorkbenchEditorsDialog extends SelectionDialog {
 		// prompt for save
 		if (saveablesList.preCloseParts(selectedEditors, true, this, window) != null) {
 			// close all editors
-			for (TableItem item : items) {
-				Adapter e = (Adapter) item.getData();
+			for (int i = 0; i < items.length; i++) {
+				Adapter e = (Adapter) items[i].getData();
 				e.close();
 			}
 			// update the list
@@ -451,10 +471,10 @@ public class WorkbenchEditorsDialog extends SelectionDialog {
 		}
         ProgressMonitorDialog pmd = new ProgressMonitorJobsDialog(getShell());
         pmd.open();
-        for (TableItem item : items) {
-            Adapter editor = (Adapter) item.getData();
+        for (int i = 0; i < items.length; i++) {
+            Adapter editor = (Adapter) items[i].getData();
             editor.save(pmd.getProgressMonitor());
-            updateItem(item, editor);
+            updateItem(items[i], editor);
         }
         pmd.close();
         updateItems();
@@ -468,10 +488,10 @@ public class WorkbenchEditorsDialog extends SelectionDialog {
 			return new TableItem[0];
 		}
         ArrayList cleanItems = new ArrayList(items.length);
-        for (TableItem item : items) {
-            Adapter editor = (Adapter) item.getData();
+        for (int i = 0; i < items.length; i++) {
+            Adapter editor = (Adapter) items[i].getData();
             if (!editor.isDirty()) {
-				cleanItems.add(item);
+				cleanItems.add(items[i]);
 			}
         }
         TableItem result[] = new TableItem[cleanItems.size()];
@@ -517,9 +537,10 @@ public class WorkbenchEditorsDialog extends SelectionDialog {
      * Adds all editors to elements
      */
     private void updateEditors(IWorkbenchPage[] pages) {
-        for (IWorkbenchPage page : pages) {
-			for (IEditorReference editor : page.getEditorReferences()) {
-                elements.add(new Adapter(editor));
+        for (int j = 0; j < pages.length; j++) {
+            IEditorReference editors[] = pages[j].getEditorReferences();
+            for (int k = 0; k < editors.length; k++) {
+                elements.add(new Adapter(editors[k]));
             }
         }
     }
@@ -534,13 +555,15 @@ public class WorkbenchEditorsDialog extends SelectionDialog {
 		for (int i = 0; i < selectedItems.length; i++) {
 			selectedAdapters[i] = (Adapter) selectedItems[i].getData();
 		}
-
+		
 		// remove all the items
         editorsTable.removeAll();
         elements = new ArrayList();
         if (showAllPersp) {
-			for (IWorkbenchWindow workbenchWindow : window.getWorkbench().getWorkbenchWindows()) {
-				updateEditors(workbenchWindow.getPages());
+            IWorkbenchWindow windows[] = window.getWorkbench()
+                    .getWorkbenchWindows();
+            for (int i = 0; i < windows.length; i++) {
+				updateEditors(windows[i].getPages());
 			}
         } else {
             IWorkbenchPage page = window.getActivePage();
@@ -559,8 +582,8 @@ public class WorkbenchEditorsDialog extends SelectionDialog {
             updateItem(item, e);
 
             // try to match this item's editor to one that was previously selected
-			for (Adapter selectedAdapter : selectedAdapters) {
-				if (selectedAdapter.editorRef == e.editorRef) {
+			for (int i = 0; i < selectedAdapters.length; i++) {
+				if (selectedAdapters[i].editorRef == e.editorRef) {
 					selection.add(item);
 				}
 			}
@@ -590,8 +613,7 @@ public class WorkbenchEditorsDialog extends SelectionDialog {
     /**
      * The user has selected a resource and the dialog is closing.
      */
-    @Override
-	protected void okPressed() {
+    protected void okPressed() {
         TableItem items[] = editorsTable.getSelection();
         if (items.length != 1) {
             super.okPressed();
@@ -606,7 +628,6 @@ public class WorkbenchEditorsDialog extends SelectionDialog {
         selection.activate();
     }
 
-	@Override
 	public boolean close() {
 		saveDialogSettings();
 		return super.close();
@@ -733,7 +754,7 @@ public class WorkbenchEditorsDialog extends SelectionDialog {
                             .getEditorRegistry();
                     imageDesc = registry.getImageDescriptor(input.getName());
 					//TODO: how can this honour content types?  Guessing at the content type perhaps?
-
+					
                     if (imageDesc == null) {
                         // @issue what should be the default image?
                         // image = registry.getDefaultEditor().getImageDescriptor();
@@ -777,8 +798,7 @@ public class WorkbenchEditorsDialog extends SelectionDialog {
             }
         }
 
-        @Override
-		public int compareTo(Object another) {
+        public int compareTo(Object another) {
             Adapter adapter = (Adapter) another;
             int result = collator.compare(getText()[sortColumn], adapter
                     .getText()[sortColumn]);
