@@ -1,5 +1,5 @@
 /*******************************************************************************
- * Copyright (c) 2009, 2016 IBM Corporation and others.
+ * Copyright (c) 2009, 2010 IBM Corporation and others.
  * All rights reserved. This program and the accompanying materials
  * are made available under the terms of the Eclipse Public License v1.0
  * which accompanies this distribution, and is available at
@@ -7,17 +7,12 @@
  *
  * Contributors:
  *     IBM Corporation - initial API and implementation
- *     Patrik Suzzi <psuzzi@gmail.com> - Bug 473973
- *     Friederike Schertel <friederike@schertel.org> - Bug 478336
  ******************************************************************************/
 package org.eclipse.ui.internal.statushandlers;
-
-import static org.eclipse.swt.events.SelectionListener.widgetSelectedAdapter;
 
 import java.util.Collection;
 import java.util.Iterator;
 import java.util.Map;
-import org.eclipse.core.runtime.Adapters;
 import org.eclipse.core.runtime.CoreException;
 import org.eclipse.core.runtime.jobs.Job;
 import org.eclipse.jface.action.IAction;
@@ -29,8 +24,11 @@ import org.eclipse.jface.dialogs.MessageDialogWithToggle;
 import org.eclipse.jface.dialogs.TrayDialog;
 import org.eclipse.jface.preference.IPreferenceStore;
 import org.eclipse.jface.viewers.IContentProvider;
+import org.eclipse.jface.viewers.ISelection;
+import org.eclipse.jface.viewers.ISelectionChangedListener;
 import org.eclipse.jface.viewers.IStructuredContentProvider;
 import org.eclipse.jface.viewers.IStructuredSelection;
+import org.eclipse.jface.viewers.SelectionChangedEvent;
 import org.eclipse.jface.viewers.StructuredSelection;
 import org.eclipse.jface.viewers.TableViewer;
 import org.eclipse.jface.viewers.Viewer;
@@ -38,6 +36,8 @@ import org.eclipse.jface.window.Window;
 import org.eclipse.swt.SWT;
 import org.eclipse.swt.events.MouseEvent;
 import org.eclipse.swt.events.MouseListener;
+import org.eclipse.swt.events.SelectionAdapter;
+import org.eclipse.swt.events.SelectionEvent;
 import org.eclipse.swt.graphics.Image;
 import org.eclipse.swt.graphics.Point;
 import org.eclipse.swt.graphics.Rectangle;
@@ -46,8 +46,10 @@ import org.eclipse.swt.layout.GridLayout;
 import org.eclipse.swt.widgets.Button;
 import org.eclipse.swt.widgets.Composite;
 import org.eclipse.swt.widgets.Control;
+import org.eclipse.swt.widgets.Event;
 import org.eclipse.swt.widgets.Label;
 import org.eclipse.swt.widgets.Link;
+import org.eclipse.swt.widgets.Listener;
 import org.eclipse.swt.widgets.Shell;
 import org.eclipse.ui.internal.Workbench;
 import org.eclipse.ui.internal.WorkbenchMessages;
@@ -64,7 +66,7 @@ import org.eclipse.ui.views.IViewDescriptor;
  * Parent window actually does not use its Shell to build dialog on. The
  * window passes the shell to the InternalDialog, and it can do switching
  * modality and recreate the window silently.
- *
+ * 
  * @since 3.4
  */
 public class InternalDialog extends TrayDialog {
@@ -151,13 +153,15 @@ public class InternalDialog extends TrayDialog {
 	public InternalDialog(final Map dialogState, boolean modal) {
 		super(ProgressManagerUtil.getDefaultParent());
 		this.dialogState = dialogState;
-		supportTray = new SupportTray(dialogState, event -> {
-			dialogState.put(IStatusDialogConstants.TRAY_OPENED,
-					Boolean.FALSE);
-			// close the tray
-			closeTray();
-			// set focus back to shell
-			getShell().setFocus();
+		supportTray = new SupportTray(dialogState, new Listener() {
+			public void handleEvent(Event event) {
+				dialogState.put(IStatusDialogConstants.TRAY_OPENED,
+						Boolean.FALSE);
+				// close the tray
+				closeTray();
+				// set focus back to shell
+				getShell().setFocus();
+			}
 		});
 		detailsManager = new DetailsAreaManager(dialogState);
 		setShellStyle(SWT.RESIZE | SWT.MAX | SWT.MIN | getShellStyle());
@@ -168,7 +172,6 @@ public class InternalDialog extends TrayDialog {
 		}
 	}
 
-	@Override
 	protected void buttonPressed(int id) {
 		if (id == GOTO_ACTION_ID) {
 			IAction gotoAction = getGotoAction();
@@ -181,23 +184,24 @@ public class InternalDialog extends TrayDialog {
 		}
 		if (id == IDialogConstants.DETAILS_ID) {
 			// was the details button pressed?
-			dialogState.put(IStatusDialogConstants.DETAILS_OPENED, Boolean.valueOf(
+			dialogState.put(IStatusDialogConstants.DETAILS_OPENED, new Boolean(
 					toggleDetailsArea()));
 		} else {
 			super.buttonPressed(id);
 		}
 	}
 
-	@Override
+	/*
+	 * (non-Javadoc) Method declared in Window.
+	 */
 	final protected void configureShell(Shell shell) {
 		super.configureShell(shell);
 		shell.setText(getString(IStatusDialogConstants.TITLE));
 	}
-
+	
 	/**
-	 * Status dialog button should be aligned SWT.END.
+	 * Status dialog button should be aligned SWT.END. 
 	 */
-	@Override
 	protected void setButtonLayoutData(Button button) {
 		GridData data = new GridData(SWT.END, SWT.CENTER, false, false);
 		int widthHint = convertHorizontalDLUsToPixels(IDialogConstants.BUTTON_WIDTH);
@@ -206,7 +210,11 @@ public class InternalDialog extends TrayDialog {
 		button.setLayoutData(data);
 	}
 
-	@Override
+	/*
+	 * (non-Javadoc)
+	 * 
+	 * @see org.eclipse.jface.dialogs.Dialog#createDialogArea(org.eclipse.swt.widgets.Composite)
+	 */
 	protected Control createDialogArea(Composite parent) {
 		createTitleArea(parent);
 		createListArea(parent);
@@ -215,14 +223,18 @@ public class InternalDialog extends TrayDialog {
 		return parent;
 	}
 
-	@Override
+	/*
+	 * (non-Javadoc)
+	 * 
+	 * @see org.eclipse.jface.dialogs.Dialog#isResizable()
+	 */
 	protected boolean isResizable() {
 		return true;
 	}
 
 	/**
 	 * Creates title area.
-	 *
+	 * 
 	 * @param parent
 	 *            A composite on which the title area should be created.
 	 */
@@ -262,7 +274,7 @@ public class InternalDialog extends TrayDialog {
 	/**
 	 * Create an area which allows the user to view the status if only one
 	 * is created or to select one of reported statuses when there are many.
-	 *
+	 * 
 	 * @param parent
 	 *            the parent composite on which all components should be
 	 *            placed.
@@ -282,9 +294,9 @@ public class InternalDialog extends TrayDialog {
 
 	/**
 	 * This function checks if the dialog is modal.
-	 *
+	 * 
 	 * @return true if the dialog is modal, false otherwise
-	 *
+	 * 
 	 */
 	public boolean isModal() {
 		return ((getShellStyle() & SWT.APPLICATION_MODAL) == SWT.APPLICATION_MODAL);
@@ -305,7 +317,11 @@ public class InternalDialog extends TrayDialog {
 		this.supportTray = supportTray;
 	}
 
-	@Override
+	/*
+	 * (non-Javadoc)
+	 * 
+	 * @see org.eclipse.jface.window.Window#open()
+	 */
 	public int open() {
 		boolean modalitySwitch = getBooleanValue(IStatusDialogConstants.MODALITY_SWITCH);
 		int result = super.open();
@@ -325,7 +341,9 @@ public class InternalDialog extends TrayDialog {
 		return result;
 	}
 
-	@Override
+	/* (non-Javadoc)
+	 * @see org.eclipse.jface.dialogs.TrayDialog#closeTray()
+	 */
 	public void closeTray() throws IllegalStateException {
 		if (getTray() != null) {
 			super.closeTray();
@@ -339,7 +357,7 @@ public class InternalDialog extends TrayDialog {
 					&& !getBooleanValue(IStatusDialogConstants.TRAY_OPENED));
 		}
 	}
-
+	
 	/**
 	 * Method which should be invoked when new errors become available for
 	 * display.
@@ -363,9 +381,6 @@ public class InternalDialog extends TrayDialog {
 	}
 
 	void refreshDialogSize() {
-		if (dialogArea == null || dialogArea.isDisposed()) {
-			return;
-		}
 		Point newSize = getShell().computeSize(SWT.DEFAULT, SWT.DEFAULT);
 		getShell().setSize(newSize);
 	}
@@ -399,7 +414,7 @@ public class InternalDialog extends TrayDialog {
 	/**
 	 * Toggles the unfolding of the details area. This is triggered by the
 	 * user pressing the details button.
-	 *
+	 * 
 	 */
 	private boolean toggleDetailsArea() {
 		boolean opened = false;
@@ -449,7 +464,6 @@ public class InternalDialog extends TrayDialog {
 	/**
 	 * This method should initialize the dialog bounds.
 	 */
-	@Override
 	protected void initializeBounds() {
 		super.initializeBounds();
 		refreshDialogSize();
@@ -459,8 +473,15 @@ public class InternalDialog extends TrayDialog {
 		}
 	}
 
-	@Override
+	/*
+	 * (non-Javadoc)
+	 * 
+	 * @see
+	 * org.eclipse.jface.dialogs.Dialog#getInitialLocation(org.eclipse.swt.graphics
+	 * .Point)
+	 */
 	public Point getInitialLocation(Point initialSize) {
+		// TODO Auto-generated method stub
 		return super.getInitialLocation(initialSize);
 	}
 
@@ -481,7 +502,7 @@ public class InternalDialog extends TrayDialog {
 	/**
 	 * This method creates display area for {@link StatusAdapter}s when more
 	 * is available.
-	 *
+	 * 
 	 * @param parent
 	 *            A parent composite on which all components should be
 	 *            placed.
@@ -505,18 +526,20 @@ public class InternalDialog extends TrayDialog {
 		control.setLayoutData(data);
 		initContentProvider();
 		initLabelProvider();
-		statusListViewer.addPostSelectionChangedListener(event -> {
-			handleSelectionChange();
-			if ((getTray() == null) && getBooleanValue(IStatusDialogConstants.TRAY_OPENED)
-					&& providesSupport()) {
-				silentTrayOpen();
-				return;
+		statusListViewer.addPostSelectionChangedListener(new ISelectionChangedListener() {
+			public void selectionChanged(SelectionChangedEvent event) {
+				handleSelectionChange();
+				if ((getTray() == null) && getBooleanValue(IStatusDialogConstants.TRAY_OPENED)
+						&& providesSupport()) {
+					silentTrayOpen();
+					return;
+				}
+				if ((getTray() != null) && !providesSupport()) {
+					silentTrayClose();
+					return;
+				}
+				supportTray.selectionChanged(event);
 			}
-			if ((getTray() != null) && !providesSupport()) {
-				silentTrayClose();
-				return;
-			}
-			supportTray.selectionChanged(event);
 		});
 		Dialog.applyDialogFont(parent);
 	}
@@ -581,7 +604,6 @@ public class InternalDialog extends TrayDialog {
 	 * This method creates button bar that is available on the bottom of the
 	 * dialog.
 	 */
-	@Override
 	protected Control createButtonBar(Composite parent) {
 		Composite composite = new Composite(parent, SWT.NONE);
 		GridLayout layout = new GridLayout();
@@ -603,7 +625,6 @@ public class InternalDialog extends TrayDialog {
 	/**
 	 * This method creates buttons that are placed on button bar.
 	 */
-	@Override
 	protected void createButtonsForButtonBar(Composite parent) {
 		IAction gotoAction = getGotoAction();
 		String text = null;
@@ -626,9 +647,9 @@ public class InternalDialog extends TrayDialog {
 	/**
 	 * This method creates additional display area for {@link StatusAdapter}
 	 * when only one is available.
-	 *
+	 * 
 	 * It creates one label on a composite currently for secondary message.
-	 *
+	 * 
 	 * @param parent
 	 *            A parent composite on which all components should be
 	 *            placed.
@@ -656,16 +677,13 @@ public class InternalDialog extends TrayDialog {
 				.getColumnText(getCurrentStatusAdapter(), 0));
 
 		singleStatusLabel.addMouseListener(new MouseListener() {
-			@Override
 			public void mouseDoubleClick(MouseEvent e) {
 			}
 
-			@Override
 			public void mouseDown(MouseEvent e) {
 				showDetailsArea();
 			}
 
-			@Override
 			public void mouseUp(MouseEvent e) {
 			}
 		});
@@ -675,7 +693,6 @@ public class InternalDialog extends TrayDialog {
 	/**
 	 * This method closes the dialog.
 	 */
-	@Override
 	public boolean close() {
 		boolean modalitySwitch = getBooleanValue(IStatusDialogConstants.MODALITY_SWITCH);
 		if (detailsManager.isOpen()) {
@@ -699,7 +716,7 @@ public class InternalDialog extends TrayDialog {
 
 	/**
 	 * Hide the button if hide is <code>true</code>.
-	 *
+	 * 
 	 * @param button
 	 * @param hide
 	 */
@@ -786,7 +803,6 @@ public class InternalDialog extends TrayDialog {
 	/**
 	 * Opens the dialog tray (support area at the right side of the dialog)
 	 */
-	@Override
 	public void openTray(DialogTray tray) throws IllegalStateException,
 			UnsupportedOperationException {
 		if (launchTrayLink != null && !launchTrayLink.isDisposed()) {
@@ -835,18 +851,35 @@ public class InternalDialog extends TrayDialog {
 	 */
 	private void initContentProvider() {
 		IContentProvider provider = new IStructuredContentProvider() {
-			@Override
+			/*
+			 * (non-Javadoc)
+			 * 
+			 * @see org.eclipse.jface.viewers.IContentProvider#dispose()
+			 */
 			public void dispose() {
 				// Nothing of interest here
 			}
 
-			@Override
+			/*
+			 * (non-Javadoc)
+			 * 
+			 * @see
+			 * org.eclipse.jface.viewers.IStructuredContentProvider#getElements
+			 * (java.lang.Object)
+			 */
 			public Object[] getElements(Object inputElement) {
 				return ((Collection) dialogState
 						.get(IStatusDialogConstants.STATUS_ADAPTERS)).toArray();
 			}
 
-			@Override
+			/*
+			 * (non-Javadoc)
+			 * 
+			 * @see
+			 * org.eclipse.jface.viewers.IContentProvider#inputChanged(org
+			 * .eclipse.jface.viewers.Viewer, java.lang.Object,
+			 * java.lang.Object)
+			 */
 			public void inputChanged(Viewer viewer, Object oldInput,
 					Object newInput) {
 				if (newInput != null) {
@@ -869,7 +902,7 @@ public class InternalDialog extends TrayDialog {
 	 * <code>GridLayout</code> and the number of columns in this layout is
 	 * incremented. Subclasses may override.
 	 * </p>
-	 *
+	 * 
 	 * @param parent
 	 *            A parent composite on which all components should be
 	 *            placed.
@@ -880,7 +913,6 @@ public class InternalDialog extends TrayDialog {
 
 			// the composite should be as small as possible when there is no
 			// additional controls on it
-			@Override
 			public Point computeSize(int wHint, int hHint, boolean changed) {
 				Point newSize = super.computeSize(wHint, hHint, changed);
 				if (getChildren().length == 0) {
@@ -920,20 +952,28 @@ public class InternalDialog extends TrayDialog {
 				.setText(WorkbenchMessages.WorkbenchStatusDialog_SupportHyperlink);
 		link
 				.setToolTipText(WorkbenchMessages.WorkbenchStatusDialog_SupportTooltip);
-		link.addSelectionListener(widgetSelectedAdapter(e -> openTray()));
+		link.addSelectionListener(new SelectionAdapter() {
+			public void widgetSelected(SelectionEvent e) {
+				openTray();
+			}
+		});
 		Dialog.applyDialogFont(link);
 		return link;
 	}
 
 	private Link createShowErrorLogLink() {
 		Link link = new Link(linkComposite, SWT.NONE);
-		link.addSelectionListener(widgetSelectedAdapter(e -> {
-			try {
-				Workbench.getInstance().getActiveWorkbenchWindow().getActivePage().showView(LOG_VIEW_ID);
-			} catch (CoreException ce) {
-				StatusManager.getManager().handle(ce, WorkbenchPlugin.PI_WORKBENCH);
+		link.addSelectionListener(new SelectionAdapter() {
+			public void widgetSelected(SelectionEvent e) {
+				try {
+					Workbench.getInstance().getActiveWorkbenchWindow()
+							.getActivePage().showView(LOG_VIEW_ID);
+				} catch (CoreException ce) {
+					StatusManager.getManager().handle(ce,
+							WorkbenchPlugin.PI_WORKBENCH);
+				}
 			}
-		}));
+		});
 		link.setText(WorkbenchMessages.ErrorLogUtil_ShowErrorLogHyperlink);
 		link
 				.setToolTipText(WorkbenchMessages.ErrorLogUtil_ShowErrorLogTooltip);
@@ -950,14 +990,14 @@ public class InternalDialog extends TrayDialog {
 
 	/**
 	 * Returns {@link IAction} associated with selected StatusAdapter.
-	 *
+	 * 
 	 * @return {@link IAction} that is set as {@link StatusAdapter} property
 	 *         with Job.class key.
 	 */
 	private IAction getGotoAction() {
 		Object property = null;
 
-		Job job = Adapters.adapt(getCurrentStatusAdapter(), Job.class);
+		Job job = (Job) (getCurrentStatusAdapter().getAdapter(Job.class));
 		if (job != null) {
 			property = job.getProperty(IProgressConstants.ACTION_PROPERTY);
 		}
@@ -971,13 +1011,17 @@ public class InternalDialog extends TrayDialog {
 	/**
 	 * Get the single selection. Return null if the selection is not just
 	 * one element.
-	 *
+	 * 
 	 * @return StatusAdapter or <code>null</code>.
 	 */
 	private StatusAdapter getSingleSelection() {
-		IStructuredSelection selection = statusListViewer.getStructuredSelection();
-		if (selection.size() == 1) {
-			return (StatusAdapter) selection.getFirstElement();
+		ISelection rawSelection = statusListViewer.getSelection();
+		if (rawSelection != null
+				&& rawSelection instanceof IStructuredSelection) {
+			IStructuredSelection selection = (IStructuredSelection) rawSelection;
+			if (selection.size() == 1) {
+				return (StatusAdapter) selection.getFirstElement();
+			}
 		}
 		return null;
 	}
