@@ -1,5 +1,5 @@
 /*******************************************************************************
- * Copyright (c) 2003, 2016 IBM Corporation and others.
+ * Copyright (c) 2003, 2011 IBM Corporation and others.
  * All rights reserved. This program and the accompanying materials
  * are made available under the terms of the Eclipse Public License v1.0
  * which accompanies this distribution, and is available at
@@ -7,16 +7,8 @@
  *
  * Contributors:
  *     IBM Corporation - initial API and implementation
- *     Cornel Izbasa <cizbasa@info.uvt.ro> - Bug 436247
- *     Lars Vogel <Lars.Vogel@vogella.com> - Bug 440136, 472654
- *     Robert Roth <robert.roth.off@gmail.com> - Bugs 274005, 456291
- *     Mickael Istria (Red Hat Inc.) - Theme and fontregistry rather than pref
- *     Patrik Suzzi <psuzzi@gmail.com> - Bug 489250
  *******************************************************************************/
 package org.eclipse.ui.internal.themes;
-
-import static org.eclipse.swt.events.SelectionListener.widgetSelectedAdapter;
-import static org.eclipse.ui.internal.themes.WorkbenchThemeManager.EMPTY_COLOR_VALUE;
 
 import com.ibm.icu.text.MessageFormat;
 import java.util.ArrayList;
@@ -30,21 +22,22 @@ import java.util.ResourceBundle;
 import java.util.Set;
 import org.eclipse.core.runtime.CoreException;
 import org.eclipse.core.runtime.IStatus;
-import org.eclipse.e4.core.services.events.IEventBroker;
-import org.eclipse.e4.ui.css.swt.theme.IThemeEngine;
 import org.eclipse.jface.preference.PreferenceConverter;
 import org.eclipse.jface.preference.PreferencePage;
 import org.eclipse.jface.resource.JFaceResources;
 import org.eclipse.jface.resource.StringConverter;
 import org.eclipse.jface.util.IPropertyChangeListener;
 import org.eclipse.jface.util.PropertyChangeEvent;
-import org.eclipse.jface.viewers.IColorProvider;
+import org.eclipse.jface.viewers.DoubleClickEvent;
+import org.eclipse.jface.viewers.IDoubleClickListener;
 import org.eclipse.jface.viewers.IFontProvider;
 import org.eclipse.jface.viewers.ISelection;
+import org.eclipse.jface.viewers.ISelectionChangedListener;
 import org.eclipse.jface.viewers.IStructuredSelection;
 import org.eclipse.jface.viewers.ITreeContentProvider;
 import org.eclipse.jface.viewers.LabelProvider;
 import org.eclipse.jface.viewers.LabelProviderChangedEvent;
+import org.eclipse.jface.viewers.SelectionChangedEvent;
 import org.eclipse.jface.viewers.StructuredSelection;
 import org.eclipse.jface.viewers.TreeViewer;
 import org.eclipse.jface.viewers.Viewer;
@@ -52,6 +45,12 @@ import org.eclipse.jface.viewers.ViewerComparator;
 import org.eclipse.swt.SWT;
 import org.eclipse.swt.custom.SashForm;
 import org.eclipse.swt.custom.StackLayout;
+import org.eclipse.swt.events.DisposeEvent;
+import org.eclipse.swt.events.DisposeListener;
+import org.eclipse.swt.events.PaintEvent;
+import org.eclipse.swt.events.PaintListener;
+import org.eclipse.swt.events.SelectionAdapter;
+import org.eclipse.swt.events.SelectionEvent;
 import org.eclipse.swt.graphics.Color;
 import org.eclipse.swt.graphics.Font;
 import org.eclipse.swt.graphics.FontData;
@@ -84,21 +83,20 @@ import org.eclipse.ui.internal.WorkbenchMessages;
 import org.eclipse.ui.internal.WorkbenchPlugin;
 import org.eclipse.ui.internal.misc.StatusUtil;
 import org.eclipse.ui.internal.util.PrefUtil;
+import org.eclipse.ui.internal.util.Util;
 import org.eclipse.ui.themes.ITheme;
 import org.eclipse.ui.themes.IThemeManager;
 import org.eclipse.ui.themes.IThemePreview;
-import org.osgi.service.event.Event;
-import org.osgi.service.event.EventHandler;
 
 
 /**
  * Preference page for management of system colors, gradients and fonts.
- *
+ * 
  * @since 3.0
  */
 public final class ColorsAndFontsPreferencePage extends PreferencePage
         implements IWorkbenchPreferencePage {
-
+	
 	private static final String SELECTED_ELEMENT_PREF = "ColorsAndFontsPreferencePage.selectedElement"; //$NON-NLS-1$
 	/**
 	 * The preference that stores the expanded state.
@@ -108,30 +106,30 @@ public final class ColorsAndFontsPreferencePage extends PreferencePage
 	 * The token that separates expanded elements in EXPANDED_ELEMENTS_PREF.
 	 */
 	private static final String EXPANDED_ELEMENTS_TOKEN = "\t"; //$NON-NLS-1$
-
+	
 	/**
      * Marks category tokens in EXPANDED_ELEMENTS_PREF and SELECTED_ELEMENT_PREF.
      */
 	private static final char MARKER_CATEGORY = 'T';
-
+	
 	/**
 	 * Marks color tokens in EXPANDED_ELEMENTS_PREF and SELECTED_ELEMENT_PREF.
 	 */
 	private static final char MARKER_COLOR = 'C';
-
+	
 	/**
 	 * Marks font tokens in EXPANDED_ELEMENTS_PREF and SELECTED_ELEMENT_PREF.
 	 */
 	private static final char MARKER_FONT = 'F';
-
-	private static final int DEFINITION_NOT_AVAIL_COLOR = SWT.COLOR_WIDGET_LIGHT_SHADOW;
-
+			
     private class ThemeContentProvider implements ITreeContentProvider {
 
         private IThemeRegistry registry;
 
-        @Override
-		public Object[] getChildren(Object parentElement) {
+        /* (non-Javadoc)
+         * @see org.eclipse.jface.viewers.ITreeContentProvider#getChildren(java.lang.Object)
+         */
+        public Object[] getChildren(Object parentElement) {
             if (parentElement instanceof ThemeElementCategory) {
                 String categoryId = ((ThemeElementCategory) parentElement)
                         .getId();
@@ -153,12 +151,14 @@ public final class ColorsAndFontsPreferencePage extends PreferencePage
 				defs = registry.getFonts();
 			}
 
-			for (IHierarchalThemeElementDefinition elementDefinition : defs) {
-				if (id.equals(elementDefinition.getDefaultsTo())
+			for (int i = 0; i < defs.length; i++) {
+				if (id.equals(defs[i].getDefaultsTo())
 						&& ColorsAndFontsPreferencePage.equals(
-								((ICategorizedThemeElementDefinition) def).getCategoryId(),
-								((ICategorizedThemeElementDefinition) elementDefinition).getCategoryId())) {
-					list.add(elementDefinition);
+								((ICategorizedThemeElementDefinition) def)
+										.getCategoryId(),
+								((ICategorizedThemeElementDefinition) defs[i])
+										.getCategoryId())) {
+					list.add(defs[i]);
 				}
 			}
 			return list.toArray();
@@ -168,11 +168,15 @@ public final class ColorsAndFontsPreferencePage extends PreferencePage
             ArrayList list = new ArrayList();
 
             if (categoryId != null) {
-				for (ThemeElementCategory category : registry.getCategories()) {
-					if (categoryId.equals(category.getParentId())) {
-						Set bindings = themeRegistry.getPresentationsBindingsFor(category);
-						if (bindings == null) {
-							list.add(category);
+                ThemeElementCategory[] categories = registry.getCategories();
+                for (int i = 0; i < categories.length; i++) {
+                    if (categoryId.equals(categories[i].getParentId())) {
+                        Set bindings = themeRegistry
+                                .getPresentationsBindingsFor(categories[i]);
+                        if (bindings == null
+                                || bindings.contains(workbench
+                                        .getPresentationId())) {
+							list.add(categories[i]);
 						}
                     }
                 }
@@ -220,8 +224,10 @@ public final class ColorsAndFontsPreferencePage extends PreferencePage
 
         private boolean parentIsInSameCategory(ColorDefinition definition) {
             String defaultsTo = definition.getDefaultsTo();
-			for (ColorDefinition colorDef : registry.getColors()) {
-				if (colorDef.getId().equals(defaultsTo) && ColorsAndFontsPreferencePage.equals(colorDef
+            ColorDefinition[] defs = registry.getColors();
+            for (int i = 0; i < defs.length; i++) {
+                if (defs[i].getId().equals(defaultsTo)
+                        && ColorsAndFontsPreferencePage.equals(defs[i]
                                 .getCategoryId(), definition.getCategoryId())) {
 					return true;
 				}
@@ -231,8 +237,10 @@ public final class ColorsAndFontsPreferencePage extends PreferencePage
 
         private boolean parentIsInSameCategory(FontDefinition definition) {
             String defaultsTo = definition.getDefaultsTo();
-			for (FontDefinition fontDef : registry.getFonts()) {
-				if (fontDef.getId().equals(defaultsTo) && ColorsAndFontsPreferencePage.equals(fontDef
+            FontDefinition[] defs = registry.getFonts();
+            for (int i = 0; i < defs.length; i++) {
+                if (defs[i].getId().equals(defaultsTo)
+                        && ColorsAndFontsPreferencePage.equals(defs[i]
                                 .getCategoryId(), definition.getCategoryId())) {
 					return true;
 				}
@@ -240,8 +248,10 @@ public final class ColorsAndFontsPreferencePage extends PreferencePage
             return false;
         }
 
-        @Override
-		public Object getParent(Object element) {
+        /* (non-Javadoc)
+         * @see org.eclipse.jface.viewers.ITreeContentProvider#getParent(java.lang.Object)
+         */
+        public Object getParent(Object element) {
 			if (element instanceof ThemeElementCategory)
 				return registry;
 
@@ -270,8 +280,10 @@ public final class ColorsAndFontsPreferencePage extends PreferencePage
 			return null;
         }
 
-        @Override
-		public boolean hasChildren(Object element) {
+        /* (non-Javadoc)
+         * @see org.eclipse.jface.viewers.ITreeContentProvider#hasChildren(java.lang.Object)
+         */
+        public boolean hasChildren(Object element) {
             if (element instanceof ThemeElementCategory) {
 				return true;
 			}
@@ -285,11 +297,13 @@ public final class ColorsAndFontsPreferencePage extends PreferencePage
 				defs = registry.getFonts();
 			}
 
-			for (IHierarchalThemeElementDefinition elementDefinition : defs) {
-				if (id.equals(elementDefinition.getDefaultsTo())
+			for (int i = 0; i < defs.length; i++) {
+				if (id.equals(defs[i].getDefaultsTo())
 						&& ColorsAndFontsPreferencePage.equals(
-								((ICategorizedThemeElementDefinition) def).getCategoryId(),
-								((ICategorizedThemeElementDefinition) elementDefinition).getCategoryId())) {
+								((ICategorizedThemeElementDefinition) def)
+										.getCategoryId(),
+								((ICategorizedThemeElementDefinition) defs[i])
+										.getCategoryId())) {
 					return true;
 				}
 			}
@@ -297,32 +311,41 @@ public final class ColorsAndFontsPreferencePage extends PreferencePage
             return false;
         }
 
-        @Override
-		public Object[] getElements(Object inputElement) {
+        /*
+		 * (non-Javadoc)
+		 * 
+		 * @see org.eclipse.jface.viewers.IStructuredContentProvider#getElements(java.lang.Object)
+		 */
+        public Object[] getElements(Object inputElement) {
             ArrayList list = new ArrayList();
             Object[] uncatChildren = getCategoryChildren(null);
             list.addAll(Arrays.asList(uncatChildren));
-			for (ThemeElementCategory category : ((IThemeRegistry) inputElement).getCategories()) {
-                if (category.getParentId() == null) {
-					Set bindings = themeRegistry.getPresentationsBindingsFor(category);
-					if (bindings == null) {
-						Object[] children = getChildren(category);
-						if (children != null && children.length > 0) {
-							list.add(category);
-						}
+            ThemeElementCategory[] categories = ((IThemeRegistry) inputElement)
+                    .getCategories();
+            for (int i = 0; i < categories.length; i++) {
+                if (categories[i].getParentId() == null) {
+                    Set bindings = themeRegistry
+                            .getPresentationsBindingsFor(categories[i]);
+                    if (bindings == null
+                            || bindings.contains(workbench.getPresentationId())) {
+						list.add(categories[i]);
 					}
                 }
             }
             return list.toArray(new Object[list.size()]);
         }
 
-        @Override
-		public void dispose() {
+        /* (non-Javadoc)
+         * @see org.eclipse.jface.viewers.IContentProvider#dispose()
+         */
+        public void dispose() {
             categoryMap.clear();
         }
 
-        @Override
-		public void inputChanged(Viewer viewer, Object oldInput, Object newInput) {
+        /* (non-Javadoc)
+         * @see org.eclipse.jface.viewers.IContentProvider#inputChanged(org.eclipse.jface.viewers.Viewer, java.lang.Object, java.lang.Object)
+         */
+        public void inputChanged(Viewer viewer, Object oldInput, Object newInput) {
             categoryMap.clear();
             registry = (IThemeRegistry) newInput;
         }
@@ -330,8 +353,7 @@ public final class ColorsAndFontsPreferencePage extends PreferencePage
     }
 
     private class PresentationLabelProvider extends LabelProvider implements
- IFontProvider,
-			IColorProvider {
+            IFontProvider {
 
         private HashMap fonts = new HashMap();
 
@@ -341,16 +363,12 @@ public final class ColorsAndFontsPreferencePage extends PreferencePage
 
         private int usableImageSize = -1;
 
-        private IPropertyChangeListener listener = event -> {
-			if (event.getNewValue() != null) {
-				fireLabelProviderChanged(new LabelProviderChangedEvent(
-						PresentationLabelProvider.this));
-			} else {
-				// Some theme definition element has been modified and we
-				// need to refresh the viewer
-				refreshAllLabels();
-			}
-		};
+        private IPropertyChangeListener listener = new IPropertyChangeListener() {
+            public void propertyChange(PropertyChangeEvent event) {
+                fireLabelProviderChanged(new LabelProviderChangedEvent(
+                        PresentationLabelProvider.this));
+            }
+        };
 
         private Image emptyImage;
 
@@ -366,8 +384,10 @@ public final class ColorsAndFontsPreferencePage extends PreferencePage
             fontRegistry.addListener(listener);
         }
 
-        @Override
-		public void dispose() {
+        /* (non-Javadoc)
+         * @see org.eclipse.jface.viewers.IBaseLabelProvider#dispose()
+         */
+        public void dispose() {
             super.dispose();
             colorRegistry.removeListener(listener);
             fontRegistry.removeListener(listener);
@@ -394,7 +414,7 @@ public final class ColorsAndFontsPreferencePage extends PreferencePage
             }
             fonts.clear();
         }
-
+        
         /**
          * Clears and disposes all fonts and fires a label update.
          */
@@ -404,8 +424,10 @@ public final class ColorsAndFontsPreferencePage extends PreferencePage
                     PresentationLabelProvider.this));
         }
 
-        @Override
-		public Font getFont(Object element) {
+        /* (non-Javadoc)
+         * @see org.eclipse.jface.viewers.IFontProvider#getFont(java.lang.Object)
+         */
+        public Font getFont(Object element) {
             Display display = tree.getDisplay();
             if (element instanceof FontDefinition) {
                 int parentHeight = tree.getViewer().getControl().getFont()
@@ -415,31 +437,29 @@ public final class ColorsAndFontsPreferencePage extends PreferencePage
                 Font font = (Font) fonts.get(baseFont);
                 if (font == null) {
                     FontData[] data = baseFont.getFontData();
-                    for (FontData fontData : data) {
-                        fontData.setHeight(parentHeight);
+                    for (int i = 0; i < data.length; i++) {
+                        data[i].setHeight(parentHeight);
                     }
                     font = new Font(display, data);
 
                     fonts.put(baseFont, font);
                 }
                 return font;
-			}
+            }
+
             return JFaceResources.getDialogFont();
         }
 
-        @Override
-		public Image getImage(Object element) {
+        /* (non-Javadoc)
+         * @see org.eclipse.jface.viewers.ILabelProvider#getImage(java.lang.Object)
+         */
+        public Image getImage(Object element) {
             if (element instanceof ColorDefinition) {
-				Display display = tree.getDisplay();
                 Color c = colorRegistry
                         .get(((ColorDefinition) element).getId());
-				Color foregroundColor = display.getSystemColor(SWT.COLOR_BLACK);
-				if (!isAvailableInCurrentTheme((ColorDefinition) element)) {
-					c = display.getSystemColor(SWT.COLOR_WHITE);
-					foregroundColor = display.getSystemColor(DEFINITION_NOT_AVAIL_COLOR);
-				}
                 Image image = (Image) images.get(c);
-				if (image == null) {
+                if (image == null) {
+                    Display display = tree.getDisplay();
                     ensureImageSize();
                     image = new Image(display, imageSize, imageSize);
 
@@ -450,7 +470,8 @@ public final class ColorsAndFontsPreferencePage extends PreferencePage
                             .getBackground());
                     gc.drawRectangle(0, 0, imageSize - 1, imageSize - 1);
 
-					gc.setForeground(foregroundColor);
+                    gc.setForeground(tree.getViewer().getControl()
+                            .getForeground());
                     gc.setBackground(c);
 
                     int offset = (imageSize - usableImageSize) / 2;
@@ -480,34 +501,33 @@ public final class ColorsAndFontsPreferencePage extends PreferencePage
             }
         }
 
-        @Override
-		public String getText(Object element) {
+        /* (non-Javadoc)
+         * @see org.eclipse.jface.viewers.ILabelProvider#getText(java.lang.Object)
+         */
+        public String getText(Object element) {
             if (element instanceof IHierarchalThemeElementDefinition) {
                 IHierarchalThemeElementDefinition themeElement = (IHierarchalThemeElementDefinition) element;
 				if (themeElement.getDefaultsTo() != null) {
-					String myCategory = ((ICategorizedThemeElementDefinition) themeElement).getCategoryId();
-					ICategorizedThemeElementDefinition def;
-					if (element instanceof ColorDefinition) {
+                    String myCategory = ((ICategorizedThemeElementDefinition) themeElement).getCategoryId();
+                    ICategorizedThemeElementDefinition def;
+                    if (element instanceof ColorDefinition)
 						def = themeRegistry.findColor(themeElement.getDefaultsTo());
-					} else {
+					else
 						def = themeRegistry.findFont(themeElement.getDefaultsTo());
-					}
-					if (def != null && !ColorsAndFontsPreferencePage.equals(def.getCategoryId(), myCategory)) {
-						if (isDefault(themeElement)) {
-							return MessageFormat.format(RESOURCE_BUNDLE.getString("defaultFormat_default"), //$NON-NLS-1$
-									themeElement.getName(), def.getName());
-						}
-						return MessageFormat.format(RESOURCE_BUNDLE.getString("defaultFormat_override"), //$NON-NLS-1$
-								themeElement.getName(), def.getName());
-					}
-				}
+
+                    if (!ColorsAndFontsPreferencePage.equals(def.getCategoryId(), myCategory)) {
+                    	if (isDefault(themeElement))
+							return MessageFormat.format(RESOURCE_BUNDLE.getString("defaultFormat_default"), new Object[] { themeElement.getName(), def.getName() }); //$NON-NLS-1$
+               			return MessageFormat.format(RESOURCE_BUNDLE.getString("defaultFormat_override"), new Object[] { themeElement.getName(), def.getName() }); //$NON-NLS-1$
+                    }
+                }
             }
             return ((IThemeElementDefinition) element).getName();
         }
 
         /**
          * Return whether the element is set to default.
-         *
+         * 
          * @param def the definition
          * @return whether the element is set to default
          * @since 3.2
@@ -531,27 +551,6 @@ public final class ColorsAndFontsPreferencePage extends PreferencePage
 			}
 			return false;
 		}
-
-		/**
-		 * Returns the DEFINITION_NOT_AVAIL_COLOR color when definition is not
-		 * present in the current theme or null when it is available
-		 *
-		 * @param def
-		 *            the definition
-		 * @return the DEFINITION_NOT_AVAIL_COLOR color or null
-		 */
-		@Override
-		public Color getForeground(Object element) {
-			if (element instanceof ThemeElementDefinition && !isAvailableInCurrentTheme((ThemeElementDefinition) element)) {
-				return tree.getDisplay().getSystemColor(DEFINITION_NOT_AVAIL_COLOR);
-			}
-			return null;
-		}
-
-		@Override
-		public Color getBackground(Object element) {
-			return null;
-		}
     }
 
     /**
@@ -568,11 +567,10 @@ public final class ColorsAndFontsPreferencePage extends PreferencePage
     private Font appliedDialogFont;
 
     /**
-	 * Map of definition ColorDefinition->RGB capturing the explicit changes
-	 * made by the user. These changes need to be stored into the preference
-	 * store.
+	 * Map of definition id->RGB capturing the explicit changes made by the
+	 * user. These changes need to be stored into the preference store.
 	 */
-	private Map<ColorDefinition, RGB> colorPreferencesToSet = new HashMap<>(7);
+    private Map colorPreferencesToSet = new HashMap(7);
 
     private CascadingColorRegistry colorRegistry;
 
@@ -586,29 +584,29 @@ public final class ColorsAndFontsPreferencePage extends PreferencePage
      * The default color preview composite.
      */
     private Composite defaultColorPreview;
-
+    
     /**
      * The default font preview composite.
      */
     private Composite defaultFontPreview;
-
+    
     /**
      * The composite to use when no preview is available.
      */
     private Composite defaultNoPreview;
-
+    
 	/**
 	 * Currently selected font for preview; might be null.
 	 */
 	private Font currentFont;
-
+	
 	/**
-	 * Currently selected color for preview; might be null.
+	 * Currently selected color for preview; might be null. 
 	 */
 	private Color currentColor;
-
+	
 	/**
-	 * Canvas used to draw default color preview
+	 * Canvas used to draw default color preview 
 	 */
 	private Canvas colorSampler;
 
@@ -625,32 +623,23 @@ public final class ColorsAndFontsPreferencePage extends PreferencePage
 
 	/**
 	 * The button to edit the default of the selected element.
-	 *
+	 * 
 	 * @since 3.7
 	 */
 	private Button editDefaultButton;
 
 	/**
 	 * The button to go to the default of the selected element.
-	 *
+	 * 
 	 * @since 3.7
 	 */
 	private Button goToDefaultButton;
 
 	/**
-	 * The button to expand the tree.
-	 *
-	 * @since 4.5
+	 * Map of definition id->FontData[] capturing the changes explicitly made by
+	 * the user. These changes need to be stored into the preference store.
 	 */
-	private Button expandAllButton;
-
-	/**
-	 * Map of definition FontDefinition->FontData[] capturing the changes
-	 * explicitly made by the user. These changes need to be stored into the
-	 * preference store.
-	 */
-	private Map<FontDefinition, FontData[]> fontPreferencesToSet = new HashMap<>(
-			7);
+    private Map fontPreferencesToSet = new HashMap(7);
 
     private CascadingFontRegistry fontRegistry;
 
@@ -661,12 +650,7 @@ public final class ColorsAndFontsPreferencePage extends PreferencePage
 	/**
 	 * Map of definition id->FontData[] capturing the temporary changes caused
 	 * by a 'defaultsTo' font change.
-	 *
-	 * @deprecated in this page, we should only care about preferences,
-	 *             preference to fontValues synchronization in registry is
-	 *             handled in the ThemeAPI and listeners
 	 */
-	@Deprecated
     private Map fontValuesToSet = new HashMap(7);
 
     /**
@@ -695,42 +679,15 @@ public final class ColorsAndFontsPreferencePage extends PreferencePage
 
     private PresentationLabelProvider labelProvider;
 
-	private CascadingThemeExt cascadingTheme;
+    private CascadingTheme cascadingTheme;
 
     private IPropertyChangeListener themeChangeListener;
 
     private Workbench workbench;
 
     private FilteredTree tree;
-
+    
 	private Text descriptionText;
-
-	private IEventBroker eventBroker;
-
-	private EventHandler themeRegistryRestyledHandler = new EventHandler() {
-		@Override
-		public void handleEvent(Event event) {
-			if (isAnyThemeChanged()) {
-				updateThemeInfo(workbench.getThemeManager());
-			}
-			refreshCategory();
-			refreshAllLabels();
-
-			clearPreviews();
-			previewMap.clear();
-			restoreTreeSelection();
-			updateControls();
-		}
-
-		private boolean isAnyThemeChanged() {
-			return currentTheme != workbench.getThemeManager().getCurrentTheme()
-					|| currentCSSTheme != getActiveTheme();
-		}
-	};
-
-	private org.eclipse.e4.ui.css.swt.theme.ITheme currentCSSTheme;
-
-	private IThemeEngine themeEngine;
 
     /**
      * Create a new instance of the receiver.
@@ -751,11 +708,10 @@ public final class ColorsAndFontsPreferencePage extends PreferencePage
 	 * <li><strong>selectColor:</strong>ID - selects the color with the given ID
 	 * </li>
 	 * </p>
-	 *
+	 * 
 	 * @param data
 	 *            the data to be applied
 	 */
-	@Override
 	public void applyData(Object data) {
 		if (tree == null || !(data instanceof String))
 			return;
@@ -786,7 +742,7 @@ public final class ColorsAndFontsPreferencePage extends PreferencePage
 
 	/**
 	 * Selects and reveals the given element.
-	 *
+	 * 
 	 * @param selection
 	 *            the object to select and reveal
 	 * @since 3.7
@@ -807,19 +763,6 @@ public final class ColorsAndFontsPreferencePage extends PreferencePage
 			return true;
         return false;
     }
-
-	/**
-	 * Get the active theme.
-	 *
-	 * @return the active theme if there is one; <code>null</code> if there
-	 *         isn't or {@link #themeEngine} is <code>null</code>.
-	 */
-	private org.eclipse.e4.ui.css.swt.theme.ITheme getActiveTheme() {
-		if (themeEngine != null) {
-			return themeEngine.getActiveTheme();
-		}
-		return null;
-	}
 
     /**
      * Create a button for the preference page.
@@ -847,19 +790,23 @@ public final class ColorsAndFontsPreferencePage extends PreferencePage
 		return separator;
 	}
 
-    @Override
-	protected Control createContents(Composite parent) {
+    /* (non-Javadoc)
+     * @see org.eclipse.jface.preference.PreferencePage#createContents(org.eclipse.swt.widgets.Composite)
+     */
+    protected Control createContents(Composite parent) {
     	PlatformUI.getWorkbench().getHelpSystem().setHelp(parent, IWorkbenchHelpContextIds.FONTS_PREFERENCE_PAGE);
-
-        parent.addDisposeListener(e -> {
-		    if (appliedDialogFont != null)
-				appliedDialogFont.dispose();
-		});
-
+    	
+        parent.addDisposeListener(new DisposeListener() {
+            public void widgetDisposed(DisposeEvent e) {
+                if (appliedDialogFont != null)
+					appliedDialogFont.dispose();
+            }
+        });
+        
 		final SashForm advancedComposite = new SashForm(parent, SWT.VERTICAL);
 		GridData sashData = new GridData(SWT.FILL, SWT.FILL, true, true);
 		advancedComposite.setLayoutData(sashData);
-
+        
         Composite mainColumn = new Composite(advancedComposite, SWT.NONE);
         GridLayout layout = new GridLayout();
         layout.numColumns = 2;
@@ -876,7 +823,7 @@ public final class ColorsAndFontsPreferencePage extends PreferencePage
         label.setLayoutData(data);
 
         createTree(mainColumn);
-
+        
         // --- buttons
         Composite controlColumn = new Composite(mainColumn, SWT.NONE);
         data = new GridData(GridData.FILL_VERTICAL);
@@ -885,7 +832,7 @@ public final class ColorsAndFontsPreferencePage extends PreferencePage
         layout.marginHeight = 0;
         layout.marginWidth = 0;
         controlColumn.setLayout(layout);
-
+        
         // we need placeholder to offset the filter control of the table
         Label placeholder = new Label(controlColumn, SWT.NONE);
         GridData placeholderData = new GridData(SWT.TOP);
@@ -898,9 +845,6 @@ public final class ColorsAndFontsPreferencePage extends PreferencePage
 		createSeparator(controlColumn);
 		editDefaultButton = createButton(controlColumn, RESOURCE_BUNDLE.getString("editDefault")); //$NON-NLS-1$
 		goToDefaultButton = createButton(controlColumn, RESOURCE_BUNDLE.getString("goToDefault")); //$NON-NLS-1$
-		createSeparator(controlColumn);
-		expandAllButton = createButton(controlColumn, RESOURCE_BUNDLE.getString("expandAll")); //$NON-NLS-1$
-		expandAllButton.setEnabled(true);
         // --- end of buttons
 
 		createDescriptionControl(mainColumn);
@@ -912,7 +856,7 @@ public final class ColorsAndFontsPreferencePage extends PreferencePage
 		previewLayout.marginHeight = 0;
         previewColumn.setFont(parent.getFont());
         previewColumn.setLayout(previewLayout);
-
+        
         // --- create preview control
 		Composite composite = new Composite(previewColumn, SWT.NONE);
 
@@ -922,11 +866,11 @@ public final class ColorsAndFontsPreferencePage extends PreferencePage
 		layout2.marginHeight = 0;
 		layout2.marginWidth = 0;
 		composite.setLayout(layout2);
-
+        
 		Label label2 = new Label(composite, SWT.LEFT);
 		label2.setText(RESOURCE_BUNDLE.getString("preview")); //$NON-NLS-1$
 		myApplyDialogFont(label2);
-
+        
         previewComposite = new Composite(composite, SWT.NONE);
         previewComposite.setLayoutData(new GridData(GridData.FILL_BOTH));
         stackLayout = new StackLayout();
@@ -934,14 +878,14 @@ public final class ColorsAndFontsPreferencePage extends PreferencePage
         stackLayout.marginWidth = 0;
         previewComposite.setLayout(stackLayout);
         // -- end of preview control
-
-
+         
+        
 		defaultFontPreview = createFontPreviewControl();
 		defaultColorPreview = createColorPreviewControl();
 		defaultNoPreview = createNoPreviewControl();
-
+        
         hookListeners();
-
+        
         updateTreeSelection(tree.getViewer().getSelection());
 
 		advancedComposite.setWeights(new int[] { 75, 25 });
@@ -951,7 +895,7 @@ public final class ColorsAndFontsPreferencePage extends PreferencePage
 	/**
 	 * Create the <code>ListViewer</code> that will contain all color
 	 * definitions as defined in the extension point.
-	 *
+	 * 
 	 * @param parent
 	 *            the parent <code>Composite</code>.
 	 */
@@ -962,7 +906,15 @@ public final class ColorsAndFontsPreferencePage extends PreferencePage
 		// non-category elements to be returned in the event that their children
 		// do not and also search the descriptions.
 		PatternFilter filter = new PatternFilter() {
-			@Override
+			/*
+			 * (non-Javadoc)
+			 * 
+			 * @see
+			 * org.eclipse.ui.dialogs.PatternFilter#isLeafMatch(org.eclipse.
+			 * jface.viewers.Viewer, java.lang.Object)
+			 * 
+			 * @since 3.7
+			 */
 			protected boolean isLeafMatch(Viewer viewer, Object element) {
 				if (super.isLeafMatch(viewer, element))
 					return true;
@@ -978,7 +930,6 @@ public final class ColorsAndFontsPreferencePage extends PreferencePage
 
 		tree = new FilteredTree(parent, SWT.SINGLE | SWT.H_SCROLL | SWT.V_SCROLL | SWT.BORDER,
 				filter, true);
-		tree.setQuickSelectionMode(true);
 		GridData data = new GridData(GridData.FILL_BOTH | GridData.VERTICAL_ALIGN_FILL);
 		data.widthHint = Math.max(285, convertWidthInCharsToPixels(30));
 		data.heightHint = Math.max(175, convertHeightInCharsToPixels(10));
@@ -991,7 +942,6 @@ public final class ColorsAndFontsPreferencePage extends PreferencePage
 		tree.getViewer().setLabelProvider(labelProvider);
 		tree.getViewer().setContentProvider(new ThemeContentProvider());
 		tree.getViewer().setComparator(new ViewerComparator() {
-			@Override
 			public int category(Object element) {
 				if (element instanceof ThemeElementCategory)
 					return 0;
@@ -999,22 +949,18 @@ public final class ColorsAndFontsPreferencePage extends PreferencePage
 			}
 		});
 		tree.getViewer().setInput(WorkbenchPlugin.getDefault().getThemeRegistry());
-		tree.getViewer().addDoubleClickListener(event -> {
-			IStructuredSelection s = (IStructuredSelection) event.getSelection();
-			Object element = s.getFirstElement();
-			if (tree.getViewer().isExpandable(element))
-				tree.getViewer().setExpandedState(element,
-						!tree.getViewer().getExpandedState(element));
+		tree.getViewer().addDoubleClickListener(new IDoubleClickListener() {
+			public void doubleClick(DoubleClickEvent event) {
+				IStructuredSelection s = (IStructuredSelection) event.getSelection();
+				Object element = s.getFirstElement();
+				if (tree.getViewer().isExpandable(element))
+					tree.getViewer().setExpandedState(element,
+							!tree.getViewer().getExpandedState(element));
 
-			if (element instanceof ThemeElementDefinition) {
-				ThemeElementDefinition definition = (ThemeElementDefinition) element;
-
-				if (element instanceof FontDefinition) {
+				if (element instanceof FontDefinition)
 					editFont(tree.getDisplay());
-				} else if (element instanceof ColorDefinition
-						&& isAvailableInCurrentTheme(definition)) {
+				else if (element instanceof ColorDefinition)
 					editColor(tree.getDisplay());
-				}
 				updateControls();
 			}
 		});
@@ -1023,14 +969,16 @@ public final class ColorsAndFontsPreferencePage extends PreferencePage
 		restoreTreeSelection();
 	}
 
-    @Override
-	public void dispose() {
-		eventBroker.unsubscribe(themeRegistryRestyledHandler);
+    /* (non-Javadoc)
+     * @see org.eclipse.jface.dialogs.IDialogPage#dispose()
+     */
+    public void dispose() {
+        super.dispose();
+        
         workbench.getThemeManager().removePropertyChangeListener(themeChangeListener);
         clearPreviews();
         colorRegistry.dispose();
         fontRegistry.dispose();
-		super.dispose();
     }
 
     /**
@@ -1045,7 +993,7 @@ public final class ColorsAndFontsPreferencePage extends PreferencePage
             try {
                 preview.dispose();
             } catch (RuntimeException e) {
-                WorkbenchPlugin.log(RESOURCE_BUNDLE.getString("errorDisposePreviewLog"), //$NON-NLS-1$
+                WorkbenchPlugin.log(RESOURCE_BUNDLE.getString("errorDisposePreviewLog"), //$NON-NLS-1$ 
                 		StatusUtil.newStatus(IStatus.ERROR, e.getMessage(), e));
             }
         }
@@ -1054,7 +1002,7 @@ public final class ColorsAndFontsPreferencePage extends PreferencePage
 
     /**
      * Get the ancestor of the given color, if any.
-     *
+     * 
      * @param definition the descendant <code>ColorDefinition</code>.
      * @return the ancestor <code>ColorDefinition</code>, or <code>null</code>
      * 		if none.
@@ -1068,7 +1016,7 @@ public final class ColorsAndFontsPreferencePage extends PreferencePage
 
     /**
      * Get the RGB value of the given colors ancestor, if any.
-     *
+     * 
      * @param definition the descendant <code>ColorDefinition</code>.
      * @return the ancestor <code>RGB</code>, or <code>null</code> if none.
      */
@@ -1082,13 +1030,13 @@ public final class ColorsAndFontsPreferencePage extends PreferencePage
     /**
      * Get the RGB value for the specified definition.  Cascades through
      * preferenceToSet, valuesToSet and finally the registry.
-     *
+     * 
      * @param definition the <code>ColorDefinition</code>.
      * @return the <code>RGB</code> value.
      */
     private RGB getColorValue(ColorDefinition definition) {
         String id = definition.getId();
-		RGB updatedRGB = colorPreferencesToSet.get(definition);
+        RGB updatedRGB = (RGB) colorPreferencesToSet.get(id);
         if (updatedRGB == null) {
             updatedRGB = (RGB) colorValuesToSet.get(id);
             if (updatedRGB == null)
@@ -1099,7 +1047,7 @@ public final class ColorsAndFontsPreferencePage extends PreferencePage
 
     /**
      * Get colors that descend from the provided color.
-     *
+     * 
      * @param definition the ancestor <code>ColorDefinition</code>.
      * @return the ColorDefinitions that have the provided definition as their
      * 		defaultsTo attribute.
@@ -1114,9 +1062,9 @@ public final class ColorsAndFontsPreferencePage extends PreferencePage
 
         Arrays.sort(sorted, new IThemeRegistry.HierarchyComparator(colors));
 
-        for (ColorDefinition colorDefinition : sorted) {
-            if (id.equals(colorDefinition.getDefaultsTo()))
-				list.add(colorDefinition);
+        for (int i = 0; i < sorted.length; i++) {
+            if (id.equals(sorted[i].getDefaultsTo()))
+				list.add(sorted[i]);
         }
         return (ColorDefinition[]) list.toArray(new ColorDefinition[list.size()]);
     }
@@ -1131,9 +1079,9 @@ public final class ColorsAndFontsPreferencePage extends PreferencePage
 
         Arrays.sort(sorted, new IThemeRegistry.HierarchyComparator(fonts));
 
-        for (FontDefinition fontDefinition : sorted) {
-            if (id.equals(fontDefinition.getDefaultsTo()))
-				list.add(fontDefinition);
+        for (int i = 0; i < sorted.length; i++) {
+            if (id.equals(sorted[i].getDefaultsTo()))
+				list.add(sorted[i]);
         }
         return (FontDefinition[]) list.toArray(new FontDefinition[list.size()]);
     }
@@ -1149,15 +1097,14 @@ public final class ColorsAndFontsPreferencePage extends PreferencePage
         FontDefinition ancestor = getFontAncestor(definition);
         if (ancestor == null) {
 			return PreferenceConverter.getDefaultFontDataArray(
-getPreferenceStore(),
-					createPreferenceKey(definition));
+					getPreferenceStore(), ThemeElementHelper.createPreferenceKey(currentTheme, definition.getId()));
 		}
         return getFontValue(ancestor);
     }
 
     protected FontData[] getFontValue(FontDefinition definition) {
         String id = definition.getId();
-		FontData[] updatedFD = fontPreferencesToSet.get(definition);
+        FontData[] updatedFD = (FontData[]) fontPreferencesToSet.get(id);
         if (updatedFD == null) {
             updatedFD = (FontData[]) fontValuesToSet.get(id);
             if (updatedFD == null)
@@ -1167,127 +1114,137 @@ getPreferenceStore(),
     }
 
     protected ColorDefinition getSelectedColorDefinition() {
-		Object o = tree.getViewer().getStructuredSelection().getFirstElement();
-		if (o instanceof ColorDefinition) {
-			return themeRegistry.findColor(((ColorDefinition) o).getId());
-		}
+        Object o = ((IStructuredSelection) tree.getViewer().getSelection()).getFirstElement();
+        if (o instanceof ColorDefinition)
+			return (ColorDefinition) o;
         return null;
     }
 
     protected FontDefinition getSelectedFontDefinition() {
-		Object o = tree.getViewer().getStructuredSelection().getFirstElement();
-		if (o instanceof FontDefinition) {
-			return themeRegistry.findFont(((FontDefinition) o).getId());
-		}
+        Object o = ((IStructuredSelection) tree.getViewer().getSelection()).getFirstElement();
+        if (o instanceof FontDefinition)
+			return (FontDefinition) o;
         return null;
     }
-
+    
     protected boolean isFontSelected() {
-		Object o = tree.getViewer().getStructuredSelection().getFirstElement();
+    	Object o = ((IStructuredSelection) tree.getViewer().getSelection()).getFirstElement();
     	return (o instanceof FontDefinition);
     }
 
     protected boolean isColorSelected() {
-		Object o = tree.getViewer().getStructuredSelection().getFirstElement();
+    	Object o = ((IStructuredSelection) tree.getViewer().getSelection()).getFirstElement();
     	return (o instanceof ColorDefinition);
     }
-
+    
     /**
      * Hook all control listeners.
      */
     private void hookListeners() {
         TreeViewer viewer = tree.getViewer();
-		viewer.addSelectionChangedListener(event -> updateTreeSelection(event.getSelection()));
+		viewer.addSelectionChangedListener(new ISelectionChangedListener() {
+                public void selectionChanged(SelectionChangedEvent event) {
+                    updateTreeSelection(event.getSelection());
+                }
+		});
+		
+        fontChangeButton.addSelectionListener(new SelectionAdapter() {
+            public void widgetSelected(SelectionEvent event) {
+            	Display display = event.display;
+            	if (isFontSelected())
+            		editFont(display);
+            	else if (isColorSelected())
+            		editColor(display);
+            	updateControls();
+            }
+        });
 
-        fontChangeButton.addSelectionListener(widgetSelectedAdapter(event -> {
-			Display display = event.display;
-			if (isFontSelected())
-				editFont(display);
-			else if (isColorSelected())
-				editColor(display);
-			updateControls();
-		}));
+        fontResetButton.addSelectionListener(new SelectionAdapter() {
 
-        fontResetButton.addSelectionListener(widgetSelectedAdapter(e -> {
-			if (isFontSelected())
-				resetFont(getSelectedFontDefinition(), false);
-			else if (isColorSelected())
-				resetColor(getSelectedColorDefinition(), false);
-			updateControls();
-		}));
+            public void widgetSelected(SelectionEvent e) {
+            	if (isFontSelected())
+					resetFont(getSelectedFontDefinition(), false);
+            	else if (isColorSelected())
+					resetColor(getSelectedColorDefinition(), false);
+            	updateControls();
+            }
+        });
 
-        fontSystemButton.addSelectionListener(widgetSelectedAdapter(event -> {
-		    FontDefinition definition = getSelectedFontDefinition();
-		    if (definition == null)
-		    	return;
-		    FontData[] defaultFontData = JFaceResources.getDefaultFont().getFontData();
-			setFontPreferenceValue(definition, defaultFontData, false);
-		    updateControls();
-		}));
+        fontSystemButton.addSelectionListener(new SelectionAdapter() {
+            public void widgetSelected(SelectionEvent event) {
+                FontDefinition definition = getSelectedFontDefinition();
+                if (definition == null)
+                	return;
+                FontData[] defaultFontData = JFaceResources.getDefaultFont().getFontData();
+                setFontPreferenceValue(definition, defaultFontData);
+                updateControls();
+            }
+        });
 
-		editDefaultButton.addSelectionListener(widgetSelectedAdapter(event -> {
-			Display display = event.display;
-			FontDefinition fontDefinition = getSelectedFontDefinition();
-			if (fontDefinition != null) {
-				String defaultFontId = fontDefinition.getDefaultsTo();
-				FontDefinition defaultFontDefinition = themeRegistry.findFont(defaultFontId);
-				editFont(defaultFontDefinition, display);
-			} else {
-				ColorDefinition colorDefinition = getSelectedColorDefinition();
-				if (colorDefinition != null) {
-					String defaultColorId = colorDefinition.getDefaultsTo();
-					ColorDefinition defaultColorDefinition = themeRegistry
-							.findColor(defaultColorId);
-					editColor(defaultColorDefinition, display);
+		editDefaultButton.addSelectionListener(new SelectionAdapter() {
+			public void widgetSelected(SelectionEvent event) {
+				Display display = event.display;
+				FontDefinition fontDefinition = getSelectedFontDefinition();
+				if (fontDefinition != null) {
+					String defaultFontId = fontDefinition.getDefaultsTo();
+					FontDefinition defaultFontDefinition = themeRegistry.findFont(defaultFontId);
+					editFont(defaultFontDefinition, display);
+				} else {
+					ColorDefinition colorDefinition = getSelectedColorDefinition();
+					if (colorDefinition != null) {
+						String defaultColorId = colorDefinition.getDefaultsTo();
+						ColorDefinition defaultColorDefinition = themeRegistry
+								.findColor(defaultColorId);
+						editColor(defaultColorDefinition, display);
+					}
 				}
+				updateControls();
 			}
-			updateControls();
-		}));
+		});
 
-		goToDefaultButton.addSelectionListener(widgetSelectedAdapter(event -> {
-			FontDefinition fontDefinition = getSelectedFontDefinition();
-			if (fontDefinition != null) {
-				String defaultFontId = fontDefinition.getDefaultsTo();
-				FontDefinition defaultFontDefinition = themeRegistry.findFont(defaultFontId);
-				selectAndReveal(defaultFontDefinition);
-			} else {
-				ColorDefinition colorDefinition = getSelectedColorDefinition();
-				if (colorDefinition != null) {
-					String defaultColorId = colorDefinition.getDefaultsTo();
-					ColorDefinition defaultColorDefinition = themeRegistry
-							.findColor(defaultColorId);
-					selectAndReveal(defaultColorDefinition);
+		goToDefaultButton.addSelectionListener(new SelectionAdapter() {
+			public void widgetSelected(SelectionEvent event) {
+				FontDefinition fontDefinition = getSelectedFontDefinition();
+				if (fontDefinition != null) {
+					String defaultFontId = fontDefinition.getDefaultsTo();
+					FontDefinition defaultFontDefinition = themeRegistry.findFont(defaultFontId);
+					selectAndReveal(defaultFontDefinition);
+				} else {
+					ColorDefinition colorDefinition = getSelectedColorDefinition();
+					if (colorDefinition != null) {
+						String defaultColorId = colorDefinition.getDefaultsTo();
+						ColorDefinition defaultColorDefinition = themeRegistry
+								.findColor(defaultColorId);
+						selectAndReveal(defaultColorDefinition);
+					}
 				}
+				updateControls();
 			}
-			updateControls();
-		}));
-
-		expandAllButton.addSelectionListener(widgetSelectedAdapter(event -> tree.getViewer().expandAll()));
+		});
 
     }
 
-    @Override
-	public void init(IWorkbench aWorkbench) {
+    /* (non-Javadoc)
+     * @see org.eclipse.ui.IWorkbenchPreferencePage#init(org.eclipse.ui.IWorkbench)
+     */
+    public void init(IWorkbench aWorkbench) {
         this.workbench = (Workbench) aWorkbench;
-		themeEngine = workbench.getService(IThemeEngine.class);
         setPreferenceStore(PrefUtil.getInternalPreferenceStore());
 
         final IThemeManager themeManager = aWorkbench.getThemeManager();
-        themeChangeListener = event -> {
-		    if (event.getProperty().equals(
-		            IThemeManager.CHANGE_CURRENT_THEME)) {
-		        updateThemeInfo(themeManager);
-		        refreshCategory();
-				refreshAllLabels();
-		    }
-		};
+        themeChangeListener = new IPropertyChangeListener() {
+            public void propertyChange(PropertyChangeEvent event) {
+                if (event.getProperty().equals(
+                        IThemeManager.CHANGE_CURRENT_THEME)) {
+                    updateThemeInfo(themeManager);
+                    refreshCategory();
+                    tree.getViewer().refresh(); // refresh all the labels in the tree
+                }
+            }
+        };
         themeManager.addPropertyChangeListener(themeChangeListener);
 
         updateThemeInfo(themeManager);
-
-		eventBroker = workbench.getService(IEventBroker.class);
-		eventBroker.subscribe(WorkbenchThemeManager.Events.THEME_REGISTRY_RESTYLED,
-				themeRegistryRestyledHandler);
     }
 
     private void updateThemeInfo(IThemeManager manager) {
@@ -1304,15 +1261,8 @@ getPreferenceStore(),
 
         currentTheme = manager.getCurrentTheme();
 
-		currentCSSTheme = getActiveTheme();
-
         colorRegistry = new CascadingColorRegistry(currentTheme.getColorRegistry());
         fontRegistry = new CascadingFontRegistry(currentTheme.getFontRegistry());
-
-		if (cascadingTheme != null) {
-			cascadingTheme.dispose();
-			cascadingTheme = new CascadingThemeExt(currentTheme, colorRegistry, fontRegistry);
-		}
 
         fontPreferencesToSet.clear();
         fontValuesToSet.clear();
@@ -1326,7 +1276,7 @@ getPreferenceStore(),
 
     /**
      * Answers whether the definition is currently set to the default value.
-     *
+     * 
      * @param definition the <code>ColorDefinition</code> to check.
      * @return Return whether the definition is currently mapped to the default
      * 		value, either in the preference store or in the local change record
@@ -1335,12 +1285,12 @@ getPreferenceStore(),
     private boolean isDefault(ColorDefinition definition) {
         String id = definition.getId();
 
-		if (colorPreferencesToSet.containsKey(definition)) {
+        if (colorPreferencesToSet.containsKey(id)) {
             if (definition.getValue() != null) { // value-based color
-				if (colorPreferencesToSet.get(definition).equals(definition.getValue()))
+                if (colorPreferencesToSet.get(id).equals(definition.getValue()))
 					return true;
             } else {
-				if (colorPreferencesToSet.get(definition).equals(getColorAncestorValue(definition)))
+                if (colorPreferencesToSet.get(id).equals(getColorAncestorValue(definition)))
 					return true;
             }
 		} else if (colorValuesToSet.containsKey(id)) {
@@ -1353,12 +1303,11 @@ getPreferenceStore(),
 			}
         } else {
             if (definition.getValue() != null) { // value-based color
-				if (getPreferenceStore().isDefault(createPreferenceKey(definition)))
+                if (getPreferenceStore().isDefault(ThemeElementHelper.createPreferenceKey(currentTheme, id)))
 					return true;
             } else {
                 // a descendant is default if it's the same value as its ancestor
-				RGB rgb = getColorValue(definition);
-				if (rgb != null && rgb.equals(getColorAncestorValue(definition)))
+                if (getColorValue(definition).equals(getColorAncestorValue(definition)))
 					return true;
             }
         }
@@ -1368,14 +1317,13 @@ getPreferenceStore(),
     private boolean isDefault(FontDefinition definition) {
         String id = definition.getId();
 
-		if (fontPreferencesToSet.containsKey(definition)) {
+        if (fontPreferencesToSet.containsKey(id)) {
             if (definition.getValue() != null) { // value-based font
-				if (Arrays.equals(fontPreferencesToSet.get(definition),
-						definition.getValue()))
+                if (Arrays.equals((FontData[]) fontPreferencesToSet.get(id), definition.getValue()))
 					return true;
             } else {
                 FontData[] ancestor = getFontAncestorValue(definition);
-				if (Arrays.equals(fontPreferencesToSet.get(definition), ancestor))
+                if (Arrays.equals((FontData[]) fontPreferencesToSet.get(id), ancestor))
 					return true;
             }
 		} else if (fontValuesToSet.containsKey(id)) {
@@ -1390,7 +1338,7 @@ getPreferenceStore(),
 
         } else {
             if (definition.getValue() != null) { // value-based font
-				if (getPreferenceStore().isDefault(createPreferenceKey(definition)))
+                if (getPreferenceStore().isDefault(ThemeElementHelper.createPreferenceKey(currentTheme, id)))
 					return true;
             } else {
                 FontData[] ancestor = getFontAncestorValue(definition);
@@ -1418,8 +1366,7 @@ getPreferenceStore(),
     /**
      * @see org.eclipse.jface.preference.PreferencePage#performApply()
      */
-    @Override
-	protected void performApply() {
+    protected void performApply() {
         super.performApply();
 
         //Apply the default font to the dialog.
@@ -1435,13 +1382,8 @@ getPreferenceStore(),
         getApplyButton().setFont(appliedDialogFont);
         getDefaultsButton().setFont(appliedDialogFont);
 
-		if (oldFont != null) {
+        if (oldFont != null)
 			oldFont.dispose();
-		}
-
-		if (performColorOk() && performFontOk()) {
-			publishThemeRegistryModifiedEvent();
-		}
     }
 
     private void performColorDefaults() {
@@ -1453,15 +1395,17 @@ getPreferenceStore(),
 
         Arrays.sort(definitionsCopy, new IThemeRegistry.HierarchyComparator(definitions));
 
-        for (ColorDefinition colorDefinition : definitionsCopy) {
-			resetColor(colorDefinition, true);
+        for (int i = 0; i < definitionsCopy.length; i++) {
+			resetColor(definitionsCopy[i], true);
 		}
     }
 
     private boolean performColorOk() {
-		for (Map.Entry<ColorDefinition, RGB> entry : colorPreferencesToSet.entrySet()) {
-			String key = createPreferenceKey(entry.getKey());
-			String rgbString = StringConverter.asString(entry.getValue());
+        for (Iterator i = colorPreferencesToSet.keySet().iterator(); i.hasNext();) {
+            String id = (String) i.next();
+            String key = ThemeElementHelper.createPreferenceKey(currentTheme, id);
+            RGB rgb = (RGB) colorPreferencesToSet.get(id);
+            String rgbString = StringConverter.asString(rgb);
             String storeString = getPreferenceStore().getString(key);
 
             if (!rgbString.equals(storeString))
@@ -1473,16 +1417,10 @@ getPreferenceStore(),
         return true;
     }
 
-	private String createPreferenceKey(ThemeElementDefinition definition) {
-		if (definition.isOverridden() || definition.isAddedByCss()) {
-			return ThemeElementHelper.createPreferenceKey(currentCSSTheme, currentTheme,
-					definition.getId());
-		}
-		return ThemeElementHelper.createPreferenceKey(currentTheme, definition.getId());
-	}
-
-    @Override
-	public void performDefaults() {
+    /* (non-Javadoc)
+     * @see org.eclipse.jface.preference.PreferencePage#performDefaults()
+     */
+    protected void performDefaults() {
         performColorDefaults();
         performFontDefaults();
 		updateControls();
@@ -1498,15 +1436,19 @@ getPreferenceStore(),
 
         Arrays.sort(definitionsCopy, new IThemeRegistry.HierarchyComparator(definitions));
 
-        for (FontDefinition fontDefinition : definitionsCopy) {
-			resetFont(fontDefinition, true);
+        for (int i = 0; i < definitionsCopy.length; i++) {
+			resetFont(definitionsCopy[i], true);
 		}
     }
 
     private boolean performFontOk() {
-		for (Map.Entry<FontDefinition, FontData[]> entry : fontPreferencesToSet.entrySet()) {
-			String key = createPreferenceKey(entry.getKey());
-			String fdString = PreferenceConverter.getStoredRepresentation(entry.getValue());
+
+        for (Iterator i = fontPreferencesToSet.keySet().iterator(); i.hasNext();) {
+            String id = (String) i.next();
+            String key = ThemeElementHelper.createPreferenceKey(currentTheme, id);
+            FontData[] fd = (FontData[]) fontPreferencesToSet.get(id);
+
+            String fdString = PreferenceConverter.getStoredRepresentation(fd);
             String storeString = getPreferenceStore().getString(key);
 
             if (!fdString.equals(storeString))
@@ -1518,15 +1460,15 @@ getPreferenceStore(),
         return true;
     }
 
-    @Override
-	public boolean performOk() {
+    /* (non-Javadoc)
+     * @see org.eclipse.jface.preference.IPreferencePage#performOk()
+     */
+    public boolean performOk() {
     	saveTreeExpansion();
     	saveTreeSelection();
         boolean result =  performColorOk() && performFontOk();
-		if (result) {
+        if(result)
 			PrefUtil.savePrefs();
-			publishThemeRegistryModifiedEvent();
-		}
         return result;
     }
 
@@ -1539,7 +1481,7 @@ getPreferenceStore(),
 
     /**
      * Resets the supplied definition to its default value.
-     *
+     * 
      * @param definition the <code>ColorDefinition</code> to reset.
      * @return whether any change was made.
      */
@@ -1552,9 +1494,8 @@ getPreferenceStore(),
                 newRGB = getColorAncestorValue(definition);
 
             if (newRGB != null) {
-				setColorPreferenceValue(definition, newRGB, true);
+                setColorPreferenceValue(definition, newRGB);
                 setRegistryValue(definition, newRGB);
-				refreshElement(definition);
                 return true;
             }
         }
@@ -1564,17 +1505,14 @@ getPreferenceStore(),
 	protected boolean resetFont(FontDefinition definition, boolean force) {
 		if (force || !isDefault(definition)) {
             FontData[] newFD;
-			if (definition.isOverridden()) {
-				newFD = definition.getValue();
-			} else if (!force && definition.getDefaultsTo() != null) {
+			if (!force && definition.getDefaultsTo() != null)
                 newFD = getFontAncestorValue(definition);
-			} else {
-				newFD = PreferenceConverter.getDefaultFontDataArray(getPreferenceStore(),
-						createPreferenceKey(definition));
-			}
+            else
+                newFD = PreferenceConverter.getDefaultFontDataArray(getPreferenceStore(), ThemeElementHelper
+                                .createPreferenceKey(currentTheme, definition.getId()));
+
             if (newFD != null) {
-				setFontPreferenceValue(definition, newFD, true);
-				refreshElement(definition);
+                setFontPreferenceValue(definition, newFD);
                 return true;
             }
         }
@@ -1583,50 +1521,53 @@ getPreferenceStore(),
 
     /**
      * Set the value (in preferences) for the given color.
-     *
+     * 
      * @param definition the <code>ColorDefinition</code> to set.
      * @param newRGB the new <code>RGB</code> value for the definitions
      * 		identifier.
      */
-	protected void setColorPreferenceValue(ColorDefinition definition, RGB newRGB, boolean reset) {
+    protected void setColorPreferenceValue(ColorDefinition definition, RGB newRGB) {
         setDescendantRegistryValues(definition, newRGB);
-		colorPreferencesToSet.put(definition, newRGB);
-		updateDefinitionState(definition, reset);
+        colorPreferencesToSet.put(definition.getId(), newRGB);
     }
 
     /**
      * Set the value (in registry) for the given colors children.
-     *
+     * 
      * @param definition the <code>ColorDefinition</code> whose children should
      * 		be set.
      * @param newRGB the new <code>RGB</code> value for the definitions
      * 		identifier.
      */
     private void setDescendantRegistryValues(ColorDefinition definition, RGB newRGB) {
-		for (ColorDefinition colorDefinition : getDescendantColors(definition)) {
-			if (isDefault(colorDefinition)) {
-				setDescendantRegistryValues(colorDefinition, newRGB);
-				setRegistryValue(colorDefinition, newRGB);
-				colorValuesToSet.put(colorDefinition.getId(), newRGB);
+        ColorDefinition[] children = getDescendantColors(definition);
+
+        for (int i = 0; i < children.length; i++) {
+            if (isDefault(children[i])) {
+                setDescendantRegistryValues(children[i], newRGB);
+                setRegistryValue(children[i], newRGB);
+                colorValuesToSet.put(children[i].getId(), newRGB);
             }
         }
     }
 
-	private void setDescendantRegistryValues(FontDefinition definition, FontData[] datas, boolean reset) {
-		for (FontDefinition fontDefinition : getDescendantFonts(definition)) {
-			if (isDefault(fontDefinition)) {
-				setFontPreferenceValue(fontDefinition, datas, reset);
+    private void setDescendantRegistryValues(FontDefinition definition, FontData[] datas) {
+        FontDefinition[] children = getDescendantFonts(definition);
+
+        for (int i = 0; i < children.length; i++) {
+            if (isDefault(children[i])) {
+                setDescendantRegistryValues(children[i], datas);
+                setRegistryValue(children[i], datas);
+                fontValuesToSet.put(children[i].getId(), datas);
+				fontPreferencesToSet.remove(children[i].getId());
             }
         }
     }
 
-	protected void setFontPreferenceValue(FontDefinition definition, FontData[] datas, boolean reset) {
-		// descendant values must be computed and set before updating current,
-		// or isDefault will miss them
-		setDescendantRegistryValues(definition, datas, reset);
-		fontPreferencesToSet.put(definition, datas);
+    protected void setFontPreferenceValue(FontDefinition definition, FontData[] datas) {
+        setDescendantRegistryValues(definition, datas);
+        fontPreferencesToSet.put(definition.getId(), datas);
 		setRegistryValue(definition, datas);
-		updateDefinitionState(definition, reset);
     }
 
     /**
@@ -1661,10 +1602,9 @@ getPreferenceStore(),
         return null;
     }
 
-	private CascadingThemeExt getCascadingTheme() {
-		if (cascadingTheme == null) {
-			cascadingTheme = new CascadingThemeExt(currentTheme, colorRegistry, fontRegistry);
-		}
+    private ITheme getCascadingTheme() {
+        if (cascadingTheme == null)
+			cascadingTheme = new CascadingTheme(currentTheme, colorRegistry, fontRegistry);
         return cascadingTheme;
     }
 
@@ -1681,7 +1621,7 @@ getPreferenceStore(),
         //recalculate the fonts for the tree
         labelProvider.clearFontCacheAndUpdate();
     }
-
+    
     private void updateTreeSelection(ISelection selection) {
     	ThemeElementCategory category = null;
 	    Object element = ((IStructuredSelection) selection).getFirstElement();
@@ -1714,12 +1654,12 @@ getPreferenceStore(),
                     myApplyDialogFont(previewControl);
                     Text error = new Text(previewControl, SWT.WRAP | SWT.READ_ONLY);
                     error.setText(RESOURCE_BUNDLE.getString("errorCreatingPreview")); //$NON-NLS-1$
-                    WorkbenchPlugin.log(RESOURCE_BUNDLE.getString("errorCreatePreviewLog"), //$NON-NLS-1$
+                    WorkbenchPlugin.log(RESOURCE_BUNDLE.getString("errorCreatePreviewLog"), //$NON-NLS-1$ 
                     		StatusUtil.newStatus(IStatus.ERROR, e.getMessage(), e));
                 }
 	        }
 		}
-
+    	
         if (previewControl == null) { // there is no preview for this theme, use default preview
         	if (element instanceof ColorDefinition)
         		previewControl = defaultColorPreview;
@@ -1753,9 +1693,9 @@ getPreferenceStore(),
 	 * @since 3.1
 	 */
 	private void saveTreeSelection() {
-		IStructuredSelection selection = tree.getViewer().getStructuredSelection();
+		IStructuredSelection selection = (IStructuredSelection) tree.getViewer().getSelection();
 		Object element = selection.getFirstElement();
-		StringBuilder buffer = new StringBuilder();
+		StringBuffer buffer = new StringBuffer();
 		appendMarkerToBuffer(buffer, element);
 		if (buffer.length() > 0)
 			buffer.append(((IThemeElementDefinition) element).getId());
@@ -1770,13 +1710,13 @@ getPreferenceStore(),
 		String expandedElementsString = getPreferenceStore().getString(EXPANDED_ELEMENTS_PREF);
 		if (expandedElementsString == null)
 			return;
-		String[] expandedElementIDs = expandedElementsString.split(EXPANDED_ELEMENTS_TOKEN);
+		String[] expandedElementIDs = Util.getArrayFromList(expandedElementsString, EXPANDED_ELEMENTS_TOKEN);
 		if (expandedElementIDs.length == 0)
 			return;
 
 		List elements = new ArrayList(expandedElementIDs.length);
-		for (String expandedElementID : expandedElementIDs) {
-			IThemeElementDefinition def = findElementFromMarker(expandedElementID);
+		for (int i = 0; i < expandedElementIDs.length; i++) {
+			IThemeElementDefinition def = findElementFromMarker(expandedElementIDs[i]);
 			if (def != null)
 				elements.add(def);
 		}
@@ -1788,7 +1728,7 @@ getPreferenceStore(),
 	 * character against the known constants and then call the appropriate
 	 * method on the theme registry. If the element does not exist or the string
 	 * is invalid <code>null</code> is returned.
-	 *
+	 * 
 	 * @param string the string to parse
 	 * @return the element, or <code>null</code>
 	 */
@@ -1821,8 +1761,9 @@ getPreferenceStore(),
 		Object[] elements = tree.getViewer().getExpandedElements();
 		List elementIds = new ArrayList(elements.length);
 
-		StringBuilder buffer = new StringBuilder();
-		for (Object object : elements) {
+		StringBuffer buffer = new StringBuffer();
+		for (int i = 0; i < elements.length; i++) {
+			Object object = elements[i];
 			appendMarkerToBuffer(buffer, object);
 
 			if (buffer.length() != 0) {
@@ -1843,7 +1784,7 @@ getPreferenceStore(),
 		getPreferenceStore().setValue(EXPANDED_ELEMENTS_PREF, buffer.toString());
 	}
 
-	private void appendMarkerToBuffer(StringBuilder buffer, Object object) {
+	private void appendMarkerToBuffer(StringBuffer buffer, Object object) {
 		if (object instanceof FontDefinition) {
 			buffer.append(MARKER_FONT);
 		} else if (object instanceof ColorDefinition) {
@@ -1855,7 +1796,7 @@ getPreferenceStore(),
 
 	/**
 	 * Edit the currently selected font.
-	 *
+	 * 
 	 * @param display
 	 *            the display to open the dialog on
 	 * @since 3.2
@@ -1866,7 +1807,7 @@ getPreferenceStore(),
 
 	/**
 	 * Edit the given font.
-	 *
+	 * 
 	 * @param definition
 	 *            the font definition
 	 * @param display
@@ -1880,54 +1821,52 @@ getPreferenceStore(),
 			fontDialog.setFontList(getFontValue(definition));
 			final FontData data = fontDialog.open();
 			if (data != null) {
-				setFontPreferenceValue(definition, fontDialog.getFontList(), false);
-				refreshElement(definition);
+				setFontPreferenceValue(definition, fontDialog.getFontList());
 			}
 		}
 	}
-
+	
 	private void editColor(Display display) {
 		editColor(getSelectedColorDefinition(), display);
 	}
 
 	private void editColor(ColorDefinition definition, Display display) {
 		if (definition == null)
-			return;
+			return; 
 		RGB currentColor = colorRegistry.getRGB(definition.getId());
-
+		
 		ColorDialog colorDialog = new ColorDialog(display.getActiveShell());
 		colorDialog.setRGB(currentColor);
 		RGB selectedColor =  colorDialog.open();
 		if ((selectedColor != null) && (!selectedColor.equals(currentColor))) {
-			setColorPreferenceValue(definition, selectedColor, false);
-			setRegistryValue(definition, selectedColor);
-			refreshElement(definition);
+             setColorPreferenceValue(definition, selectedColor);
+             setRegistryValue(definition, selectedColor);
 		}
 	}
-
-
+	
+	
 	protected void updateControls() {
 		FontDefinition fontDefinition = getSelectedFontDefinition();
-		if (fontDefinition != null) {
-			boolean isSetToDefault = isDefault(fontDefinition);
-			boolean hasEditableDefault = defaultIsEditable(fontDefinition);
-			fontChangeButton.setEnabled(true);
-			fontSystemButton.setEnabled(true);
-			fontResetButton.setEnabled(!isSetToDefault);
-			editDefaultButton.setEnabled(hasEditableDefault && isSetToDefault);
-			goToDefaultButton.setEnabled(hasEditableDefault);
+        if (fontDefinition != null) {
+			boolean isDefault = isDefault(fontDefinition);
+			boolean hasDefault = fontDefinition.getDefaultsTo() != null;
+            fontChangeButton.setEnabled(true);
+            fontSystemButton.setEnabled(true);
+			fontResetButton.setEnabled(!isDefault);
+			editDefaultButton.setEnabled(hasDefault && isDefault);
+			goToDefaultButton.setEnabled(hasDefault);
             setCurrentFont(fontDefinition);
             return;
         }
         ColorDefinition colorDefinition = getSelectedColorDefinition();
         if (colorDefinition != null) {
-			boolean isSetToDefault = isDefault(getSelectedColorDefinition());
-			boolean hasEditableDefault = defaultIsEditable(colorDefinition);
-			fontChangeButton.setEnabled(true);
+			boolean isDefault = isDefault(getSelectedColorDefinition());
+			boolean hasDefault = colorDefinition.getDefaultsTo() != null;
+            fontChangeButton.setEnabled(true);
             fontSystemButton.setEnabled(false);
-			fontResetButton.setEnabled(!isSetToDefault);
-			editDefaultButton.setEnabled(hasEditableDefault && isSetToDefault);
-			goToDefaultButton.setEnabled(hasEditableDefault);
+			fontResetButton.setEnabled(!isDefault);
+			editDefaultButton.setEnabled(hasDefault && isDefault);
+			goToDefaultButton.setEnabled(hasDefault);
             setCurrentColor(colorDefinition);
             return;
         }
@@ -1939,30 +1878,7 @@ getPreferenceStore(),
 		goToDefaultButton.setEnabled(false);
 		descriptionText.setText(""); //$NON-NLS-1$
 	}
-
-	/**
-	 * Find out if the default can be edited. Note, isEditable=false also means that
-	 * a property is not shown to user.
-	 *
-	 * @param definition
-	 * @return True if definition has a default and the default's isEditable=true.
-	 *         False otherwise.
-	 */
-	private boolean defaultIsEditable(IHierarchalThemeElementDefinition definition) {
-		assert definition instanceof ColorDefinition || definition instanceof FontDefinition;
-		String defaultId = definition.getDefaultsTo();
-		if (defaultId == null) {
-			return false;
-		}
-		IEditable defaultDefinition = null;
-		if (definition instanceof ColorDefinition) {
-			defaultDefinition = themeRegistry.findColor(defaultId);
-		} else if (definition instanceof FontDefinition) {
-			defaultDefinition = themeRegistry.findFont(defaultId);
-		}
-		return (defaultDefinition != null && defaultDefinition.isEditable());
-	}
-
+	
     /**
      * @return Return the default "No preview available." preview.
      */
@@ -1974,19 +1890,19 @@ getPreferenceStore(),
 		myApplyDialogFont(l);
 		return noPreviewControl;
 	}
-
+	
 	private void setCurrentFont(FontDefinition fontDefinition) {
 		currentFont = fontRegistry.get(fontDefinition.getId());
-		FontData[] fontData = currentFont != null ? currentFont.getFontData() : new FontData[0];
+		FontData[] fontData = currentFont.getFontData();
 
 		// recalculate sample text
-		StringBuilder tmp = new StringBuilder();
-		for (FontData currentFontData : fontData) {
-			tmp.append(currentFontData.getName());
+		StringBuffer tmp = new StringBuffer();
+		for (int i = 0; i < fontData.length; i++) {
+			tmp.append(fontData[i].getName());
 			tmp.append(' ');
-			tmp.append(currentFontData.getHeight());
+			tmp.append(fontData[i].getHeight());
 
-			int style = currentFontData.getStyle();
+			int style = fontData[i].getStyle();
 			if ((style & SWT.BOLD) != 0) {
 				tmp.append(' ');
 				tmp.append(RESOURCE_BUNDLE.getString("boldFont")); //$NON-NLS-1$
@@ -1997,16 +1913,21 @@ getPreferenceStore(),
 			}
 		}
 		fontSampleText = tmp.toString();
-		descriptionText.setText(fomatDescription(fontDefinition));
+
+		String description = fontDefinition.getDescription();
+		descriptionText.setText(description == null ? "" : description); //$NON-NLS-1$
+
 		fontSampler.redraw();
 	}
-
+	
 	public void setCurrentColor(ColorDefinition colorDefinition) {
 		currentColor = colorRegistry.get(colorDefinition.getId());
 		colorSampler.redraw();
-		descriptionText.setText(fomatDescription(colorDefinition));
-	}
 
+		String description = colorDefinition.getDescription();
+		descriptionText.setText(description == null ? "" : description); //$NON-NLS-1$
+	}
+	
 	private Composite createFontPreviewControl() {
 		fontSampler = new Canvas(previewComposite, SWT.NONE);
 		GridLayout gridLayout = new GridLayout();
@@ -2015,9 +1936,11 @@ getPreferenceStore(),
 		fontSampler.setLayout(gridLayout);
 		fontSampler.setLayoutData(new GridData(GridData.FILL_BOTH));
 
-		fontSampler.addPaintListener(e -> {
-			if (currentFont != null) // do the font preview
-				paintFontSample(e.gc);
+		fontSampler.addPaintListener(new PaintListener() {
+			public void paintControl(PaintEvent e) {
+				if (currentFont != null) // do the font preview
+					paintFontSample(e.gc);
+			}
 		});
 		return fontSampler;
 	}
@@ -2055,10 +1978,12 @@ getPreferenceStore(),
         gridLayout.marginHeight = 0;
 		colorSampler.setLayout(gridLayout);
 		colorSampler.setLayoutData(new GridData(GridData.FILL_BOTH));
-
-		colorSampler.addPaintListener(e -> {
-			if (currentColor != null) // do the color preview
-				paintColorSample(e.gc);
+		
+		colorSampler.addPaintListener(new PaintListener() {
+			public void paintControl(PaintEvent e) {
+				if (currentColor != null) // do the color preview
+					paintColorSample(e.gc);
+			}
 		});
 		return colorSampler;
 	}
@@ -2073,12 +1998,12 @@ getPreferenceStore(),
 		int maxHeight = lineHeight * 4;
 		if (clientArea.height > maxHeight)
 			clientArea = new Rectangle(clientArea.x, clientArea.y, clientArea.width, maxHeight);
-
+		
 		String messageTop = RESOURCE_BUNDLE.getString("fontColorSample"); //$NON-NLS-1$
-		String fontColorString = RESOURCE_BUNDLE.getString("fontColorString"); //$NON-NLS-1$
 		RGB rgb = currentColor.getRGB();
-		String messageBottom = MessageFormat.format(fontColorString, Integer.valueOf(rgb.red),
-				Integer.valueOf(rgb.green), Integer.valueOf(rgb.blue));
+		String messageBottom = MessageFormat
+				.format(
+						"RGB({0}, {1}, {2})", new Object[] { new Integer(rgb.red), new Integer(rgb.green), new Integer(rgb.blue) }); //$NON-NLS-1$
 
 		// calculate position of the vertical line
 		int separator = (clientArea.width - 2) / 3;
@@ -2158,71 +2083,5 @@ getPreferenceStore(),
 		data.widthHint = convertWidthInCharsToPixels(30);
 		descriptionText.setLayoutData(data);
 		myApplyDialogFont(descriptionText);
-	}
-
-	private void publishThemeRegistryModifiedEvent() {
-		if (eventBroker != null) {
-			eventBroker.send(WorkbenchThemeManager.Events.THEME_REGISTRY_MODIFIED, null);
-		}
-	}
-
-	private void refreshAllLabels() {
-		tree.getViewer().refresh(); // refresh all the labels in the tree
-	}
-
-	private boolean isAvailableInCurrentTheme(ThemeElementDefinition definition) {
-		if (definition instanceof ColorDefinition) {
-			ColorDefinition colorDef = (ColorDefinition) definition;
-			RGB value = colorDef.getValue();
-			if ((value == null || value == EMPTY_COLOR_VALUE) && colorDef.getDefaultsTo() == null) {
-				return false;
-			}
-			return colorRegistry.get(definition.getId()) != null;
-		}
-		return true;
-	}
-
-	private String fomatDescription(ThemeElementDefinition definition) {
-		String description = definition.getDescription() != null ? definition.getDescription() : ""; //$NON-NLS-1$
-		if (isAvailableInCurrentTheme(definition)) {
-			return description;
-		}
-		return MessageFormat.format(RESOURCE_BUNDLE.getString("definitionNotAvailInTheme"), //$NON-NLS-1$
-				description).trim();
-	}
-
-	private void updateDefinitionState(ThemeElementDefinition definition, boolean reset) {
-		if (reset) {
-			definition.removeState(ThemeElementDefinition.State.MODIFIED_BY_USER);
-		} else {
-			definition.appendState(ThemeElementDefinition.State.MODIFIED_BY_USER);
-		}
-	}
-
-	private void refreshElement(ThemeElementDefinition definition) {
-		tree.getViewer().refresh(definition);
-		updateTreeSelection(tree.getViewer().getSelection());
-
-		Object newValue = definition instanceof ColorDefinition ?
-			((ColorDefinition) definition).getValue(): ((FontDefinition) definition).getValue();
-		getCascadingTheme().fire(new PropertyChangeEvent(this, definition.getId(), null, newValue));
-	}
-
-	private static class CascadingThemeExt extends CascadingTheme {
-		/**
-		 * @param currentTheme
-		 * @param colorRegistry
-		 * @param fontRegistry
-		 */
-		public CascadingThemeExt(ITheme currentTheme, CascadingColorRegistry colorRegistry,
-				CascadingFontRegistry fontRegistry) {
-			super(currentTheme, colorRegistry, fontRegistry);
-		}
-
-		@Override
-		public void fire(PropertyChangeEvent event) {
-			super.fire(event);
-		}
-
 	}
 }
