@@ -1,5 +1,5 @@
 /*******************************************************************************
- * Copyright (c) 2000, 2016 IBM Corporation and others.
+ * Copyright (c) 2000, 2013 IBM Corporation and others.
  * All rights reserved. This program and the accompanying materials
  * are made available under the terms of the Eclipse Public License v1.0
  * which accompanies this distribution, and is available at
@@ -7,11 +7,8 @@
  *
  * Contributors:
  *     IBM Corporation - initial API and implementation
- *     Lars Vogel <Lars.Vogel@gmail.com> - Bug 440810
  *******************************************************************************/
 package org.eclipse.ui.part;
-
-import static org.eclipse.swt.events.SelectionListener.widgetSelectedAdapter;
 
 import java.util.ArrayList;
 import java.util.Iterator;
@@ -20,7 +17,6 @@ import org.eclipse.core.commands.AbstractHandler;
 import org.eclipse.core.commands.ExecutionEvent;
 import org.eclipse.core.commands.ExecutionException;
 import org.eclipse.core.commands.util.Tracing;
-import org.eclipse.core.runtime.Adapters;
 import org.eclipse.core.runtime.Assert;
 import org.eclipse.core.runtime.ISafeRunnable;
 import org.eclipse.core.runtime.ListenerList;
@@ -36,6 +32,10 @@ import org.eclipse.jface.viewers.SelectionChangedEvent;
 import org.eclipse.swt.SWT;
 import org.eclipse.swt.custom.CTabFolder;
 import org.eclipse.swt.custom.CTabItem;
+import org.eclipse.swt.events.SelectionAdapter;
+import org.eclipse.swt.events.SelectionEvent;
+import org.eclipse.swt.events.TraverseEvent;
+import org.eclipse.swt.events.TraverseListener;
 import org.eclipse.swt.graphics.Image;
 import org.eclipse.swt.layout.FillLayout;
 import org.eclipse.swt.widgets.Composite;
@@ -51,6 +51,7 @@ import org.eclipse.ui.IEditorSite;
 import org.eclipse.ui.IKeyBindingService;
 import org.eclipse.ui.INestableKeyBindingService;
 import org.eclipse.ui.IPartService;
+import org.eclipse.ui.IPropertyListener;
 import org.eclipse.ui.IWorkbenchPart;
 import org.eclipse.ui.IWorkbenchPartSite;
 import org.eclipse.ui.PartInitException;
@@ -60,6 +61,7 @@ import org.eclipse.ui.internal.WorkbenchPlugin;
 import org.eclipse.ui.internal.misc.Policy;
 import org.eclipse.ui.internal.services.INestable;
 import org.eclipse.ui.internal.services.IServiceLocatorCreator;
+import org.eclipse.ui.internal.util.Util;
 import org.eclipse.ui.services.IDisposable;
 import org.eclipse.ui.services.IServiceLocator;
 
@@ -93,22 +95,22 @@ import org.eclipse.ui.services.IServiceLocator;
  * to be notified about all page change events within the workbench page or
  * workbench window.
  * </p>
- *
+ * 
  * @see org.eclipse.ui.part.MultiPageEditorActionBarContributor
  * @see org.eclipse.jface.dialogs.IPageChangeProvider
  * @see org.eclipse.jface.dialogs.IPageChangedListener
  * @see org.eclipse.ui.IPartService
  */
 public abstract class MultiPageEditorPart extends EditorPart implements IPageChangeProvider {
-
+	
 	private static final String COMMAND_NEXT_SUB_TAB = "org.eclipse.ui.navigate.nextSubTab"; //$NON-NLS-1$
 	private static final String COMMAND_PREVIOUS_SUB_TAB = "org.eclipse.ui.navigate.previousSubTab"; //$NON-NLS-1$
-
+	
 	/**
 	 * Subclasses that override {@link #createPageContainer(Composite)} can use
 	 * this constant to get a site for the container that can be active while
 	 * the current page is deactivated.
-	 *
+	 * 
 	 * @since 3.4
 	 * @see #activateSite()
 	 * @see #deactivateSite(boolean, boolean)
@@ -140,12 +142,12 @@ public abstract class MultiPageEditorPart extends EditorPart implements IPageCha
 	 * point.
 	 */
 	private ArrayList nestedEditors = new ArrayList(3);
-
+	
 	private List pageSites = new ArrayList(3);
 
 	private IServiceLocator pageContainerSite;
-
-	private ListenerList<IPageChangedListener> pageChangeListeners = new ListenerList<>(
+	
+	private ListenerList pageChangeListeners = new ListenerList(
 			ListenerList.IDENTITY);
 
 	/**
@@ -159,11 +161,11 @@ public abstract class MultiPageEditorPart extends EditorPart implements IPageCha
 	 * Creates and adds a new page containing the given control to this
 	 * multi-page editor. The control may be <code>null</code>, allowing it
 	 * to be created and set later using <code>setControl</code>.
-	 *
+	 * 
 	 * @param control
 	 *            the control, or <code>null</code>
 	 * @return the index of the new page
-	 *
+	 * 
 	 * @see MultiPageEditorPart#setControl(int, Control)
 	 */
 	public int addPage(Control control) {
@@ -177,12 +179,12 @@ public abstract class MultiPageEditorPart extends EditorPart implements IPageCha
 	 * multi-page editor. The page is added at the given index. The control may
 	 * be <code>null</code>, allowing it to be created and set later using
 	 * <code>setControl</code>.
-	 *
+	 * 
 	 * @param index
 	 *            the index at which to add the page (0-based)
 	 * @param control
 	 *            the control, or <code>null</code>
-	 *
+	 * 
 	 * @see MultiPageEditorPart#setControl(int, Control)
 	 */
 	public void addPage(int index, Control control) {
@@ -193,7 +195,7 @@ public abstract class MultiPageEditorPart extends EditorPart implements IPageCha
 	 * Creates and adds a new page containing the given editor to this
 	 * multi-page editor. This also hooks a property change listener on the
 	 * nested editor.
-	 *
+	 * 
 	 * @param editor
 	 *            the nested editor
 	 * @param input
@@ -201,7 +203,7 @@ public abstract class MultiPageEditorPart extends EditorPart implements IPageCha
 	 * @return the index of the new page
 	 * @exception PartInitException
 	 *                if a new page could not be created
-	 *
+	 * 
 	 * @see MultiPageEditorPart#handlePropertyChange(int) the handler for
 	 *      property change events from the nested editor
 	 */
@@ -216,7 +218,7 @@ public abstract class MultiPageEditorPart extends EditorPart implements IPageCha
 	 * Creates and adds a new page containing the given editor to this
 	 * multi-page editor. The page is added at the given index. This also hooks
 	 * a property change listener on the nested editor.
-	 *
+	 * 
 	 * @param index
 	 *            the index at which to add the page (0-based)
 	 * @param editor
@@ -225,7 +227,7 @@ public abstract class MultiPageEditorPart extends EditorPart implements IPageCha
 	 *            the input for the nested editor
 	 * @exception PartInitException
 	 *                if a new page could not be created
-	 *
+	 * 
 	 * @see MultiPageEditorPart#handlePropertyChange(int) the handler for
 	 *      property change events from the nested editor
 	 */
@@ -239,7 +241,11 @@ public abstract class MultiPageEditorPart extends EditorPart implements IPageCha
 				getOrientation(editor));
 		parent2.setLayout(new FillLayout());
 		editor.createPartControl(parent2);
-		editor.addPropertyListener((source, propertyId) -> MultiPageEditorPart.this.handlePropertyChange(propertyId));
+		editor.addPropertyListener(new IPropertyListener() {
+			public void propertyChanged(Object source, int propertyId) {
+				MultiPageEditorPart.this.handlePropertyChange(propertyId);
+			}
+		});
 		// create item for page only after createPartControl has succeeded
 		Item item = createItem(index, parent2);
 		// remember the editor, as both data on the item, and in the list of
@@ -250,7 +256,7 @@ public abstract class MultiPageEditorPart extends EditorPart implements IPageCha
 
 	/**
 	 * Get the orientation of the editor.
-	 *
+	 * 
 	 * @param editor
 	 * @return int the orientation flag
 	 * @see SWT#RIGHT_TO_LEFT
@@ -268,7 +274,7 @@ public abstract class MultiPageEditorPart extends EditorPart implements IPageCha
 	 * Creates an empty container. Creates a CTabFolder with no style bits set,
 	 * and hooks a selection listener which calls <code>pageChange()</code>
 	 * whenever the selected tab changes.
-	 *
+	 * 
 	 * @param parent
 	 *            The composite in which the container tab folder should be
 	 *            created; must not be <code>null</code>.
@@ -280,27 +286,32 @@ public abstract class MultiPageEditorPart extends EditorPart implements IPageCha
 		parent.setLayout(new FillLayout());
 		final CTabFolder newContainer = new CTabFolder(parent, SWT.BOTTOM
 				| SWT.FLAT);
-		newContainer.addSelectionListener(widgetSelectedAdapter(e -> {
-			int newPageIndex = newContainer.indexOf((CTabItem) e.item);
-			pageChange(newPageIndex);
-		}));
-		newContainer.addTraverseListener(e -> {
-			switch (e.detail) {
-				case SWT.TRAVERSE_PAGE_NEXT:
-				case SWT.TRAVERSE_PAGE_PREVIOUS:
-					int detail = e.detail;
-					e.doit = true;
-					e.detail = SWT.TRAVERSE_NONE;
-					Control control = newContainer.getParent();
-					do {
-						if (control.traverse(detail))
-							return;
-						if (control.getListeners(SWT.Traverse).length != 0)
-							return;
-						if (control instanceof Shell)
-							return;
-						control = control.getParent();
-					} while (control != null);
+		newContainer.addSelectionListener(new SelectionAdapter() {
+			public void widgetSelected(SelectionEvent e) {
+				int newPageIndex = newContainer.indexOf((CTabItem) e.item);
+				pageChange(newPageIndex);
+			}
+		});
+		newContainer.addTraverseListener(new TraverseListener() { 
+			// see https://bugs.eclipse.org/bugs/show_bug.cgi?id=199499 : Switching tabs by Ctrl+PageUp/PageDown must not be caught on the inner tab set
+			public void keyTraversed(TraverseEvent e) {
+				switch (e.detail) {
+					case SWT.TRAVERSE_PAGE_NEXT:
+					case SWT.TRAVERSE_PAGE_PREVIOUS:
+						int detail = e.detail;
+						e.doit = true;
+						e.detail = SWT.TRAVERSE_NONE;
+						Control control = newContainer.getParent();
+						do {
+							if (control.traverse(detail))
+								return;
+							if (control.getListeners(SWT.Traverse).length != 0)
+								return;
+							if (control instanceof Shell)
+								return;
+							control = control.getParent();
+						} while (control != null);
+				}
 			}
 		});
 		return newContainer;
@@ -309,7 +320,7 @@ public abstract class MultiPageEditorPart extends EditorPart implements IPageCha
 	/**
 	 * Creates a tab item at the given index and places the given control in the
 	 * new item. The item is a CTabItem with no style bits set.
-	 *
+	 * 
 	 * @param index
 	 *            the index at which to add the control
 	 * @param control
@@ -336,12 +347,11 @@ public abstract class MultiPageEditorPart extends EditorPart implements IPageCha
 	 * multi-page editor by calling <code>createContainer</code>, then
 	 * <code>createPages</code>. Subclasses should implement
 	 * <code>createPages</code> rather than overriding this method.
-	 *
+	 * 
 	 * @param parent
 	 *            The parent in which the editor should be created; must not be
 	 *            <code>null</code>.
 	 */
-	@Override
 	public final void createPartControl(Composite parent) {
 		Composite pageContainer = createPageContainer(parent);
 		this.container = createContainer(pageContainer);
@@ -367,27 +377,24 @@ public abstract class MultiPageEditorPart extends EditorPart implements IPageCha
 	 * Initialize the MultiPageEditorPart to use the page switching command.
 	 * Clients can override this method with an empty body if they wish to
 	 * opt-out.
-	 *
+	 * 
 	 * @since 3.4
 	 */
 	protected void initializePageSwitching() {
 		new PageSwitcher(this) {
-			@Override
 			public Object[] getPages() {
 				int pageCount = getPageCount();
 				Object[] result = new Object[pageCount];
 				for (int i = 0; i < pageCount; i++) {
-					result[i] = Integer.valueOf(i);
+					result[i] = new Integer(i);
 				}
 				return result;
 			}
 
-			@Override
 			public String getName(Object page) {
 				return getPageText(((Integer) page).intValue());
 			}
 
-			@Override
 			public ImageDescriptor getImageDescriptor(Object page) {
 				Image image = getPageImage(((Integer) page).intValue());
 				if (image == null)
@@ -396,12 +403,10 @@ public abstract class MultiPageEditorPart extends EditorPart implements IPageCha
 				return ImageDescriptor.createFromImage(image);
 			}
 
-			@Override
 			public void activatePage(Object page) {
 				setActivePage(((Integer) page).intValue());
 			}
 
-			@Override
 			public int getCurrentPageIndex() {
 				return getActivePage();
 			}
@@ -410,23 +415,22 @@ public abstract class MultiPageEditorPart extends EditorPart implements IPageCha
 
 	/**
 	 * Initialize the MultiPageEditorPart to use the sub-tab switching commands.
-	 *
+	 * 
 	 * @since 3.5
 	 */
 	private void initializeSubTabSwitching() {
-		IHandlerService service = getSite().getService(IHandlerService.class);
+		IHandlerService service = (IHandlerService) getSite().getService(IHandlerService.class);
 		service.activateHandler(COMMAND_NEXT_SUB_TAB, new AbstractHandler() {
 			/**
 			 * {@inheritDoc}
 			 * @throws ExecutionException
 			 *             if an exception occurred during execution
 			 */
-			@Override
 			public Object execute(ExecutionEvent event) throws ExecutionException {
 				int n= getPageCount();
 				if (n == 0)
 					return null;
-
+				
 				int i= getActivePage() + 1;
 				if (i >= n)
 					i= 0;
@@ -434,19 +438,18 @@ public abstract class MultiPageEditorPart extends EditorPart implements IPageCha
 				return null;
 			}
 		});
-
+		
 		service.activateHandler(COMMAND_PREVIOUS_SUB_TAB, new AbstractHandler() {
 			/**
 			 * {@inheritDoc}
 			 * @throws ExecutionException
 			 *             if an exception occurred during execution
 			 */
-			@Override
 			public Object execute(ExecutionEvent event) throws ExecutionException {
 				int n= getPageCount();
 				if (n == 0)
 					return null;
-
+				
 				int i= getActivePage() - 1;
 				if (i < 0)
 					i= n - 1;
@@ -455,20 +458,20 @@ public abstract class MultiPageEditorPart extends EditorPart implements IPageCha
 			}
 		});
 	}
-
+	
 	/**
 	 * Creates the parent control for the container returned by
 	 * {@link #getContainer() }.
-	 *
+	 * 
 	 * <p>
 	 * Subclasses may extend and must call super implementation first.
 	 * </p>
-	 *
+	 * 
 	 * @param parent
 	 *            the parent for all of the editors contents.
 	 * @return the parent for this editor's container. Must not be
 	 *         <code>null</code>.
-	 *
+	 * 
 	 * @since 3.2
 	 */
 	protected Composite createPageContainer(Composite parent) {
@@ -480,7 +483,7 @@ public abstract class MultiPageEditorPart extends EditorPart implements IPageCha
 	 * <code>MultiPageEditorPart</code> implementation of this method creates
 	 * an instance of <code>MultiPageEditorSite</code>. Subclasses may
 	 * reimplement to create more specialized sites.
-	 *
+	 * 
 	 * @param editor
 	 *            the nested editor
 	 * @return the editor site
@@ -494,7 +497,6 @@ public abstract class MultiPageEditorPart extends EditorPart implements IPageCha
 	 * <code>IWorkbenchPart</code> method disposes all nested editors.
 	 * Subclasses may extend.
 	 */
-	@Override
 	public void dispose() {
 		deactivateSite(true, false);
 
@@ -523,7 +525,7 @@ public abstract class MultiPageEditorPart extends EditorPart implements IPageCha
 	 * <p>
 	 * Subclasses should not override this method
 	 * </p>
-	 *
+	 * 
 	 * @nooverride
 	 * @return the active nested editor, or <code>null</code> if none
 	 */
@@ -541,9 +543,9 @@ public abstract class MultiPageEditorPart extends EditorPart implements IPageCha
 	 * <p>
 	 * Subclasses should not override this method
 	 * </p>
-	 *
+	 * 
 	 * @nooverride
-	 *
+	 * 
 	 * @return the index of the active page, or -1 if there is no active page
 	 * @since 3.5
 	 */
@@ -569,7 +571,7 @@ public abstract class MultiPageEditorPart extends EditorPart implements IPageCha
 	 * <p>
 	 * Subclasses should not override this method
 	 * </p>
-	 *
+	 * 
 	 * @return the composite, or <code>null</code> if
 	 *         <code>createPartControl</code> has not been called yet
 	 */
@@ -583,7 +585,7 @@ public abstract class MultiPageEditorPart extends EditorPart implements IPageCha
 	 * <p>
 	 * Subclasses should not override this method
 	 * </p>
-	 *
+	 * 
 	 * @param pageIndex
 	 *            the index of the page
 	 * @return the control for the specified page, or <code>null</code> if
@@ -596,7 +598,7 @@ public abstract class MultiPageEditorPart extends EditorPart implements IPageCha
 	/**
 	 * Returns the editor for the given page index. The page index must be
 	 * valid.
-	 *
+	 * 
 	 * @param pageIndex
 	 *            the index of the page
 	 * @return the editor for the specified page, or <code>null</code> if the
@@ -613,7 +615,7 @@ public abstract class MultiPageEditorPart extends EditorPart implements IPageCha
 		}
 		return null;
 	}
-
+	
 	/**
 	 * Returns the service locator for the given page index. This method can be
 	 * used to create service locators for pages that are just controls. The
@@ -622,7 +624,7 @@ public abstract class MultiPageEditorPart extends EditorPart implements IPageCha
 	 * This will return the editor site service locator for an editor, and
 	 * create one for a page that is just a control.
 	 * </p>
-	 *
+	 * 
 	 * @param pageIndex
 	 *            the index of the page
 	 * @return the editor for the specified page, or <code>null</code> if the
@@ -634,7 +636,7 @@ public abstract class MultiPageEditorPart extends EditorPart implements IPageCha
 		if (pageIndex == PAGE_CONTAINER_SITE) {
 			return getPageContainerSite();
 		}
-
+		
 		Item item = getItem(pageIndex);
 		if (item != null) {
 			Object data = item.getData();
@@ -643,9 +645,13 @@ public abstract class MultiPageEditorPart extends EditorPart implements IPageCha
 			} else if (data instanceof IServiceLocator) {
 				return (IServiceLocator) data;
 			} else if (data == null) {
-				IServiceLocatorCreator slc = getSite()
+				IServiceLocatorCreator slc = (IServiceLocatorCreator) getSite()
 						.getService(IServiceLocatorCreator.class);
-				IServiceLocator sl = slc.createServiceLocator(getSite(), null, () -> close());
+				IServiceLocator sl = slc.createServiceLocator(getSite(), null, new IDisposable(){
+					public void dispose() {
+						close();
+					}
+				});
 				item.setData(sl);
 				pageSites.add(sl);
 				return sl;
@@ -673,9 +679,13 @@ public abstract class MultiPageEditorPart extends EditorPart implements IPageCha
 	 */
 	private IServiceLocator getPageContainerSite() {
 		if (pageContainerSite == null) {
-			IServiceLocatorCreator slc = getSite()
+			IServiceLocatorCreator slc = (IServiceLocatorCreator) getSite()
 					.getService(IServiceLocatorCreator.class);
-			pageContainerSite = slc.createServiceLocator(getSite(), null, () -> close());
+			pageContainerSite = slc.createServiceLocator(getSite(), null, new IDisposable(){
+				public void dispose() {
+					close();
+				}
+			});
 		}
 		return pageContainerSite;
 	}
@@ -683,7 +693,7 @@ public abstract class MultiPageEditorPart extends EditorPart implements IPageCha
 	/**
 	 * Returns the tab item for the given page index (page index is 0-based).
 	 * The page index must be valid.
-	 *
+	 * 
 	 * @param pageIndex
 	 *            the index of the page
 	 * @return the tab item for the given page index
@@ -694,7 +704,7 @@ public abstract class MultiPageEditorPart extends EditorPart implements IPageCha
 
 	/**
 	 * Returns the number of pages in this multi-page editor.
-	 *
+	 * 
 	 * @return the number of pages
 	 */
 	protected int getPageCount() {
@@ -709,7 +719,7 @@ public abstract class MultiPageEditorPart extends EditorPart implements IPageCha
 	/**
 	 * Returns the image for the page with the given index, or <code>null</code>
 	 * if no image has been set for the page. The page index must be valid.
-	 *
+	 * 
 	 * @param pageIndex
 	 *            the index of the page
 	 * @return the image, or <code>null</code> if none
@@ -722,7 +732,7 @@ public abstract class MultiPageEditorPart extends EditorPart implements IPageCha
 	 * Returns the text label for the page with the given index. Returns the
 	 * empty string if no text label has been set for the page. The page index
 	 * must be valid.
-	 *
+	 * 
 	 * @param pageIndex
 	 *            the index of the page
 	 * @return the text label for the page
@@ -733,7 +743,7 @@ public abstract class MultiPageEditorPart extends EditorPart implements IPageCha
 
 	/**
 	 * Returns the tab folder containing this multi-page editor's pages.
-	 *
+	 * 
 	 * @return the tab folder, or <code>null</code> if
 	 *         <code>createPartControl</code> has not been called yet
 	 */
@@ -753,7 +763,7 @@ public abstract class MultiPageEditorPart extends EditorPart implements IPageCha
 	 * <p>
 	 * Subclasses may extend or reimplement this method.
 	 * </p>
-	 *
+	 * 
 	 * @param propertyId
 	 *            the id of the property that changed
 	 */
@@ -767,7 +777,7 @@ public abstract class MultiPageEditorPart extends EditorPart implements IPageCha
 	 * input to the given input, and the site's selection provider to a
 	 * <code>MultiPageSelectionProvider</code>. Subclasses may extend this
 	 * method.
-	 *
+	 * 
 	 * @param site
 	 *            The site for which this part is being created; must not be
 	 *            <code>null</code>.
@@ -777,7 +787,6 @@ public abstract class MultiPageEditorPart extends EditorPart implements IPageCha
 	 * @throws PartInitException
 	 *             If the initialization of the part fails -- currently never.
 	 */
-	@Override
 	public void init(IEditorSite site, IEditorInput input)
 			throws PartInitException {
 		setSite(site);
@@ -793,11 +802,10 @@ public abstract class MultiPageEditorPart extends EditorPart implements IPageCha
 	 * <p>
 	 * Subclasses may extend or reimplement this method.
 	 * </p>
-	 *
+	 * 
 	 * @return <code>true</code> if any of the nested editors are dirty;
 	 *         <code>false</code> otherwise.
 	 */
-	@Override
 	public boolean isDirty() {
 		// use nestedEditors to avoid SWT requests; see bug 12996
 		for (Iterator i = nestedEditors.iterator(); i.hasNext();) {
@@ -823,14 +831,14 @@ public abstract class MultiPageEditorPart extends EditorPart implements IPageCha
 	 * <p>
 	 * Subclasses may extend this method.
 	 * </p>
-	 *
+	 * 
 	 * @param newPageIndex
 	 *            the index of the activated page
 	 */
 	protected void pageChange(int newPageIndex) {
 		deactivateSite(false, false);
 
-		IPartService partService = getSite().getService(
+		IPartService partService = (IPartService) getSite().getService(
 				IPartService.class);
 		if (partService.getActivePart() == this) {
 			setFocus();
@@ -876,7 +884,7 @@ public abstract class MultiPageEditorPart extends EditorPart implements IPageCha
 			firePageChanged(new PageChangedEvent(this, selectedPage));
 		}
 	}
-
+	
 	/**
 	 * This method can be used by implementors of
 	 * {@link MultiPageEditorPart#createPageContainer(Composite)} to deactivate
@@ -891,7 +899,7 @@ public abstract class MultiPageEditorPart extends EditorPart implements IPageCha
 	 * <b>Note:</b> This API is evolving in 3.4 and this might not be its final
 	 * form.
 	 * </p>
-	 *
+	 * 
 	 * @param immediate
 	 *            immediately deactivate the legacy keybinding service
 	 * @param containerSiteActive
@@ -922,7 +930,7 @@ public abstract class MultiPageEditorPart extends EditorPart implements IPageCha
 						.log("MultiPageEditorPart.deactivateSite()   Parent key binding service was not an instance of INestableKeyBindingService.  It was an instance of " + service.getClass().getName() + " instead."); //$NON-NLS-1$ //$NON-NLS-2$
 			}
 		}
-
+		
 		if (containerSiteActive) {
 			IServiceLocator containerSite = getPageContainerSite();
 			if (containerSite instanceof INestable) {
@@ -931,7 +939,7 @@ public abstract class MultiPageEditorPart extends EditorPart implements IPageCha
 			}
 		}
 	}
-
+	
 	/**
 	 * This method can be used by implementors of
 	 * {@link #createPageContainer(Composite)} to activate the active inner
@@ -944,7 +952,7 @@ public abstract class MultiPageEditorPart extends EditorPart implements IPageCha
 	 * <b>Note:</b> This API is evolving in 3.4 and this might not be its final
 	 * form.
 	 * </p>
-	 *
+	 * 
 	 * @since 3.4
 	 * @see #deactivateSite(boolean,boolean)
 	 * @see #createPageContainer(Composite)
@@ -999,13 +1007,12 @@ public abstract class MultiPageEditorPart extends EditorPart implements IPageCha
 
 	/**
 	 * Disposes the given part and its site.
-	 *
+	 * 
 	 * @param part
 	 *            The part to dispose; must not be <code>null</code>.
 	 */
 	private void disposePart(final IWorkbenchPart part) {
 		SafeRunner.run(new ISafeRunnable() {
-			@Override
 			public void run() {
 				IWorkbenchPartSite partSite = part.getSite();
 				part.dispose();
@@ -1014,7 +1021,6 @@ public abstract class MultiPageEditorPart extends EditorPart implements IPageCha
 				}
 			}
 
-			@Override
 			public void handleException(Throwable e) {
 				// Exception has already being logged by Core. Do nothing.
 			}
@@ -1025,7 +1031,7 @@ public abstract class MultiPageEditorPart extends EditorPart implements IPageCha
 	 * Removes the page with the given index from this multi-page editor. The
 	 * controls for the page are disposed of; if the page has an editor, it is
 	 * disposed of too. The page index must be valid.
-	 *
+	 * 
 	 * @param pageIndex
 	 *            the index of the page
 	 * @see MultiPageEditorPart#addPage(Control)
@@ -1067,7 +1073,7 @@ public abstract class MultiPageEditorPart extends EditorPart implements IPageCha
 
 	/**
 	 * Sets the currently active page.
-	 *
+	 * 
 	 * @param pageIndex
 	 *            the index of the page to be activated; the index must be valid
 	 */
@@ -1079,7 +1085,7 @@ public abstract class MultiPageEditorPart extends EditorPart implements IPageCha
 
 	/**
 	 * Sets the control for the given page index. The page index must be valid.
-	 *
+	 * 
 	 * @param pageIndex
 	 *            the index of the page
 	 * @param control
@@ -1098,7 +1104,6 @@ public abstract class MultiPageEditorPart extends EditorPart implements IPageCha
 	 * Subclasses may extend or reimplement.
 	 * </p>
 	 */
-	@Override
 	public void setFocus() {
 		setFocus(getActivePage());
 	}
@@ -1107,7 +1112,7 @@ public abstract class MultiPageEditorPart extends EditorPart implements IPageCha
 	 * Sets focus to the control for the given page. If the page has an editor,
 	 * this calls its <code>setFocus()</code> method. Otherwise, this calls
 	 * <code>setFocus</code> on the control for the page.
-	 *
+	 * 
 	 * @param pageIndex
 	 *            the index of the page
 	 */
@@ -1132,7 +1137,7 @@ public abstract class MultiPageEditorPart extends EditorPart implements IPageCha
 	/**
 	 * Sets the image for the page with the given index, or <code>null</code>
 	 * to clear the image for the page. The page index must be valid.
-	 *
+	 * 
 	 * @param pageIndex
 	 *            the index of the page
 	 * @param image
@@ -1145,7 +1150,7 @@ public abstract class MultiPageEditorPart extends EditorPart implements IPageCha
 	/**
 	 * Sets the text label for the page with the given index. The page index
 	 * must be valid. The text label must not be null.
-	 *
+	 * 
 	 * @param pageIndex
 	 *            the index of the page
 	 * @param text
@@ -1159,24 +1164,23 @@ public abstract class MultiPageEditorPart extends EditorPart implements IPageCha
 	 * If there is an adapter registered against the subclass of
 	 * MultiPageEditorPart return that. Otherwise, delegate to the internal
 	 * editor.
-	 *
+	 * 
 	 * @see org.eclipse.ui.part.WorkbenchPart#getAdapter(java.lang.Class)
 	 */
-	@Override
-	public <T> T getAdapter(Class<T> adapter) {
-		T result = super.getAdapter(adapter);
+	public Object getAdapter(Class adapter) {
+		Object result = super.getAdapter(adapter);
 		// restrict delegating to the UI thread for bug 144851
 		if (result == null && Display.getCurrent()!=null) {
 			IEditorPart innerEditor = getActiveEditor();
 			// see bug 138823 - prevent some subclasses from causing
 			// an infinite loop
 			if (innerEditor != null && innerEditor != this) {
-				result = Adapters.adapt(innerEditor, adapter);
+				result = Util.getAdapter(innerEditor, adapter);
 			}
 		}
 		return result;
 	}
-
+	
 	/**
 	 * Find the editors contained in this multi-page editor
 	 * whose editor input match the provided input.
@@ -1190,7 +1194,7 @@ public abstract class MultiPageEditorPart extends EditorPart implements IPageCha
 		int count = getPageCount();
 		for (int i = 0; i < count; i++) {
 			IEditorPart editor = getEditor(i);
-			if (editor != null
+			if (editor != null 
 					&& editor.getEditorInput() != null
 					&& editor.getEditorInput().equals(input)) {
 				result.add(editor);
@@ -1198,7 +1202,7 @@ public abstract class MultiPageEditorPart extends EditorPart implements IPageCha
 		}
 		return (IEditorPart[]) result.toArray(new IEditorPart[result.size()]);
 	}
-
+	
 	/**
 	 * Set the active page of this multi-page editor to the
 	 * page that contains the given editor part. This method has
@@ -1225,13 +1229,12 @@ public abstract class MultiPageEditorPart extends EditorPart implements IPageCha
 	 * <b>Note:</b> clients may override this method to return a page
 	 * appropriate for their editors. Maybe be <code>null</code>.
 	 * </p>
-	 *
+	 * 
 	 * @return The IEditorPart or Control representing the current active page,
 	 *         or <code>null</code> if there are no active pages.
 	 * @since 3.5
 	 * @see #getActivePage()
 	 */
-	@Override
 	public Object getSelectedPage() {
 		int index = getActivePage();
 		if (index == -1) {
@@ -1243,7 +1246,7 @@ public abstract class MultiPageEditorPart extends EditorPart implements IPageCha
 		}
 		return getControl(index);
 	}
-
+	
 	/**
 	 * Add the page change listener to be notified when the page changes. The
 	 * newly selected page will be the Object returned from
@@ -1252,12 +1255,11 @@ public abstract class MultiPageEditorPart extends EditorPart implements IPageCha
 	 * <p>
 	 * This method has no effect if the listener has already been added.
 	 * </p>
-	 *
+	 * 
 	 * @nooverride
-	 *
+	 * 
 	 * @since 3.5
 	 */
-	@Override
 	public void addPageChangedListener(IPageChangedListener listener) {
 		pageChangeListeners.add(listener);
 	}
@@ -1267,20 +1269,20 @@ public abstract class MultiPageEditorPart extends EditorPart implements IPageCha
 	 * <p>
 	 * This method has no effect if the listener is not in the list.
 	 * </p>
-	 *
+	 * 
 	 * @nooverride
-	 *
+	 * 
 	 * @since 3.5
 	 */
-	@Override
 	public void removePageChangedListener(IPageChangedListener listener) {
 		pageChangeListeners.remove(listener);
 	}
 
 	private void firePageChanged(final PageChangedEvent event) {
-		for (final IPageChangedListener l : pageChangeListeners) {
+		Object[] listeners = pageChangeListeners.getListeners();
+		for (int i = 0; i < listeners.length; ++i) {
+			final IPageChangedListener l = (IPageChangedListener) listeners[i];
 			SafeRunnable.run(new SafeRunnable() {
-				@Override
 				public void run() {
 					l.pageChanged(event);
 				}
