@@ -11,11 +11,11 @@
 
 package org.eclipse.core.tests.internal.databinding.conversion;
 
+import junit.framework.TestCase;
+
 import org.eclipse.core.internal.databinding.conversion.StringToByteConverter;
 
 import com.ibm.icu.text.NumberFormat;
-
-import junit.framework.TestCase;
 
 /**
  * @since 1.1
@@ -23,8 +23,12 @@ import junit.framework.TestCase;
 public class StringToByteConverterTest extends TestCase {
 	private NumberFormat numberFormat;
 	private StringToByteConverter converter;
-
-	@Override
+	
+	/*
+	 * (non-Javadoc)
+	 * 
+	 * @see junit.framework.TestCase#setUp()
+	 */
 	protected void setUp() throws Exception {
 		super.setUp();
 		numberFormat = NumberFormat.getIntegerInstance();
@@ -32,15 +36,15 @@ public class StringToByteConverterTest extends TestCase {
 	}
 
 	public void testConvertsToByte() throws Exception {
-		Byte value = Byte.valueOf((byte) 1);
+		Byte value = new Byte((byte) 1);
 		Byte result = (Byte) converter.convert(numberFormat.format(value));
-
+		
 		assertEquals(value, result);
 	}
 
 	public void testConvertsToBytePrimitive() throws Exception {
 		converter = StringToByteConverter.toByte(numberFormat, true);
-		Byte value = Byte.valueOf((byte) 1);
+		Byte value = new Byte((byte) 1);
 		Byte result = (Byte) converter.convert(numberFormat.format(value));
 		assertEquals(value, result);
 	}
@@ -52,12 +56,12 @@ public class StringToByteConverterTest extends TestCase {
 	public void testToTypeIsShort() throws Exception {
 		assertEquals(Byte.class, converter.getToType());
 	}
-
+	
 	public void testToTypeIsBytePrimitive() throws Exception {
 		converter = StringToByteConverter.toByte(true);
 		assertEquals(Byte.TYPE, converter.getToType());
 	}
-
+	
 	public void testReturnsNullBoxedTypeForEmptyString() throws Exception {
 		assertNull(converter.convert(""));
 	}
@@ -65,7 +69,7 @@ public class StringToByteConverterTest extends TestCase {
 	public void testThrowsIllegalArgumentExceptionIfAskedToConvertNonString()
 			throws Exception {
 		try {
-			converter.convert(Integer.valueOf(1));
+			converter.convert(new Integer(1));
 			fail("exception should have been thrown");
 		} catch (IllegalArgumentException e) {
 		}
