@@ -21,7 +21,7 @@ import org.eclipse.core.databinding.observable.value.IObservableValue;
 import org.eclipse.jface.databinding.conformance.ObservableDelegateTest;
 import org.eclipse.jface.databinding.conformance.delegate.AbstractObservableValueContractDelegate;
 import org.eclipse.jface.databinding.conformance.swt.SWTMutableObservableValueContractTest;
-import org.eclipse.jface.databinding.swt.DisplayRealm;
+import org.eclipse.jface.databinding.swt.SWTObservables;
 import org.eclipse.jface.databinding.swt.WidgetProperties;
 import org.eclipse.swt.SWT;
 import org.eclipse.swt.widgets.Display;
@@ -46,7 +46,6 @@ public class ScaleObservableValueMinTest extends ObservableDelegateTest {
 		super(testName, new Delegate());
 	}
 
-	@Override
 	protected void setUp() throws Exception {
 		super.setUp();
 
@@ -55,21 +54,20 @@ public class ScaleObservableValueMinTest extends ObservableDelegateTest {
 		scale = delegate.scale;
 	}
 
-	@Override
 	protected IObservable doCreateObservable() {
 		return getObservableContractDelegate().createObservable(
-				DisplayRealm.getRealm(Display.getDefault()));
+				SWTObservables.getRealm(Display.getDefault()));
 	}
 
 	public void testGetValue() throws Exception {
 		int min = 100;
 		scale.setMinimum(min);
-		assertEquals(Integer.valueOf(min), observable.getValue());
+		assertEquals(new Integer(min), observable.getValue());
 	}
 
 	public void testSetValue() throws Exception {
 		int min = 100;
-		observable.setValue(Integer.valueOf(min));
+		observable.setValue(new Integer(min));
 		assertEquals(min, scale.getMinimum());
 	}
 
@@ -88,41 +86,35 @@ public class ScaleObservableValueMinTest extends ObservableDelegateTest {
 
 		Scale scale;
 
-		@Override
 		public void setUp() {
 			shell = new Shell();
 			scale = new Scale(shell, SWT.NONE);
 			scale.setMaximum(1000);
 		}
 
-		@Override
 		public void tearDown() {
 			shell.dispose();
 		}
 
-		@Override
 		public IObservableValue createObservableValue(Realm realm) {
 			return WidgetProperties.minimum().observe(realm, scale);
 		}
 
-		@Override
 		public void change(IObservable observable) {
 			IObservableValue observableValue = (IObservableValue) observable;
 			observableValue.setValue(createValue(observableValue));
 		}
 
-		@Override
 		public Object getValueType(IObservableValue observable) {
 			return Integer.TYPE;
 		}
 
-		@Override
 		public Object createValue(IObservableValue observable) {
 			return createIntegerValue(observable);
 		}
 
 		private Integer createIntegerValue(IObservableValue observable) {
-			return Integer.valueOf(((Integer) observable.getValue()).intValue() + 1);
+			return new Integer(((Integer) observable.getValue()).intValue() + 1);
 		}
 	}
 }
