@@ -22,7 +22,7 @@ import org.eclipse.core.runtime.Assert;
 import org.eclipse.jface.databinding.conformance.ObservableDelegateTest;
 import org.eclipse.jface.databinding.conformance.delegate.AbstractObservableValueContractDelegate;
 import org.eclipse.jface.databinding.conformance.swt.SWTMutableObservableValueContractTest;
-import org.eclipse.jface.databinding.swt.DisplayRealm;
+import org.eclipse.jface.databinding.swt.SWTObservables;
 import org.eclipse.jface.databinding.swt.WidgetProperties;
 import org.eclipse.swt.SWT;
 import org.eclipse.swt.widgets.Display;
@@ -47,7 +47,6 @@ public class TableSingleSelectionObservableValueTest extends
 		super(testName, new Delegate());
 	}
 
-	@Override
 	protected void setUp() throws Exception {
 		super.setUp();
 
@@ -56,10 +55,9 @@ public class TableSingleSelectionObservableValueTest extends
 		table = delegate.table;
 	}
 
-	@Override
 	protected IObservable doCreateObservable() {
 		Delegate delegate = (Delegate) getObservableContractDelegate();
-		return delegate.createObservableValue(DisplayRealm.getRealm(Display
+		return delegate.createObservableValue(SWTObservables.getRealm(Display
 				.getDefault()));
 	}
 
@@ -68,7 +66,7 @@ public class TableSingleSelectionObservableValueTest extends
 		assertEquals(-1, table.getSelectionIndex());
 		assertEquals(-1, ((Integer) observable.getValue()).intValue());
 
-		Integer value = Integer.valueOf(0);
+		Integer value = new Integer(0);
 		observable.setValue(value);
 		assertEquals("table selection index", value.intValue(), table
 				.getSelectionIndex());
@@ -80,7 +78,7 @@ public class TableSingleSelectionObservableValueTest extends
 		table.setSelection(value);
 
 		assertEquals("table selection index", value, table.getSelectionIndex());
-		assertEquals("observable value", Integer.valueOf(value), observable
+		assertEquals("observable value", new Integer(value), observable
 				.getValue());
 	}
 
@@ -99,7 +97,6 @@ public class TableSingleSelectionObservableValueTest extends
 
 		Table table;
 
-		@Override
 		public void setUp() {
 			shell = new Shell();
 			table = new Table(shell, SWT.NONE);
@@ -107,23 +104,19 @@ public class TableSingleSelectionObservableValueTest extends
 			new TableItem(table, SWT.NONE).setText("1");
 		}
 
-		@Override
 		public void tearDown() {
 			shell.dispose();
 		}
 
-		@Override
 		public IObservableValue createObservableValue(Realm realm) {
 			return WidgetProperties.singleSelectionIndex()
 					.observe(realm, table);
 		}
 
-		@Override
 		public Object getValueType(IObservableValue observable) {
 			return Integer.TYPE;
 		}
 
-		@Override
 		public void change(IObservable observable) {
 			int index = createIntegerValue((IObservableValue) observable)
 					.intValue();
@@ -132,7 +125,6 @@ public class TableSingleSelectionObservableValueTest extends
 			table.notifyListeners(SWT.Selection, null);
 		}
 
-		@Override
 		public Object createValue(IObservableValue observable) {
 			return createIntegerValue(observable);
 		}
@@ -142,9 +134,9 @@ public class TableSingleSelectionObservableValueTest extends
 			switch (value) {
 			case -1:
 			case 1:
-				return Integer.valueOf(0);
+				return new Integer(0);
 			case 0:
-				return Integer.valueOf(1);
+				return new Integer(1);
 			}
 
 			Assert.isTrue(false);
