@@ -1,5 +1,5 @@
 /*******************************************************************************
- * Copyright (c) 2005, 2017 IBM Corporation and others.
+ * Copyright (c) 2005, 2006 IBM Corporation and others.
  * All rights reserved. This program and the accompanying materials
  * are made available under the terms of the Eclipse Public License v1.0
  * which accompanies this distribution, and is available at
@@ -8,7 +8,6 @@
  * Contributors:
  *     IBM Corporation - initial API and implementation
  *     Brad Reynolds (bug 146435)
- *     Jeanderson Candido <http://jeandersonbc.github.io> - Bug 444070
  *******************************************************************************/
 package org.eclipse.ui.tests.harness.util;
 
@@ -16,13 +15,14 @@ import java.lang.reflect.InvocationHandler;
 import java.lang.reflect.Method;
 import java.lang.reflect.Proxy;
 import java.util.ArrayList;
+import java.util.Iterator;
 import java.util.List;
 
 import junit.framework.AssertionFailedError;
 
 /**
  * Utility class for creating mock objects for public interfaces.
- *
+ * 
  * @since 3.3
  *
  */
@@ -32,9 +32,17 @@ public class Mocks {
 		public boolean equals(Object o1, Object o2);
 	}
 
-	private static EqualityComparator defaultEqualityComparator = (o1, o2) -> o1 == null ? o2 == null : o1.equals(o2);
+	private static EqualityComparator defaultEqualityComparator = new EqualityComparator() {
+		public boolean equals(Object o1, Object o2) {
+			return o1 == null ? o2 == null : o1.equals(o2);
+		}
+	};
 
-	private static EqualityComparator indifferentEqualityComparator = (o1, o2) -> true;
+	private static EqualityComparator indifferentEqualityComparator = new EqualityComparator() {
+		public boolean equals(Object o1, Object o2) {
+			return true;
+		}
+	};
 
 	private static interface Mock {
 		public MockInvocationHandler getMockInvocationHandler();
@@ -70,7 +78,6 @@ public class Mocks {
 				this.args = args;
 			}
 
-			@Override
 			public boolean equals(Object obj) {
 				if (!(obj instanceof MethodCall)) {
 					return false;
@@ -99,16 +106,15 @@ public class Mocks {
 			public Object getReturnValue() {
 				return returnValue;
 			}
-
-			@Override
+			
 			public String toString() {
 				return method.toString();
 			}
 		}
 
-		List<MethodCall> previousCallHistory = null;
+		List previousCallHistory = null;
 
-		List<MethodCall> currentCallHistory = new ArrayList<>();
+		List currentCallHistory = new ArrayList();
 
 		private final boolean ordered;
 
@@ -120,14 +126,13 @@ public class Mocks {
 			this.equalityComparator = equalityComparator;
 		}
 
-		@Override
 		public Object invoke(Object proxy, Method method, Object[] args)
 				throws Throwable {
 			if (getMockInvocationHandlerMethod.equals(method)) {
 				return this;
 			}
 			if (equalsMethod.equals(method)) {
-				return Boolean.valueOf(proxy == args[0]);
+				return new Boolean(proxy == args[0]);
 			}
 			MethodCall methodCall = new MethodCall(method, args);
 			if (previousCallHistory != null) {
@@ -135,8 +140,8 @@ public class Mocks {
 				int indexOfMethodCall = previousCallHistory.indexOf(methodCall);
 				if (indexOfMethodCall != -1) {
 					// copy return value over to this method call
-					methodCall.setReturnValue(previousCallHistory
-							.get(indexOfMethodCall).getReturnValue());
+					methodCall.setReturnValue(((MethodCall) previousCallHistory
+							.get(indexOfMethodCall)).getReturnValue());
 				} else {
 					throw new AssertionFailedError("unexpected method call: "
 							+ method.getName());
@@ -146,7 +151,7 @@ public class Mocks {
 						throw new AssertionFailedError("extra method call: "
 								+ method.getName());
 					}
-					MethodCall previousCall = previousCallHistory
+					MethodCall previousCall = (MethodCall) previousCallHistory
 							.get(currentCallHistory.size());
 					if (!methodCall.equals(previousCall)) {
 						throw new AssertionFailedError(
@@ -157,7 +162,7 @@ public class Mocks {
 				}
 			}
 			currentCallHistory.add(methodCall);
-			Class<?> returnType = method.getReturnType();
+			Class returnType = method.getReturnType();
 			if (returnType.isPrimitive() && void.class != returnType) {
 				Object result = null;
 				Object returnValue = methodCall.getReturnValue();
@@ -167,25 +172,25 @@ public class Mocks {
 							: Boolean.FALSE;
 				} else if (returnType == byte.class) {
 					result = (returnValue != null) ? (Byte) returnValue
-							: Byte.valueOf((byte) 0);
+							: new Byte((byte) 0);
 				} else if (returnType == char.class) {
 					result = (returnValue != null) ? (Character) returnValue
-							: Character.valueOf((char) 0);
+							: new Character((char) 0);
 				} else if (returnType == short.class) {
 					result = (returnValue != null) ? (Short) returnValue
-							: Short.valueOf((short) 0);
+							: new Short((short) 0);
 				} else if (returnType == int.class) {
 					result = (returnValue != null) ? (Integer) returnValue
-							: Integer.valueOf(0);
+							: new Integer(0);
 				} else if (returnType == long.class) {
 					result = (returnValue != null) ? (Long) returnValue
-							: Long.valueOf(0);
+							: new Long(0);
 				} else if (returnType == float.class) {
 					result = (returnValue != null) ? (Float) returnValue
-							: Float.valueOf(0);
+							: new Float(0);
 				} else if (returnType == double.class) {
 					result = (returnValue != null) ? (Double) returnValue
-							: Double.valueOf(0);
+							: new Double(0);
 				}
 
 				return result;
@@ -195,7 +200,7 @@ public class Mocks {
 
 		public void replay() {
 			previousCallHistory = currentCallHistory;
-			currentCallHistory = new ArrayList<>();
+			currentCallHistory = new ArrayList();
 		}
 
 		public void verify() {
@@ -222,7 +227,8 @@ public class Mocks {
 					}
 				}
 			} else {
-				for (MethodCall methodCall : previousCallHistory) {
+				for (Iterator it = previousCallHistory.iterator(); it.hasNext();) {
+					MethodCall methodCall = (MethodCall) it.next();
 					if (!currentCallHistory.contains(methodCall)) {
 						throw new AssertionFailedError("missing method call:"
 								+ methodCall.method.getName());
@@ -234,11 +240,11 @@ public class Mocks {
 
 		public void reset() {
 			previousCallHistory = null;
-			currentCallHistory = new ArrayList<>();
+			currentCallHistory = new ArrayList();
 		}
 
 		public void setLastReturnValue(Object object) {
-			MethodCall methodCall = currentCallHistory
+			MethodCall methodCall = (MethodCall) currentCallHistory
 					.get(currentCallHistory.size() - 1);
 			methodCall.setReturnValue(object);
 		}
@@ -247,51 +253,51 @@ public class Mocks {
 	/**
 	 * Creates a mock object that neither looks at the order of method calls nor
 	 * at the arguments.
-	 *
+	 * 
 	 * @param interfaceType
 	 * @return a mock object that checks for the order of method invocations but
 	 *         not for equality of method arguments
 	 */
-	public static <T> Object createRelaxedMock(Class<T> interfaceType) {
+	public static Object createRelaxedMock(Class interfaceType) {
 		return createMock(interfaceType, false, indifferentEqualityComparator);
 	}
 
 	/**
 	 * Creates a mock object that does not look at the arguments, but checks
 	 * that the order of calls is as expected.
-	 *
+	 * 
 	 * @param interfaceType
 	 * @return a mock object that checks for the order of method invocations but
 	 *         not for equality of method arguments
 	 */
-	public static <T> Object createOrderedMock(Class<T> interfaceType) {
+	public static Object createOrderedMock(Class interfaceType) {
 		return createMock(interfaceType, true, indifferentEqualityComparator);
 	}
 
 	/**
 	 * creates a fussy mock object
-	 *
+	 * 
 	 * @param interfaceType
 	 * @return a mock object that checks for the order of method invocations and
 	 *         for equality of method arguments
 	 */
-	public static <T> Object createMock(Class<T> interfaceType) {
+	public static Object createMock(Class interfaceType) {
 		return createMock(interfaceType, true, defaultEqualityComparator);
 	}
 
 	/**
 	 * creates a fussy mock object with a comparator
-	 *
+	 * 
 	 * @param interfaceType
 	 * @return a mock object that checks for the order of method invocations and
 	 *         uses the given comparator to compare method arguments
 	 */
-	public static <T> Object createMock(Class<T> interfaceType,
+	public static Object createMock(Class interfaceType,
 			EqualityComparator equalityComparator) {
 		return createMock(interfaceType, true, equalityComparator);
 	}
 
-	private static <T> Object createMock(Class<T> interfaceType, boolean ordered,
+	private static Object createMock(Class interfaceType, boolean ordered,
 			EqualityComparator equalityComparator) {
 		if (!interfaceType.isInterface()) {
 			throw new IllegalArgumentException();
